--- a/extras/css/themes/dark/oasis_dune_dark.css
+++ b/extras/css/themes/dark/oasis_dune_dark.css
@@ -23,8 +23,38 @@
 	--oasis-fg-muted: #826D5A;
 	--oasis-fg-strong: #EDE8AF;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-accent-50: #D5F7E0;
+	--oasis-palette-accent-100: #BBF1D0;
+	--oasis-palette-accent-200: #A1EBC0;
+	--oasis-palette-accent-300: #87E5B0;
+	--oasis-palette-accent-400: #6DDFA0;
+	--oasis-palette-accent-500: #53D390;
+	--oasis-palette-accent-600: #43CF8C;
+	--oasis-palette-accent-700: #34CB7D;
+	--oasis-palette-accent-800: #2B8A5E;
+	--oasis-palette-accent-900: #1A5338;
+	--oasis-palette-primary-50: #FBF6D8;
+	--oasis-palette-primary-100: #F9F2C5;
+	--oasis-palette-primary-200: #F6EEB2;
+	--oasis-palette-primary-300: #F3EA9F;
+	--oasis-palette-primary-400: #F2E898;
+	--oasis-palette-primary-500: #F0E68C;
+	--oasis-palette-primary-600: #CDC673;
+	--oasis-palette-primary-700: #BDB76B;
+	--oasis-palette-primary-800: #807C37;
+	--oasis-palette-primary-900: #4D4A1B;
+	--oasis-palette-secondary-50: #DEF6E0;
+	--oasis-palette-secondary-100: #D2EED4;
+	--oasis-palette-secondary-200: #C6E6C8;
+	--oasis-palette-secondary-300: #BADEBC;
+	--oasis-palette-secondary-400: #AED6B0;
+	--oasis-palette-secondary-500: #A7D3A9;
+	--oasis-palette-secondary-600: #93C795;
+	--oasis-palette-secondary-700: #7FBB82;
+	--oasis-palette-secondary-800: #5A9C5D;
+	--oasis-palette-secondary-900: #355E37;
 	--oasis-syntax-bracket: #B3BAC7;
 	--oasis-syntax-builtinConst: #B3BAC7;
 	--oasis-syntax-builtinFunc: #FFBA80;
@@ -56,7 +86,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +94,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,22 +104,12 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #53D390;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #F3EA9F;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
 	--oasis-theme-primary: #CDC673;
 	--oasis-theme-secondary: #A7D3A9;
 	--oasis-theme-strong-primary: #BDB76B;
@@ -104,7 +124,7 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #87CEEB;
 	--oasis-ui-float-bg: #3C332C;
 	--oasis-ui-float-border-bg: #3C332C;
