--- a/extras/css/themes/dark/oasis_lagoon_dark.css
+++ b/extras/css/themes/dark/oasis_lagoon_dark.css
@@ -23,8 +23,38 @@
 	--oasis-fg-muted: #3B6A87;
 	--oasis-fg-strong: #D0E2F0;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-accent-50: #FFEBEB;
+	--oasis-palette-accent-100: #FFDCDC;
+	--oasis-palette-accent-200: #FFCECE;
+	--oasis-palette-accent-300: #FFC0C0;
+	--oasis-palette-accent-400: #FFB0B0;
+	--oasis-palette-accent-500: #FFA0A0;
+	--oasis-palette-accent-600: #FF9090;
+	--oasis-palette-accent-700: #FF8080;
+	--oasis-palette-accent-800: #CC5959;
+	--oasis-palette-accent-900: #803333;
+	--oasis-palette-primary-50: #EEF4FF;
+	--oasis-palette-primary-100: #D0E8FE;
+	--oasis-palette-primary-200: #B2DCFE;
+	--oasis-palette-primary-300: #94D0FE;
+	--oasis-palette-primary-400: #76C4FD;
+	--oasis-palette-primary-500: #58B8FD;
+	--oasis-palette-primary-600: #3AACFD;
+	--oasis-palette-primary-700: #1CA0FD;
+	--oasis-palette-primary-800: #1670AD;
+	--oasis-palette-primary-900: #0D4266;
+	--oasis-palette-secondary-50: #FDF0D0;
+	--oasis-palette-secondary-100: #FCE4BD;
+	--oasis-palette-secondary-200: #FBD8AA;
+	--oasis-palette-secondary-300: #FACC97;
+	--oasis-palette-secondary-400: #F9C084;
+	--oasis-palette-secondary-500: #F8B471;
+	--oasis-palette-secondary-600: #F9A05E;
+	--oasis-palette-secondary-700: #F8944D;
+	--oasis-palette-secondary-800: #B3671F;
+	--oasis-palette-secondary-900: #663A14;
 	--oasis-syntax-bracket: #A3ABB8;
 	--oasis-syntax-builtinConst: #A3ABB8;
 	--oasis-syntax-builtinFunc: #FFBA80;
@@ -33,7 +63,7 @@
 	--oasis-syntax-conditional: #3AACFD;
 	--oasis-syntax-constant: #FFA247;
 	--oasis-syntax-delimiter: #1CA0FD;
-	--oasis-syntax-exception: #F58888;
+	--oasis-syntax-exception: #F78181;
 	--oasis-syntax-func: #FFC78F;
 	--oasis-syntax-identifier: #A8DDD5;
 	--oasis-syntax-operator: #FFA0A0;
@@ -56,7 +86,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +94,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,22 +104,12 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #FFA0A0;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #94D0FE;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #58B8FD;
 	--oasis-theme-secondary: #F8B471;
 	--oasis-theme-strong-primary: #1CA0FD;
@@ -104,7 +124,7 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #87CEEB;
 	--oasis-ui-float-bg: #1A283F;
 	--oasis-ui-float-border-bg: #1A283F;
