--- a/extras/css/themes/dark/oasis_rose_dark.css
+++ b/extras/css/themes/dark/oasis_rose_dark.css
@@ -23,8 +23,38 @@
 	--oasis-fg-muted: #816175;
 	--oasis-fg-strong: #EBBEDF;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-accent-50: #DEF6FC;
+	--oasis-palette-accent-100: #CBEEF9;
+	--oasis-palette-accent-200: #B8E5F5;
+	--oasis-palette-accent-300: #A5DCF1;
+	--oasis-palette-accent-400: #92D3ED;
+	--oasis-palette-accent-500: #87CEEB;
+	--oasis-palette-accent-600: #6BBAE0;
+	--oasis-palette-accent-700: #4D9ACF;
+	--oasis-palette-accent-800: #2E6894;
+	--oasis-palette-accent-900: #1A3D5C;
+	--oasis-palette-primary-50: #FFEBEB;
+	--oasis-palette-primary-100: #FFDCDC;
+	--oasis-palette-primary-200: #FFCECE;
+	--oasis-palette-primary-300: #FFC0C0;
+	--oasis-palette-primary-400: #FFB0B0;
+	--oasis-palette-primary-500: #FFA0A0;
+	--oasis-palette-primary-600: #FF9090;
+	--oasis-palette-primary-700: #FF8080;
+	--oasis-palette-primary-800: #CC5959;
+	--oasis-palette-primary-900: #803333;
+	--oasis-palette-secondary-50: #FCF8DF;
+	--oasis-palette-secondary-100: #F8F1BF;
+	--oasis-palette-secondary-200: #F2E890;
+	--oasis-palette-secondary-300: #EADD61;
+	--oasis-palette-secondary-400: #F4E36B;
+	--oasis-palette-secondary-500: #FFD700;
+	--oasis-palette-secondary-600: #FFC133;
+	--oasis-palette-secondary-700: #FFAA00;
+	--oasis-palette-secondary-800: #B37800;
+	--oasis-palette-secondary-900: #664500;
 	--oasis-syntax-bracket: #A3ABB8;
 	--oasis-syntax-builtinConst: #A3ABB8;
 	--oasis-syntax-builtinFunc: #FFBA80;
@@ -56,7 +86,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +94,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,22 +104,12 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #87CEEB;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #FFB0B0;
-	--oasis-theme-palette-primary-50: #FFEBEB;
-	--oasis-theme-palette-primary-100: #FFDCDC;
-	--oasis-theme-palette-primary-200: #FFCECE;
-	--oasis-theme-palette-primary-300: #FFC0C0;
-	--oasis-theme-palette-primary-400: #FFB0B0;
-	--oasis-theme-palette-primary-500: #FFA0A0;
-	--oasis-theme-palette-primary-600: #FF9090;
-	--oasis-theme-palette-primary-700: #FF8080;
-	--oasis-theme-palette-primary-800: #CC5959;
-	--oasis-theme-palette-primary-900: #803333;
 	--oasis-theme-primary: #FF9090;
 	--oasis-theme-secondary: #F4E36B;
 	--oasis-theme-strong-primary: #FF8080;
@@ -104,7 +124,7 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #87CEEB;
 	--oasis-ui-float-bg: #3E2636;
 	--oasis-ui-float-border-bg: #3E2636;
