--- a/extras/css/themes/light/1/oasis_abyss_light_1.css
+++ b/extras/css/themes/light/1/oasis_abyss_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #677479;
 	--oasis-fg-strong: #7c4734;
 	--oasis-git-add: #226210;
-	--oasis-git-change: #5e560a;
+	--oasis-git-change: #5e560c;
 	--oasis-git-delete: #ae0000;
 	--oasis-syntax-bracket: #6c727f;
 	--oasis-syntax-builtinConst: #5b616e;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #ad373a;
 	--oasis-syntax-regex: #326e21;
 	--oasis-syntax-special: #964e10;
-	--oasis-syntax-statement: #bb2328;
+	--oasis-syntax-statement: #bc2126;
 	--oasis-syntax-string: #276746;
 	--oasis-syntax-type: #34645d;
 	--oasis-terminal-black: #555555;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7d490c;
 	--oasis-terminal-bright-yellow: #8f5215;
 	--oasis-terminal-color0: #555555;
-	--oasis-terminal-color1: #b72a2a;
+	--oasis-terminal-color1: #c21313;
 	--oasis-terminal-color10: #366d27;
 	--oasis-terminal-color11: #8f5215;
 	--oasis-terminal-color12: #266884;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356a62;
 	--oasis-terminal-color15: #7d490c;
 	--oasis-terminal-color2: #306c4c;
-	--oasis-terminal-color3: #696220;
+	--oasis-terminal-color3: #696223;
 	--oasis-terminal-color4: #1662ae;
 	--oasis-terminal-color5: #7f30dd;
 	--oasis-terminal-color6: #376a62;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #376a62;
 	--oasis-terminal-green: #306c4c;
 	--oasis-terminal-magenta: #7f30dd;
-	--oasis-terminal-red: #b72a2a;
+	--oasis-terminal-red: #c21313;
 	--oasis-terminal-white: #58554c;
-	--oasis-terminal-yellow: #696220;
+	--oasis-terminal-yellow: #696223;
 	--oasis-theme-accent: #3e756c;
 	--oasis-theme-light-primary: #7a1515;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #8f1919;
+	--oasis-theme-primary: #a20707;
 	--oasis-theme-secondary: #a4590f;
 	--oasis-theme-strong-primary: #9c2525;
-	--oasis-ui-border: #943434;
+	--oasis-ui-border: #a12626;
 	--oasis-ui-cursorLine: #f3efeb;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d5a6c;
 	--oasis-ui-float-bg: #f3efeb;
 	--oasis-ui-float-border-bg: #f3efeb;
-	--oasis-ui-float-border-fg: #943434;
-	--oasis-ui-float-fg: #943434;
-	--oasis-ui-float-title: #943434;
+	--oasis-ui-float-border-fg: #a12626;
+	--oasis-ui-float-fg: #a12626;
+	--oasis-ui-float-title: #a12626;
 	--oasis-ui-lineNumber: #7a491d;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #9a8d85;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #943434;
+	--oasis-ui-title: #a12626;
 	--oasis-ui-visual-bg: #e8e0d8;
 	--oasis-ui-visual-fg: none;
 }
