--- a/extras/css/themes/light/1/oasis_canyon_light_1.css
+++ b/extras/css/themes/light/1/oasis_canyon_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #816e62;
 	--oasis-fg-strong: #734c30;
 	--oasis-git-add: #226210;
-	--oasis-git-change: #5e560a;
+	--oasis-git-change: #5e560c;
 	--oasis-git-delete: #ae0000;
 	--oasis-syntax-bracket: #6c727f;
 	--oasis-syntax-builtinConst: #5b616e;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #8d4a0f;
 	--oasis-syntax-constant: #464645;
 	--oasis-syntax-delimiter: #8f521e;
-	--oasis-syntax-exception: #b8292e;
+	--oasis-syntax-exception: #ba252a;
 	--oasis-syntax-func: #81510e;
 	--oasis-syntax-identifier: #376a63;
 	--oasis-syntax-operator: #c1151c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7d490c;
 	--oasis-terminal-bright-yellow: #8f5215;
 	--oasis-terminal-color0: #555555;
-	--oasis-terminal-color1: #b72a2a;
+	--oasis-terminal-color1: #c21313;
 	--oasis-terminal-color10: #366d27;
 	--oasis-terminal-color11: #8f5215;
 	--oasis-terminal-color12: #266884;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356a62;
 	--oasis-terminal-color15: #7d490c;
 	--oasis-terminal-color2: #306c4c;
-	--oasis-terminal-color3: #696220;
+	--oasis-terminal-color3: #696223;
 	--oasis-terminal-color4: #1662ae;
 	--oasis-terminal-color5: #7f30dd;
 	--oasis-terminal-color6: #376a62;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #376a62;
 	--oasis-terminal-green: #306c4c;
 	--oasis-terminal-magenta: #7f30dd;
-	--oasis-terminal-red: #b72a2a;
+	--oasis-terminal-red: #c21313;
 	--oasis-terminal-white: #58554c;
-	--oasis-terminal-yellow: #696220;
+	--oasis-terminal-yellow: #696223;
 	--oasis-theme-accent: #298a58;
 	--oasis-theme-light-primary: #83560b;
-	--oasis-theme-palette-primary-50: #FFE7CC;
-	--oasis-theme-palette-primary-100: #FFD7AD;
-	--oasis-theme-palette-primary-200: #FFC78F;
-	--oasis-theme-palette-primary-300: #FFB870;
-	--oasis-theme-palette-primary-400: #FFA852;
-	--oasis-theme-palette-primary-500: #FFA247;
-	--oasis-theme-palette-primary-600: #FF8A1F;
-	--oasis-theme-palette-primary-700: #E67200;
-	--oasis-theme-palette-primary-800: #B35A00;
-	--oasis-theme-palette-primary-900: #804000;
 	--oasis-theme-primary: #a25407;
 	--oasis-theme-secondary: #1f7294;
 	--oasis-theme-strong-primary: #ba6008;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2c5a6d;
 	--oasis-ui-float-bg: #f3efeb;
 	--oasis-ui-float-border-bg: #f3efeb;
