--- a/extras/css/themes/light/1/oasis_dune_light_1.css
+++ b/extras/css/themes/light/1/oasis_dune_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #7b7166;
 	--oasis-fg-strong: #58573a;
 	--oasis-git-add: #226210;
-	--oasis-git-change: #5e560a;
+	--oasis-git-change: #5e560c;
 	--oasis-git-delete: #af0000;
 	--oasis-syntax-bracket: #6b7382;
 	--oasis-syntax-builtinConst: #5a6172;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7d490c;
 	--oasis-terminal-bright-yellow: #905215;
 	--oasis-terminal-color0: #555555;
-	--oasis-terminal-color1: #b82a2a;
+	--oasis-terminal-color1: #c21313;
 	--oasis-terminal-color10: #366e27;
 	--oasis-terminal-color11: #905215;
 	--oasis-terminal-color12: #266884;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #366a62;
 	--oasis-terminal-color15: #7d490c;
 	--oasis-terminal-color2: #306d4d;
-	--oasis-terminal-color3: #696320;
+	--oasis-terminal-color3: #696323;
 	--oasis-terminal-color4: #1662af;
 	--oasis-terminal-color5: #8031dd;
 	--oasis-terminal-color6: #376a63;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #376a63;
 	--oasis-terminal-green: #306d4d;
 	--oasis-terminal-magenta: #8031dd;
-	--oasis-terminal-red: #b82a2a;
+	--oasis-terminal-red: #c21313;
 	--oasis-terminal-white: #58554d;
-	--oasis-terminal-yellow: #696320;
+	--oasis-terminal-yellow: #696323;
 	--oasis-theme-accent: #298a57;
 	--oasis-theme-light-primary: #7a7014;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
 	--oasis-theme-primary: #79732f;
 	--oasis-theme-secondary: #3e7540;
 	--oasis-theme-strong-primary: #837e3f;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d5b6d;
 	--oasis-ui-float-bg: #f3f1eb;
 	--oasis-ui-float-border-bg: #f3f1eb;
