--- a/extras/css/themes/light/1/oasis_lagoon_light_1.css
+++ b/extras/css/themes/light/1/oasis_lagoon_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #617784;
 	--oasis-fg-strong: #465968;
 	--oasis-git-add: #226310;
-	--oasis-git-change: #5f570a;
+	--oasis-git-change: #60570c;
 	--oasis-git-delete: #b10000;
 	--oasis-syntax-bracket: #6d7481;
 	--oasis-syntax-builtinConst: #5c636f;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #135fa1;
 	--oasis-syntax-constant: #484847;
 	--oasis-syntax-delimiter: #23669f;
-	--oasis-syntax-exception: #be2429;
+	--oasis-syntax-exception: #bf2227;
 	--oasis-syntax-func: #8f4c10;
 	--oasis-syntax-identifier: #376b63;
 	--oasis-syntax-operator: #c4151c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7e4a0d;
 	--oasis-terminal-bright-yellow: #915315;
 	--oasis-terminal-color0: #565656;
-	--oasis-terminal-color1: #ba2b2b;
+	--oasis-terminal-color1: #c51414;
 	--oasis-terminal-color10: #376f28;
 	--oasis-terminal-color11: #915315;
 	--oasis-terminal-color12: #266a86;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #366c63;
 	--oasis-terminal-color15: #7e4a0d;
 	--oasis-terminal-color2: #306e4e;
-	--oasis-terminal-color3: #6a6421;
+	--oasis-terminal-color3: #6a6423;
 	--oasis-terminal-color4: #1663b1;
 	--oasis-terminal-color5: #8133dd;
 	--oasis-terminal-color6: #386b64;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #386b64;
 	--oasis-terminal-green: #306e4e;
 	--oasis-terminal-magenta: #8133dd;
-	--oasis-terminal-red: #ba2b2b;
+	--oasis-terminal-red: #c51414;
 	--oasis-terminal-white: #59564e;
-	--oasis-terminal-yellow: #6a6421;
+	--oasis-terminal-yellow: #6a6423;
 	--oasis-theme-accent: #ab0707;
 	--oasis-theme-light-primary: #075088;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #0961a0;
 	--oasis-theme-secondary: #a4590f;
 	--oasis-theme-strong-primary: #0970b8;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2e5c6e;
 	--oasis-ui-float-bg: #f0f2f5;
 	--oasis-ui-float-border-bg: #f0f2f5;
