--- a/extras/css/themes/light/1/oasis_night_light_1.css
+++ b/extras/css/themes/light/1/oasis_night_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6e5e53;
 	--oasis-fg-strong: #5d3d27;
 	--oasis-git-add: #1b4f0d;
-	--oasis-git-change: #4b4508;
+	--oasis-git-change: #4c450a;
 	--oasis-git-delete: #8f0000;
 	--oasis-syntax-bracket: #5b616c;
 	--oasis-syntax-builtinConst: #4c515b;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #743d0d;
 	--oasis-syntax-constant: #353535;
 	--oasis-syntax-delimiter: #764419;
-	--oasis-syntax-exception: #992226;
+	--oasis-syntax-exception: #9b1f23;
 	--oasis-syntax-func: #6a430c;
 	--oasis-syntax-identifier: #2e5852;
 	--oasis-syntax-operator: #a11217;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #653b0a;
 	--oasis-terminal-bright-yellow: #764412;
 	--oasis-terminal-color0: #444444;
-	--oasis-terminal-color1: #992323;
+	--oasis-terminal-color1: #a21010;
 	--oasis-terminal-color10: #2d5b20;
 	--oasis-terminal-color11: #764412;
 	--oasis-terminal-color12: #1f566d;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2c5851;
 	--oasis-terminal-color15: #653b0a;
 	--oasis-terminal-color2: #275a3f;
-	--oasis-terminal-color3: #57521b;
+	--oasis-terminal-color3: #57511d;
 	--oasis-terminal-color4: #125191;
 	--oasis-terminal-color5: #6b20c3;
 	--oasis-terminal-color6: #2d5852;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2d5852;
 	--oasis-terminal-green: #275a3f;
 	--oasis-terminal-magenta: #6b20c3;
-	--oasis-terminal-red: #992323;
+	--oasis-terminal-red: #a21010;
 	--oasis-terminal-white: #47443e;
-	--oasis-terminal-yellow: #57521b;
+	--oasis-terminal-yellow: #57511d;
 	--oasis-theme-accent: #0966a9;
 	--oasis-theme-light-primary: #7a1515;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #8f1919;
+	--oasis-theme-primary: #a20707;
 	--oasis-theme-secondary: #a4590f;
 	--oasis-theme-strong-primary: #903232;
-	--oasis-ui-border: #782a2a;
+	--oasis-ui-border: #821e1e;
 	--oasis-ui-cursorLine: #dbd5c2;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #244958;
 	--oasis-ui-float-bg: #dbd5c2;
 	--oasis-ui-float-border-bg: #dbd5c2;
-	--oasis-ui-float-border-fg: #782a2a;
-	--oasis-ui-float-fg: #782a2a;
-	--oasis-ui-float-title: #782a2a;
+	--oasis-ui-float-border-fg: #821e1e;
+	--oasis-ui-float-fg: #821e1e;
+	--oasis-ui-float-title: #821e1e;
 	--oasis-ui-lineNumber: #613c17;
 	--oasis-ui-match-bg: #dd6f6f;
 	--oasis-ui-match-fg: #350808;
 	--oasis-ui-nontext: #847b70;
 	--oasis-ui-search-bg: #e1b69d;
 	--oasis-ui-search-fg: #4e260e;
-	--oasis-ui-title: #782a2a;
+	--oasis-ui-title: #821e1e;
 	--oasis-ui-visual-bg: #cfc7af;
 	--oasis-ui-visual-fg: none;
 }
