--- a/extras/css/themes/light/1/oasis_starlight_light_1.css
+++ b/extras/css/themes/light/1/oasis_starlight_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6b737d;
 	--oasis-fg-strong: #58544d;
 	--oasis-git-add: #226210;
-	--oasis-git-change: #5e560a;
+	--oasis-git-change: #5e560c;
 	--oasis-git-delete: #ae0000;
 	--oasis-syntax-bracket: #727088;
 	--oasis-syntax-builtinConst: #5b616e;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #135e9e;
 	--oasis-syntax-constant: #464645;
 	--oasis-syntax-delimiter: #23649c;
-	--oasis-syntax-exception: #b62c30;
+	--oasis-syntax-exception: #c1151c;
 	--oasis-syntax-func: #8d4a0f;
 	--oasis-syntax-identifier: #366a62;
 	--oasis-syntax-operator: #c1151c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7d490c;
 	--oasis-terminal-bright-yellow: #8f5215;
 	--oasis-terminal-color0: #555555;
-	--oasis-terminal-color1: #b72a2a;
+	--oasis-terminal-color1: #c21313;
 	--oasis-terminal-color10: #366d27;
 	--oasis-terminal-color11: #8f5215;
 	--oasis-terminal-color12: #266884;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356a62;
 	--oasis-terminal-color15: #7d490c;
 	--oasis-terminal-color2: #306c4c;
-	--oasis-terminal-color3: #696220;
+	--oasis-terminal-color3: #696223;
 	--oasis-terminal-color4: #1662ae;
 	--oasis-terminal-color5: #7f30dd;
 	--oasis-terminal-color6: #376a62;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #376a62;
 	--oasis-terminal-green: #306c4c;
 	--oasis-terminal-magenta: #7f30dd;
-	--oasis-terminal-red: #b72a2a;
+	--oasis-terminal-red: #c21313;
 	--oasis-terminal-white: #58554c;
-	--oasis-terminal-yellow: #696220;
+	--oasis-terminal-yellow: #696223;
 	--oasis-theme-accent: #a4590f;
 	--oasis-theme-light-primary: #185b76;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #0961a0;
 	--oasis-theme-secondary: #988c1a;
 	--oasis-theme-strong-primary: #0a70b8;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d5a6c;
 	--oasis-ui-float-bg: #f3efeb;
 	--oasis-ui-float-border-bg: #f3efeb;
