--- a/extras/css/themes/light/1/oasis_twilight_light_1.css
+++ b/extras/css/themes/light/1/oasis_twilight_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #767085;
 	--oasis-fg-strong: #614797;
 	--oasis-git-add: #226310;
-	--oasis-git-change: #5f570a;
+	--oasis-git-change: #5f570c;
 	--oasis-git-delete: #b00000;
 	--oasis-syntax-bracket: #727189;
 	--oasis-syntax-builtinConst: #5c626f;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #8119e2;
 	--oasis-syntax-constant: #474746;
 	--oasis-syntax-delimiter: #7f40c4;
-	--oasis-syntax-exception: #ba292e;
+	--oasis-syntax-exception: #bc252a;
 	--oasis-syntax-func: #8e4b0f;
 	--oasis-syntax-identifier: #366b63;
 	--oasis-syntax-operator: #c3151c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7e490d;
 	--oasis-terminal-bright-yellow: #905315;
 	--oasis-terminal-color0: #565656;
-	--oasis-terminal-color1: #b92b2b;
+	--oasis-terminal-color1: #c41414;
 	--oasis-terminal-color10: #376e28;
 	--oasis-terminal-color11: #905315;
 	--oasis-terminal-color12: #266985;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #366b63;
 	--oasis-terminal-color15: #7e490d;
 	--oasis-terminal-color2: #306d4d;
-	--oasis-terminal-color3: #6a6320;
+	--oasis-terminal-color3: #6a6323;
 	--oasis-terminal-color4: #1663b0;
 	--oasis-terminal-color5: #8133dd;
 	--oasis-terminal-color6: #376b63;
@@ -76,23 +76,13 @@
 	--oasis-terminal-cyan: #376b63;
 	--oasis-terminal-green: #306d4d;
 	--oasis-terminal-magenta: #8133dd;
-	--oasis-terminal-red: #b92b2b;
+	--oasis-terminal-red: #c41414;
 	--oasis-terminal-white: #59564d;
-	--oasis-terminal-yellow: #6a6320;
+	--oasis-terminal-yellow: #6a6323;
 	--oasis-theme-accent: #298a58;
 	--oasis-theme-light-primary: #410689;
-	--oasis-theme-palette-primary-50: #F4EEFF;
-	--oasis-theme-palette-primary-100: #EEDDFF;
-	--oasis-theme-palette-primary-200: #DEC2FF;
-	--oasis-theme-palette-primary-300: #D2ADFF;
-	--oasis-theme-palette-primary-400: #C695FF;
-	--oasis-theme-palette-primary-500: #C28EFF;
-	--oasis-theme-palette-primary-600: #A870F0;
-	--oasis-theme-palette-primary-700: #9C5FEB;
-	--oasis-theme-palette-primary-800: #8F4FE6;
-	--oasis-theme-palette-primary-900: #7033CC;
 	--oasis-theme-primary: #4e07a2;
-	--oasis-theme-secondary: #9c9016;
+	--oasis-theme-secondary: #998b1a;
 	--oasis-theme-strong-primary: #5819a9;
 	--oasis-ui-border: #6f35b4;
 	--oasis-ui-cursorLine: #f0f0f5;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2e5b6e;
 	--oasis-ui-float-bg: #f0f0f5;
 	--oasis-ui-float-border-bg: #f0f0f5;
