--- a/extras/css/themes/light/2/oasis_abyss_light_2.css
+++ b/extras/css/themes/light/2/oasis_abyss_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #647076;
 	--oasis-fg-strong: #774431;
 	--oasis-git-add: #205e0f;
-	--oasis-git-change: #5a5209;
+	--oasis-git-change: #5a520c;
 	--oasis-git-delete: #a80000;
 	--oasis-syntax-bracket: #696e7c;
 	--oasis-syntax-builtinConst: #575e6a;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #a73438;
 	--oasis-syntax-regex: #306a1f;
 	--oasis-syntax-special: #914b10;
-	--oasis-syntax-statement: #b42328;
+	--oasis-syntax-statement: #b61f25;
 	--oasis-syntax-string: #276343;
 	--oasis-syntax-type: #33605a;
 	--oasis-terminal-black: #515151;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #77450c;
 	--oasis-terminal-bright-yellow: #8a4f14;
 	--oasis-terminal-color0: #515151;
-	--oasis-terminal-color1: #b12828;
+	--oasis-terminal-color1: #bb1313;
 	--oasis-terminal-color10: #356926;
 	--oasis-terminal-color11: #8a4f14;
 	--oasis-terminal-color12: #24647e;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #34665f;
 	--oasis-terminal-color15: #77450c;
 	--oasis-terminal-color2: #2f6849;
-	--oasis-terminal-color3: #665f1f;
+	--oasis-terminal-color3: #655f22;
 	--oasis-terminal-color4: #155ea8;
 	--oasis-terminal-color5: #7c29dc;
 	--oasis-terminal-color6: #356660;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #356660;
 	--oasis-terminal-green: #2f6849;
 	--oasis-terminal-magenta: #7c29dc;
-	--oasis-terminal-red: #b12828;
+	--oasis-terminal-red: #bb1313;
 	--oasis-terminal-white: #545149;
-	--oasis-terminal-yellow: #665f1f;
+	--oasis-terminal-yellow: #655f22;
 	--oasis-theme-accent: #3a6f66;
 	--oasis-theme-light-primary: #721212;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #881616;
+	--oasis-theme-primary: #990505;
 	--oasis-theme-secondary: #9c540c;
 	--oasis-theme-strong-primary: #952222;
-	--oasis-ui-border: #8d3333;
+	--oasis-ui-border: #9a2424;
 	--oasis-ui-cursorLine: #f5e9db;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2b5768;
 	--oasis-ui-float-bg: #f5e9db;
 	--oasis-ui-float-border-bg: #f5e9db;
-	--oasis-ui-float-border-fg: #8d3333;
-	--oasis-ui-float-fg: #8d3333;
-	--oasis-ui-float-title: #8d3333;
+	--oasis-ui-float-border-fg: #9a2424;
+	--oasis-ui-float-fg: #9a2424;
+	--oasis-ui-float-title: #9a2424;
 	--oasis-ui-lineNumber: #75461b;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #968980;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #8d3333;
+	--oasis-ui-title: #9a2424;
 	--oasis-ui-visual-bg: #eedac3;
 	--oasis-ui-visual-fg: none;
 }
