--- a/extras/css/themes/light/2/oasis_cactus_light_2.css
+++ b/extras/css/themes/light/2/oasis_cactus_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #667469;
 	--oasis-fg-strong: #405945;
 	--oasis-git-add: #216010;
-	--oasis-git-change: #5c5409;
+	--oasis-git-change: #5d540c;
 	--oasis-git-delete: #ab0000;
 	--oasis-syntax-bracket: #6a7180;
 	--oasis-syntax-builtinConst: #59606f;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7a470c;
 	--oasis-terminal-bright-yellow: #8d5115;
 	--oasis-terminal-color0: #535353;
-	--oasis-terminal-color1: #b52929;
+	--oasis-terminal-color1: #bf1313;
 	--oasis-terminal-color10: #366b27;
 	--oasis-terminal-color11: #8d5115;
 	--oasis-terminal-color12: #256681;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356861;
 	--oasis-terminal-color15: #7a470c;
 	--oasis-terminal-color2: #306b4b;
-	--oasis-terminal-color3: #686120;
+	--oasis-terminal-color3: #686123;
 	--oasis-terminal-color4: #1560ac;
 	--oasis-terminal-color5: #7e2ddd;
 	--oasis-terminal-color6: #366863;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #366863;
 	--oasis-terminal-green: #306b4b;
 	--oasis-terminal-magenta: #7e2ddd;
-	--oasis-terminal-red: #b52929;
+	--oasis-terminal-red: #bf1313;
 	--oasis-terminal-white: #56534b;
-	--oasis-terminal-yellow: #686120;
+	--oasis-terminal-yellow: #686123;
 	--oasis-theme-accent: #a30505;
 	--oasis-theme-light-primary: #2e572f;
-	--oasis-theme-palette-primary-50: #DEF6E0;
-	--oasis-theme-palette-primary-100: #D2EED4;
-	--oasis-theme-palette-primary-200: #C6E6C8;
-	--oasis-theme-palette-primary-300: #BADEBC;
-	--oasis-theme-palette-primary-400: #AED6B0;
-	--oasis-theme-palette-primary-500: #A7D3A9;
-	--oasis-theme-palette-primary-600: #93C795;
-	--oasis-theme-palette-primary-700: #7FBB82;
-	--oasis-theme-palette-primary-800: #5A9C5D;
-	--oasis-theme-palette-primary-900: #355E37;
 	--oasis-theme-primary: #38663b;
 	--oasis-theme-secondary: #a30505;
 	--oasis-theme-strong-primary: #417644;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2c596b;
 	--oasis-ui-float-bg: #e4f2ea;
 	--oasis-ui-float-border-bg: #e4f2ea;
