--- a/extras/css/themes/light/2/oasis_canyon_light_2.css
+++ b/extras/css/themes/light/2/oasis_canyon_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #7e6b5d;
 	--oasis-fg-strong: #6e492d;
 	--oasis-git-add: #205e0f;
-	--oasis-git-change: #5a5209;
+	--oasis-git-change: #5a520c;
 	--oasis-git-delete: #a80000;
 	--oasis-syntax-bracket: #696e7c;
 	--oasis-syntax-builtinConst: #575e6a;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #87470f;
 	--oasis-syntax-constant: #434342;
 	--oasis-syntax-delimiter: #894f1d;
-	--oasis-syntax-exception: #b2272c;
+	--oasis-syntax-exception: #b42329;
 	--oasis-syntax-func: #7c4e0e;
 	--oasis-syntax-identifier: #34665f;
 	--oasis-syntax-operator: #ba141b;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #77450c;
 	--oasis-terminal-bright-yellow: #8a4f14;
 	--oasis-terminal-color0: #515151;
-	--oasis-terminal-color1: #b12828;
+	--oasis-terminal-color1: #bb1313;
 	--oasis-terminal-color10: #356926;
 	--oasis-terminal-color11: #8a4f14;
 	--oasis-terminal-color12: #24647e;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #34665f;
 	--oasis-terminal-color15: #77450c;
 	--oasis-terminal-color2: #2f6849;
-	--oasis-terminal-color3: #665f1f;
+	--oasis-terminal-color3: #655f22;
 	--oasis-terminal-color4: #155ea8;
 	--oasis-terminal-color5: #7c29dc;
 	--oasis-terminal-color6: #356660;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #356660;
 	--oasis-terminal-green: #2f6849;
 	--oasis-terminal-magenta: #7c29dc;
-	--oasis-terminal-red: #b12828;
+	--oasis-terminal-red: #bb1313;
 	--oasis-terminal-white: #545149;
-	--oasis-terminal-yellow: #665f1f;
+	--oasis-terminal-yellow: #655f22;
 	--oasis-theme-accent: #258353;
 	--oasis-theme-light-primary: #7b5009;
-	--oasis-theme-palette-primary-50: #FFE7CC;
-	--oasis-theme-palette-primary-100: #FFD7AD;
-	--oasis-theme-palette-primary-200: #FFC78F;
-	--oasis-theme-palette-primary-300: #FFB870;
-	--oasis-theme-palette-primary-400: #FFA852;
-	--oasis-theme-palette-primary-500: #FFA247;
-	--oasis-theme-palette-primary-600: #FF8A1F;
-	--oasis-theme-palette-primary-700: #E67200;
-	--oasis-theme-palette-primary-800: #B35A00;
-	--oasis-theme-palette-primary-900: #804000;
 	--oasis-theme-primary: #994f05;
 	--oasis-theme-secondary: #1c6c8d;
 	--oasis-theme-strong-primary: #b25b06;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2a5768;
 	--oasis-ui-float-bg: #f5e9db;
 	--oasis-ui-float-border-bg: #f5e9db;
