--- a/extras/css/themes/light/2/oasis_dune_light_2.css
+++ b/extras/css/themes/light/2/oasis_dune_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #7a7066;
 	--oasis-fg-strong: #585539;
 	--oasis-git-add: #216110;
-	--oasis-git-change: #5d5509;
+	--oasis-git-change: #5d550c;
 	--oasis-git-delete: #ad0000;
 	--oasis-syntax-bracket: #6a7181;
 	--oasis-syntax-builtinConst: #5a6070;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7b480c;
 	--oasis-terminal-bright-yellow: #8e5115;
 	--oasis-terminal-color0: #545454;
-	--oasis-terminal-color1: #b72929;
+	--oasis-terminal-color1: #c01313;
 	--oasis-terminal-color10: #366c27;
 	--oasis-terminal-color11: #8e5115;
 	--oasis-terminal-color12: #256782;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356961;
 	--oasis-terminal-color15: #7b480c;
 	--oasis-terminal-color2: #306b4c;
-	--oasis-terminal-color3: #696220;
+	--oasis-terminal-color3: #686123;
 	--oasis-terminal-color4: #1561ad;
 	--oasis-terminal-color5: #7f2fdd;
 	--oasis-terminal-color6: #366963;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #366963;
 	--oasis-terminal-green: #306b4c;
 	--oasis-terminal-magenta: #7f2fdd;
-	--oasis-terminal-red: #b72929;
+	--oasis-terminal-red: #c01313;
 	--oasis-terminal-white: #57544b;
-	--oasis-terminal-yellow: #696220;
+	--oasis-terminal-yellow: #686123;
 	--oasis-theme-accent: #258352;
 	--oasis-theme-light-primary: #736812;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
 	--oasis-theme-primary: #726d2c;
 	--oasis-theme-secondary: #3a6f3c;
 	--oasis-theme-strong-primary: #7d783b;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d5a6c;
 	--oasis-ui-float-bg: #f5f0e0;
 	--oasis-ui-float-border-bg: #f5f0e0;
