--- a/extras/css/themes/light/2/oasis_lagoon_light_2.css
+++ b/extras/css/themes/light/2/oasis_lagoon_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #5c717e;
 	--oasis-fg-strong: #415361;
 	--oasis-git-add: #205d0f;
-	--oasis-git-change: #5a5209;
+	--oasis-git-change: #59520c;
 	--oasis-git-delete: #a70000;
 	--oasis-syntax-bracket: #696e7b;
 	--oasis-syntax-builtinConst: #575d6a;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #125a97;
 	--oasis-syntax-constant: #424241;
 	--oasis-syntax-delimiter: #216097;
-	--oasis-syntax-exception: #b32328;
+	--oasis-syntax-exception: #b51f25;
 	--oasis-syntax-func: #87470f;
 	--oasis-syntax-identifier: #33665e;
 	--oasis-syntax-operator: #b9141b;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #77450c;
 	--oasis-terminal-bright-yellow: #894f14;
 	--oasis-terminal-color0: #515151;
-	--oasis-terminal-color1: #b02828;
+	--oasis-terminal-color1: #ba1313;
 	--oasis-terminal-color10: #346926;
 	--oasis-terminal-color11: #894f14;
 	--oasis-terminal-color12: #24647e;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #34655e;
 	--oasis-terminal-color15: #77450c;
 	--oasis-terminal-color2: #2f6849;
-	--oasis-terminal-color3: #655e1f;
+	--oasis-terminal-color3: #655e22;
 	--oasis-terminal-color4: #155ea7;
 	--oasis-terminal-color5: #7b28dc;
 	--oasis-terminal-color6: #346560;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #346560;
 	--oasis-terminal-green: #2f6849;
 	--oasis-terminal-magenta: #7b28dc;
-	--oasis-terminal-red: #b02828;
+	--oasis-terminal-red: #ba1313;
 	--oasis-terminal-white: #535148;
-	--oasis-terminal-yellow: #655e1f;
+	--oasis-terminal-yellow: #655e22;
 	--oasis-theme-accent: #a30505;
 	--oasis-theme-light-primary: #054a7f;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #075b98;
 	--oasis-theme-secondary: #9c540c;
 	--oasis-theme-strong-primary: #076ab1;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2b5668;
 	--oasis-ui-float-bg: #dfe9f5;
 	--oasis-ui-float-border-bg: #dfe9f5;
