--- a/extras/css/themes/light/2/oasis_midnight_light_2.css
+++ b/extras/css/themes/light/2/oasis_midnight_light_2.css
@@ -25,14 +25,14 @@
 	--oasis-fg-muted: #656f77;
 	--oasis-fg-strong: #6e482e;
 	--oasis-git-add: #205d0f;
-	--oasis-git-change: #595209;
+	--oasis-git-change: #59510c;
 	--oasis-git-delete: #a60000;
 	--oasis-syntax-bracket: #686d7b;
 	--oasis-syntax-builtinConst: #565d69;
 	--oasis-syntax-builtinFunc: #924810;
 	--oasis-syntax-builtinVar: #5b5d5e;
 	--oasis-syntax-comment: #626e81;
-	--oasis-syntax-conditional: #a4282b;
+	--oasis-syntax-conditional: #ae1319;
 	--oasis-syntax-constant: #424241;
 	--oasis-syntax-delimiter: #914649;
 	--oasis-syntax-exception: #675d19;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #ae2b30;
 	--oasis-syntax-regex: #2f691f;
 	--oasis-syntax-special: #8f4a10;
-	--oasis-syntax-statement: #b0272c;
+	--oasis-syntax-statement: #b22328;
 	--oasis-syntax-string: #266243;
 	--oasis-syntax-type: #325f59;
 	--oasis-terminal-black: #505050;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #76450c;
 	--oasis-terminal-bright-yellow: #884e14;
 	--oasis-terminal-color0: #505050;
-	--oasis-terminal-color1: #b02828;
+	--oasis-terminal-color1: #b91313;
 	--oasis-terminal-color10: #346826;
 	--oasis-terminal-color11: #884e14;
 	--oasis-terminal-color12: #24637d;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33655e;
 	--oasis-terminal-color15: #76450c;
 	--oasis-terminal-color2: #2e6749;
-	--oasis-terminal-color3: #645e1f;
+	--oasis-terminal-color3: #655e22;
 	--oasis-terminal-color4: #145da6;
 	--oasis-terminal-color5: #7b27dc;
 	--oasis-terminal-color6: #34655f;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #34655f;
 	--oasis-terminal-green: #2e6749;
 	--oasis-terminal-magenta: #7b27dc;
-	--oasis-terminal-red: #b02828;
+	--oasis-terminal-red: #b91313;
 	--oasis-terminal-white: #535048;
-	--oasis-terminal-yellow: #645e1f;
+	--oasis-terminal-yellow: #655e22;
 	--oasis-theme-accent: #3a6f66;
 	--oasis-theme-light-primary: #721212;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #881616;
+	--oasis-theme-primary: #990505;
 	--oasis-theme-secondary: #9c540c;
 	--oasis-theme-strong-primary: #8a2e2e;
-	--oasis-ui-border: #8c3333;
+	--oasis-ui-border: #992424;
 	--oasis-ui-cursorLine: #f5e6db;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2b5667;
 	--oasis-ui-float-bg: #f5e6db;
 	--oasis-ui-float-border-bg: #f5e6db;
-	--oasis-ui-float-border-fg: #8c3333;
-	--oasis-ui-float-fg: #8c3333;
-	--oasis-ui-float-title: #8c3333;
+	--oasis-ui-float-border-fg: #992424;
+	--oasis-ui-float-fg: #992424;
+	--oasis-ui-float-title: #992424;
 	--oasis-ui-lineNumber: #72461b;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #938981;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #8c3333;
+	--oasis-ui-title: #992424;
 	--oasis-ui-visual-bg: #eed5c3;
 	--oasis-ui-visual-fg: none;
 }
