--- a/extras/css/themes/light/2/oasis_night_light_2.css
+++ b/extras/css/themes/light/2/oasis_night_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #706053;
 	--oasis-fg-strong: #5f3f27;
 	--oasis-git-add: #1c510d;
-	--oasis-git-change: #4e4708;
+	--oasis-git-change: #4e470a;
 	--oasis-git-delete: #920000;
 	--oasis-syntax-bracket: #5e636f;
 	--oasis-syntax-builtinConst: #4d525e;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #763e0d;
 	--oasis-syntax-constant: #383837;
 	--oasis-syntax-delimiter: #794619;
-	--oasis-syntax-exception: #9d2227;
+	--oasis-syntax-exception: #9f1f24;
 	--oasis-syntax-func: #6d440c;
 	--oasis-syntax-identifier: #2e5953;
 	--oasis-syntax-operator: #a51218;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #673c0a;
 	--oasis-terminal-bright-yellow: #794512;
 	--oasis-terminal-color0: #464646;
-	--oasis-terminal-color1: #9d2323;
+	--oasis-terminal-color1: #a51111;
 	--oasis-terminal-color10: #2e5c22;
 	--oasis-terminal-color11: #794512;
 	--oasis-terminal-color12: #20586f;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2e5a53;
 	--oasis-terminal-color15: #673c0a;
 	--oasis-terminal-color2: #295c41;
-	--oasis-terminal-color3: #59531c;
+	--oasis-terminal-color3: #59531e;
 	--oasis-terminal-color4: #125394;
 	--oasis-terminal-color5: #6d20c7;
 	--oasis-terminal-color6: #2e5955;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2e5955;
 	--oasis-terminal-green: #295c41;
 	--oasis-terminal-magenta: #6d20c7;
-	--oasis-terminal-red: #9d2323;
+	--oasis-terminal-red: #a51111;
 	--oasis-terminal-white: #48463f;
-	--oasis-terminal-yellow: #59531c;
+	--oasis-terminal-yellow: #59531e;
 	--oasis-theme-accent: #0761a1;
 	--oasis-theme-light-primary: #721212;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #881616;
+	--oasis-theme-primary: #990505;
 	--oasis-theme-secondary: #9c540c;
 	--oasis-theme-strong-primary: #8a2e2e;
-	--oasis-ui-border: #7a2c2c;
+	--oasis-ui-border: #861f1f;
 	--oasis-ui-cursorLine: #e5d8ae;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #254b5a;
 	--oasis-ui-float-bg: #e5d8ae;
 	--oasis-ui-float-border-bg: #e5d8ae;
-	--oasis-ui-float-border-fg: #7a2c2c;
-	--oasis-ui-float-fg: #7a2c2c;
-	--oasis-ui-float-title: #7a2c2c;
+	--oasis-ui-float-border-fg: #861f1f;
+	--oasis-ui-float-fg: #861f1f;
+	--oasis-ui-float-title: #861f1f;
 	--oasis-ui-lineNumber: #643e17;
 	--oasis-ui-match-bg: #dd6f6f;
 	--oasis-ui-match-fg: #350808;
 	--oasis-ui-nontext: #867d73;
 	--oasis-ui-search-bg: #e1b69d;
 	--oasis-ui-search-fg: #4e260e;
-	--oasis-ui-title: #7a2c2c;
+	--oasis-ui-title: #861f1f;
 	--oasis-ui-visual-bg: #decd96;
 	--oasis-ui-visual-fg: none;
 }
