--- a/extras/css/themes/light/2/oasis_rose_light_2.css
+++ b/extras/css/themes/light/2/oasis_rose_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #796973;
 	--oasis-fg-strong: #67465f;
 	--oasis-git-add: #205c0f;
-	--oasis-git-change: #595209;
+	--oasis-git-change: #59510c;
 	--oasis-git-delete: #a60000;
 	--oasis-syntax-bracket: #686d7b;
 	--oasis-syntax-builtinConst: #565d69;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #76450c;
 	--oasis-terminal-bright-yellow: #884e14;
 	--oasis-terminal-color0: #505050;
-	--oasis-terminal-color1: #b02828;
+	--oasis-terminal-color1: #b91313;
 	--oasis-terminal-color10: #346826;
 	--oasis-terminal-color11: #884e14;
 	--oasis-terminal-color12: #24637d;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33655e;
 	--oasis-terminal-color15: #76450c;
 	--oasis-terminal-color2: #2e6749;
-	--oasis-terminal-color3: #645e1f;
+	--oasis-terminal-color3: #645e22;
 	--oasis-terminal-color4: #145da6;
 	--oasis-terminal-color5: #7b27dc;
 	--oasis-terminal-color6: #34655f;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #34655f;
 	--oasis-terminal-green: #2e6749;
 	--oasis-terminal-magenta: #7b27dc;
-	--oasis-terminal-red: #b02828;
+	--oasis-terminal-red: #b91313;
 	--oasis-terminal-white: #535048;
-	--oasis-terminal-yellow: #645e1f;
+	--oasis-terminal-yellow: #645e22;
 	--oasis-theme-accent: #1c6c8d;
 	--oasis-theme-light-primary: #810404;
-	--oasis-theme-palette-primary-50: #FFEBEB;
-	--oasis-theme-palette-primary-100: #FFDCDC;
-	--oasis-theme-palette-primary-200: #FFCECE;
-	--oasis-theme-palette-primary-300: #FFC0C0;
-	--oasis-theme-palette-primary-400: #FFB0B0;
-	--oasis-theme-palette-primary-500: #FFA0A0;
-	--oasis-theme-palette-primary-600: #FF9090;
-	--oasis-theme-palette-primary-700: #FF8080;
-	--oasis-theme-palette-primary-800: #CC5959;
-	--oasis-theme-palette-primary-900: #803333;
 	--oasis-theme-primary: #990505;
 	--oasis-theme-secondary: #988710;
 	--oasis-theme-strong-primary: #b20606;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2b5667;
 	--oasis-ui-float-bg: #f5e0ef;
 	--oasis-ui-float-border-bg: #f5e0ef;
