--- a/extras/css/themes/light/2/oasis_starlight_light_2.css
+++ b/extras/css/themes/light/2/oasis_starlight_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6b717c;
 	--oasis-fg-strong: #55544c;
 	--oasis-git-add: #216010;
-	--oasis-git-change: #5d5509;
+	--oasis-git-change: #5d540c;
 	--oasis-git-delete: #ac0000;
 	--oasis-syntax-bracket: #6f6f87;
 	--oasis-syntax-builtinConst: #5a606d;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #135d9c;
 	--oasis-syntax-constant: #454544;
 	--oasis-syntax-delimiter: #22639c;
-	--oasis-syntax-exception: #b42c2f;
+	--oasis-syntax-exception: #be151c;
 	--oasis-syntax-func: #8b490f;
 	--oasis-syntax-identifier: #346960;
 	--oasis-syntax-operator: #be151c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7a470c;
 	--oasis-terminal-bright-yellow: #8d5115;
 	--oasis-terminal-color0: #545454;
-	--oasis-terminal-color1: #b62929;
+	--oasis-terminal-color1: #bf1313;
 	--oasis-terminal-color10: #366c27;
 	--oasis-terminal-color11: #8d5115;
 	--oasis-terminal-color12: #256781;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356961;
 	--oasis-terminal-color15: #7a470c;
 	--oasis-terminal-color2: #306b4b;
-	--oasis-terminal-color3: #686120;
+	--oasis-terminal-color3: #686123;
 	--oasis-terminal-color4: #1561ac;
 	--oasis-terminal-color5: #7e2edd;
 	--oasis-terminal-color6: #366863;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #366863;
 	--oasis-terminal-green: #306b4b;
 	--oasis-terminal-magenta: #7e2edd;
-	--oasis-terminal-red: #b62929;
+	--oasis-terminal-red: #bf1313;
 	--oasis-terminal-white: #56544b;
-	--oasis-terminal-yellow: #686120;
+	--oasis-terminal-yellow: #686123;
 	--oasis-theme-accent: #9c540c;
 	--oasis-theme-light-primary: #16556f;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #075b98;
 	--oasis-theme-secondary: #918517;
 	--oasis-theme-strong-primary: #076ab0;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d596b;
 	--oasis-ui-float-bg: #f5efe0;
 	--oasis-ui-float-border-bg: #f5efe0;
