--- a/extras/css/themes/light/2/oasis_twilight_light_2.css
+++ b/extras/css/themes/light/2/oasis_twilight_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6f6a7c;
 	--oasis-fg-strong: #59428b;
 	--oasis-git-add: #1f5b0f;
-	--oasis-git-change: #585009;
+	--oasis-git-change: #58500b;
 	--oasis-git-delete: #a40000;
 	--oasis-syntax-bracket: #6a6a81;
 	--oasis-syntax-builtinConst: #555c68;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #7717d4;
 	--oasis-syntax-constant: #414140;
 	--oasis-syntax-delimiter: #7839bb;
-	--oasis-syntax-exception: #ae262b;
+	--oasis-syntax-exception: #b02328;
 	--oasis-syntax-func: #84460e;
 	--oasis-syntax-identifier: #32645c;
 	--oasis-syntax-operator: #b6141b;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #75440b;
 	--oasis-terminal-bright-yellow: #874d14;
 	--oasis-terminal-color0: #4f4f4f;
-	--oasis-terminal-color1: #ae2727;
+	--oasis-terminal-color1: #b71212;
 	--oasis-terminal-color10: #346725;
 	--oasis-terminal-color11: #874d14;
 	--oasis-terminal-color12: #23627b;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33645c;
 	--oasis-terminal-color15: #75440b;
 	--oasis-terminal-color2: #2e6648;
-	--oasis-terminal-color3: #635d1f;
+	--oasis-terminal-color3: #635d21;
 	--oasis-terminal-color4: #145ca5;
 	--oasis-terminal-color5: #7925dc;
 	--oasis-terminal-color6: #33645e;
@@ -76,23 +76,13 @@
 	--oasis-terminal-cyan: #33645e;
 	--oasis-terminal-green: #2e6648;
 	--oasis-terminal-magenta: #7925dc;
-	--oasis-terminal-red: #ae2727;
+	--oasis-terminal-red: #b71212;
 	--oasis-terminal-white: #524f47;
-	--oasis-terminal-yellow: #635d1f;
+	--oasis-terminal-yellow: #635d21;
 	--oasis-theme-accent: #258353;
 	--oasis-theme-light-primary: #3c0481;
-	--oasis-theme-palette-primary-50: #F4EEFF;
-	--oasis-theme-palette-primary-100: #EEDDFF;
-	--oasis-theme-palette-primary-200: #DEC2FF;
-	--oasis-theme-palette-primary-300: #D2ADFF;
-	--oasis-theme-palette-primary-400: #C695FF;
-	--oasis-theme-palette-primary-500: #C28EFF;
-	--oasis-theme-palette-primary-600: #A870F0;
-	--oasis-theme-palette-primary-700: #9C5FEB;
-	--oasis-theme-palette-primary-800: #8F4FE6;
-	--oasis-theme-palette-primary-900: #7033CC;
 	--oasis-theme-primary: #490599;
-	--oasis-theme-secondary: #958814;
+	--oasis-theme-secondary: #928417;
 	--oasis-theme-strong-primary: #5316a2;
 	--oasis-ui-border: #6732a6;
 	--oasis-ui-cursorLine: #e5e0f5;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2a5566;
 	--oasis-ui-float-bg: #e5e0f5;
 	--oasis-ui-float-border-bg: #e5e0f5;
