--- a/extras/css/themes/light/3/oasis_abyss_light_3.css
+++ b/extras/css/themes/light/3/oasis_abyss_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #5f6b6e;
 	--oasis-fg-strong: #6f402f;
 	--oasis-git-add: #1e570e;
-	--oasis-git-change: #544d09;
+	--oasis-git-change: #544d0b;
 	--oasis-git-delete: #9d0000;
 	--oasis-syntax-bracket: #636975;
 	--oasis-syntax-builtinConst: #535864;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #9d3236;
 	--oasis-syntax-regex: #2d641e;
 	--oasis-syntax-special: #88470f;
-	--oasis-syntax-statement: #aa2126;
+	--oasis-syntax-statement: #ab1e22;
 	--oasis-syntax-string: #245d3f;
 	--oasis-syntax-type: #2f5a55;
 	--oasis-terminal-black: #4c4c4c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #70410b;
 	--oasis-terminal-bright-yellow: #824a14;
 	--oasis-terminal-color0: #4c4c4c;
-	--oasis-terminal-color1: #a72626;
+	--oasis-terminal-color1: #b01212;
 	--oasis-terminal-color10: #326324;
 	--oasis-terminal-color11: #824a14;
 	--oasis-terminal-color12: #225f77;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #316059;
 	--oasis-terminal-color15: #70410b;
 	--oasis-terminal-color2: #2c6245;
-	--oasis-terminal-color3: #60591d;
+	--oasis-terminal-color3: #605920;
 	--oasis-terminal-color4: #13599e;
 	--oasis-terminal-color5: #7523d5;
 	--oasis-terminal-color6: #32605a;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #32605a;
 	--oasis-terminal-green: #2c6245;
 	--oasis-terminal-magenta: #7523d5;
-	--oasis-terminal-red: #a72626;
+	--oasis-terminal-red: #b01212;
 	--oasis-terminal-white: #4f4c44;
-	--oasis-terminal-yellow: #60591d;
+	--oasis-terminal-yellow: #605920;
 	--oasis-theme-accent: #366860;
 	--oasis-theme-light-primary: #6a1010;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #801414;
+	--oasis-theme-primary: #910303;
 	--oasis-theme-secondary: #944f0a;
 	--oasis-theme-strong-primary: #8e1f1f;
-	--oasis-ui-border: #842f2f;
+	--oasis-ui-border: #902323;
 	--oasis-ui-cursorLine: #f5ddc7;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #285162;
 	--oasis-ui-float-bg: #f5ddc7;
 	--oasis-ui-float-border-bg: #f5ddc7;
-	--oasis-ui-float-border-fg: #842f2f;
-	--oasis-ui-float-fg: #842f2f;
-	--oasis-ui-float-title: #842f2f;
+	--oasis-ui-float-border-fg: #902323;
+	--oasis-ui-float-fg: #902323;
+	--oasis-ui-float-title: #902323;
 	--oasis-ui-lineNumber: #6e421b;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #91837a;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #842f2f;
+	--oasis-ui-title: #902323;
 	--oasis-ui-visual-bg: #f0cead;
 	--oasis-ui-visual-fg: none;
 }
