--- a/extras/css/themes/light/3/oasis_canyon_light_3.css
+++ b/extras/css/themes/light/3/oasis_canyon_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #78665a;
 	--oasis-fg-strong: #69452d;
 	--oasis-git-add: #1e590f;
-	--oasis-git-change: #554e09;
+	--oasis-git-change: #554e0b;
 	--oasis-git-delete: #9f0000;
 	--oasis-syntax-bracket: #646976;
 	--oasis-syntax-builtinConst: #545965;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #80430e;
 	--oasis-syntax-constant: #3e3e3d;
 	--oasis-syntax-delimiter: #834b1b;
-	--oasis-syntax-exception: #a9252a;
+	--oasis-syntax-exception: #ab2126;
 	--oasis-syntax-func: #764a0d;
 	--oasis-syntax-identifier: #33615a;
 	--oasis-syntax-operator: #b11319;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #71420b;
 	--oasis-terminal-bright-yellow: #834b14;
 	--oasis-terminal-color0: #4d4d4d;
-	--oasis-terminal-color1: #a92626;
+	--oasis-terminal-color1: #b21212;
 	--oasis-terminal-color10: #326424;
 	--oasis-terminal-color11: #834b14;
 	--oasis-terminal-color12: #225f77;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #31615a;
 	--oasis-terminal-color15: #71420b;
 	--oasis-terminal-color2: #2c6346;
-	--oasis-terminal-color3: #615a1e;
+	--oasis-terminal-color3: #615a20;
 	--oasis-terminal-color4: #145aa0;
 	--oasis-terminal-color5: #7623d7;
 	--oasis-terminal-color6: #32615b;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #32615b;
 	--oasis-terminal-green: #2c6346;
 	--oasis-terminal-magenta: #7623d7;
-	--oasis-terminal-red: #a92626;
+	--oasis-terminal-red: #b21212;
 	--oasis-terminal-white: #504d45;
-	--oasis-terminal-yellow: #615a1e;
+	--oasis-terminal-yellow: #615a20;
 	--oasis-theme-accent: #227c4e;
 	--oasis-theme-light-primary: #734a08;
-	--oasis-theme-palette-primary-50: #FFE7CC;
-	--oasis-theme-palette-primary-100: #FFD7AD;
-	--oasis-theme-palette-primary-200: #FFC78F;
-	--oasis-theme-palette-primary-300: #FFB870;
-	--oasis-theme-palette-primary-400: #FFA852;
-	--oasis-theme-palette-primary-500: #FFA247;
-	--oasis-theme-palette-primary-600: #FF8A1F;
-	--oasis-theme-palette-primary-700: #E67200;
-	--oasis-theme-palette-primary-800: #B35A00;
-	--oasis-theme-palette-primary-900: #804000;
 	--oasis-theme-primary: #914a03;
 	--oasis-theme-secondary: #196685;
 	--oasis-theme-strong-primary: #aa5603;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #295263;
 	--oasis-ui-float-bg: #f5e0c7;
 	--oasis-ui-float-border-bg: #f5e0c7;
