--- a/extras/css/themes/light/3/oasis_desert_light_3.css
+++ b/extras/css/themes/light/3/oasis_desert_light_3.css
@@ -19,22 +19,22 @@
 	--oasis-diff-change: #4d4d4d;
 	--oasis-diff-delete: #713f3f;
 	--oasis-diff-text: #6c432b;
-	--oasis-fg-comment: #65747c;
+	--oasis-fg-comment: #61757f;
 	--oasis-fg-core: #5a4a38;
 	--oasis-fg-dim: #8f847d;
 	--oasis-fg-muted: #606b70;
 	--oasis-fg-strong: #564b42;
 	--oasis-git-add: #1e590f;
-	--oasis-git-change: #554e09;
+	--oasis-git-change: #554e0b;
 	--oasis-git-delete: #9f0000;
 	--oasis-syntax-bracket: #636a78;
 	--oasis-syntax-builtinConst: #515967;
 	--oasis-syntax-builtinFunc: #8d450f;
 	--oasis-syntax-builtinVar: #58595a;
-	--oasis-syntax-comment: #596c7b;
+	--oasis-syntax-comment: #506d80;
 	--oasis-syntax-conditional: #595529;
 	--oasis-syntax-constant: #3e3e3d;
-	--oasis-syntax-delimiter: #8a4347;
+	--oasis-syntax-delimiter: #aa2328;
 	--oasis-syntax-exception: #af1a13;
 	--oasis-syntax-func: #754a0d;
 	--oasis-syntax-identifier: #31615a;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #71420b;
 	--oasis-terminal-bright-yellow: #834b14;
 	--oasis-terminal-color0: #4d4d4d;
-	--oasis-terminal-color1: #a92626;
+	--oasis-terminal-color1: #b21212;
 	--oasis-terminal-color10: #326424;
 	--oasis-terminal-color11: #834b14;
 	--oasis-terminal-color12: #225f77;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #31615a;
 	--oasis-terminal-color15: #71420b;
 	--oasis-terminal-color2: #2c6346;
-	--oasis-terminal-color3: #615a1e;
+	--oasis-terminal-color3: #615a20;
 	--oasis-terminal-color4: #145aa0;
 	--oasis-terminal-color5: #7623d7;
 	--oasis-terminal-color6: #32615b;
@@ -76,25 +76,17 @@
 	--oasis-terminal-cyan: #32615b;
 	--oasis-terminal-green: #2c6346;
 	--oasis-terminal-magenta: #7623d7;
-	--oasis-terminal-red: #a92626;
+	--oasis-terminal-red: #b21212;
 	--oasis-terminal-white: #504d45;
-	--oasis-terminal-yellow: #615a1e;
+	--oasis-terminal-yellow: #615a20;
 	--oasis-theme-accent: #196685;
-	--oasis-theme-light-primary: #780202;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
-	--oasis-theme-primary: #801414;
-	--oasis-theme-secondary: #897e15;
-	--oasis-theme-strong-primary: #832b2b;
-	--oasis-ui-border: #863030;
+	--oasis-theme-light-primary: #6b6110;
+	--oasis-theme-primary: #817613;
+	--oasis-theme-secondary: #9b0303;
+	--oasis-theme-secondary-light: #780c02;
+	--oasis-theme-secondary-strong: #832b2b;
+	--oasis-theme-strong-primary: #7e782f;
+	--oasis-ui-border: #912323;
 	--oasis-ui-cursorLine: #f5e0c7;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +96,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #295263;
 	--oasis-ui-float-bg: #f5e0c7;
 	--oasis-ui-float-border-bg: #f5e0c7;
-	--oasis-ui-float-border-fg: #863030;
-	--oasis-ui-float-fg: #863030;
-	--oasis-ui-float-title: #863030;
+	--oasis-ui-float-border-fg: #912323;
+	--oasis-ui-float-fg: #912323;
+	--oasis-ui-float-title: #912323;
 	--oasis-ui-lineNumber: #6d431a;
 	--oasis-ui-match-bg: #dd986f;
 	--oasis-ui-match-fg: #351908;
 	--oasis-ui-nontext: #908479;
 	--oasis-ui-search-bg: #dacfa4;
 	--oasis-ui-search-fg: #473c15;
-	--oasis-ui-title: #863030;
+	--oasis-ui-title: #912323;
 	--oasis-ui-visual-bg: #f0d1ad;
 	--oasis-ui-visual-fg: none;
 }
