--- a/extras/css/themes/light/3/oasis_dune_light_3.css
+++ b/extras/css/themes/light/3/oasis_dune_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #756c62;
 	--oasis-fg-strong: #535136;
 	--oasis-git-add: #205c0f;
-	--oasis-git-change: #595109;
+	--oasis-git-change: #59510c;
 	--oasis-git-delete: #a50000;
 	--oasis-syntax-bracket: #666d7c;
 	--oasis-syntax-builtinConst: #555c6c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #76440b;
 	--oasis-terminal-bright-yellow: #884e14;
 	--oasis-terminal-color0: #505050;
-	--oasis-terminal-color1: #af2828;
+	--oasis-terminal-color1: #b81313;
 	--oasis-terminal-color10: #346826;
 	--oasis-terminal-color11: #884e14;
 	--oasis-terminal-color12: #23637c;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33645d;
 	--oasis-terminal-color15: #76440b;
 	--oasis-terminal-color2: #2e6749;
-	--oasis-terminal-color3: #645d1f;
+	--oasis-terminal-color3: #645d21;
 	--oasis-terminal-color4: #145da6;
 	--oasis-terminal-color5: #7a27db;
 	--oasis-terminal-color6: #34645e;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #34645e;
 	--oasis-terminal-green: #2e6749;
 	--oasis-terminal-magenta: #7a27db;
-	--oasis-terminal-red: #af2828;
+	--oasis-terminal-red: #b81313;
 	--oasis-terminal-white: #535048;
-	--oasis-terminal-yellow: #645d1f;
+	--oasis-terminal-yellow: #645d21;
 	--oasis-theme-accent: #227c4d;
 	--oasis-theme-light-primary: #6b6110;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
 	--oasis-theme-primary: #6c6628;
 	--oasis-theme-secondary: #366838;
 	--oasis-theme-strong-primary: #777237;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2b5567;
 	--oasis-ui-float-bg: #f0ead1;
 	--oasis-ui-float-border-bg: #f0ead1;
