--- a/extras/css/themes/light/3/oasis_lagoon_light_3.css
+++ b/extras/css/themes/light/3/oasis_lagoon_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #566975;
 	--oasis-fg-strong: #3c4c59;
 	--oasis-git-add: #1d550e;
-	--oasis-git-change: #514a08;
+	--oasis-git-change: #524a0b;
 	--oasis-git-delete: #990000;
 	--oasis-syntax-bracket: #616673;
 	--oasis-syntax-builtinConst: #515661;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #11528c;
 	--oasis-syntax-constant: #3b3b3a;
 	--oasis-syntax-delimiter: #1e598a;
-	--oasis-syntax-exception: #a62025;
+	--oasis-syntax-exception: #a71e21;
 	--oasis-syntax-func: #7c410e;
 	--oasis-syntax-identifier: #2f5e57;
 	--oasis-syntax-operator: #ac1318;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6c3f0b;
 	--oasis-terminal-bright-yellow: #7e4813;
 	--oasis-terminal-color0: #4a4a4a;
-	--oasis-terminal-color1: #a32525;
+	--oasis-terminal-color1: #ac1111;
 	--oasis-terminal-color10: #306023;
 	--oasis-terminal-color11: #7e4813;
 	--oasis-terminal-color12: #215c74;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2f5d57;
 	--oasis-terminal-color15: #6c3f0b;
 	--oasis-terminal-color2: #2b6044;
-	--oasis-terminal-color3: #5d571c;
+	--oasis-terminal-color3: #5d571f;
 	--oasis-terminal-color4: #13579a;
 	--oasis-terminal-color5: #7222cf;
 	--oasis-terminal-color6: #315d58;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #315d58;
 	--oasis-terminal-green: #2b6044;
 	--oasis-terminal-magenta: #7222cf;
-	--oasis-terminal-red: #a32525;
+	--oasis-terminal-red: #ac1111;
 	--oasis-terminal-white: #4d4a42;
-	--oasis-terminal-yellow: #5d571c;
+	--oasis-terminal-yellow: #5d571f;
 	--oasis-theme-accent: #9b0303;
 	--oasis-theme-light-primary: #044577;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #05558f;
 	--oasis-theme-secondary: #944f0a;
 	--oasis-theme-strong-primary: #0565a8;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #274f5f;
 	--oasis-ui-float-bg: #ccdcf4;
 	--oasis-ui-float-border-bg: #ccdcf4;
