--- a/extras/css/themes/light/3/oasis_mirage_light_3.css
+++ b/extras/css/themes/light/3/oasis_mirage_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #62706f;
 	--oasis-fg-strong: #3c5651;
 	--oasis-git-add: #205d0f;
-	--oasis-git-change: #595209;
+	--oasis-git-change: #59520c;
 	--oasis-git-delete: #a60000;
 	--oasis-syntax-bracket: #666e7d;
 	--oasis-syntax-builtinConst: #565d6d;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #76450c;
 	--oasis-terminal-bright-yellow: #894e15;
 	--oasis-terminal-color0: #505050;
-	--oasis-terminal-color1: #b02828;
+	--oasis-terminal-color1: #b91313;
 	--oasis-terminal-color10: #346926;
 	--oasis-terminal-color11: #894e15;
 	--oasis-terminal-color12: #24647d;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33655e;
 	--oasis-terminal-color15: #76450c;
 	--oasis-terminal-color2: #2e6749;
-	--oasis-terminal-color3: #655e1f;
+	--oasis-terminal-color3: #655e21;
 	--oasis-terminal-color4: #145ea7;
 	--oasis-terminal-color5: #7b28dc;
 	--oasis-terminal-color6: #34655f;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #34655f;
 	--oasis-terminal-green: #2e6749;
 	--oasis-terminal-magenta: #7b28dc;
-	--oasis-terminal-red: #b02828;
+	--oasis-terminal-red: #b91313;
 	--oasis-terminal-white: #535048;
-	--oasis-terminal-yellow: #655e1f;
+	--oasis-terminal-yellow: #655e21;
 	--oasis-theme-accent: #49039b;
 	--oasis-theme-light-primary: #25564f;
-	--oasis-theme-palette-primary-50: #DEF8F4;
-	--oasis-theme-palette-primary-100: #CCEFE9;
-	--oasis-theme-palette-primary-200: #BAE6DF;
-	--oasis-theme-palette-primary-300: #A8DDD5;
-	--oasis-theme-palette-primary-400: #96D4CB;
-	--oasis-theme-palette-primary-500: #8FD1C7;
-	--oasis-theme-palette-primary-600: #81C0B6;
-	--oasis-theme-palette-primary-700: #5ABAAE;
-	--oasis-theme-palette-primary-800: #47A99B;
-	--oasis-theme-palette-primary-900: #2A5E56;
 	--oasis-theme-primary: #32625a;
 	--oasis-theme-secondary: #944f0a;
 	--oasis-theme-strong-primary: #357970;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2b5667;
 	--oasis-ui-float-bg: #cff2f2;
 	--oasis-ui-float-border-bg: #cff2f2;
