--- a/extras/css/themes/light/3/oasis_rose_light_3.css
+++ b/extras/css/themes/light/3/oasis_rose_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #70626b;
 	--oasis-fg-strong: #5f4056;
 	--oasis-git-add: #1d550e;
-	--oasis-git-change: #514a08;
+	--oasis-git-change: #514a0b;
 	--oasis-git-delete: #980000;
 	--oasis-syntax-bracket: #616672;
 	--oasis-syntax-builtinConst: #515661;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6c3f0b;
 	--oasis-terminal-bright-yellow: #7e4813;
 	--oasis-terminal-color0: #494949;
-	--oasis-terminal-color1: #a22525;
+	--oasis-terminal-color1: #ab1111;
 	--oasis-terminal-color10: #306023;
 	--oasis-terminal-color11: #7e4813;
 	--oasis-terminal-color12: #215c73;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2f5d57;
 	--oasis-terminal-color15: #6c3f0b;
 	--oasis-terminal-color2: #2b5f43;
-	--oasis-terminal-color3: #5d571c;
+	--oasis-terminal-color3: #5d561f;
 	--oasis-terminal-color4: #13569a;
 	--oasis-terminal-color5: #7122cf;
 	--oasis-terminal-color6: #305d57;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #305d57;
 	--oasis-terminal-green: #2b5f43;
 	--oasis-terminal-magenta: #7122cf;
-	--oasis-terminal-red: #a22525;
+	--oasis-terminal-red: #ab1111;
 	--oasis-terminal-white: #4c4942;
-	--oasis-terminal-yellow: #5d571c;
+	--oasis-terminal-yellow: #5d561f;
 	--oasis-theme-accent: #196685;
 	--oasis-theme-light-primary: #780202;
-	--oasis-theme-palette-primary-50: #FFEBEB;
-	--oasis-theme-palette-primary-100: #FFDCDC;
-	--oasis-theme-palette-primary-200: #FFCECE;
-	--oasis-theme-palette-primary-300: #FFC0C0;
-	--oasis-theme-palette-primary-400: #FFB0B0;
-	--oasis-theme-palette-primary-500: #FFA0A0;
-	--oasis-theme-palette-primary-600: #FF9090;
-	--oasis-theme-palette-primary-700: #FF8080;
-	--oasis-theme-palette-primary-800: #CC5959;
-	--oasis-theme-palette-primary-900: #803333;
 	--oasis-theme-primary: #910303;
 	--oasis-theme-secondary: #90800e;
 	--oasis-theme-strong-primary: #aa0303;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #274e5e;
 	--oasis-ui-float-bg: #f0d1e8;
 	--oasis-ui-float-border-bg: #f0d1e8;
