--- a/extras/css/themes/light/3/oasis_sol_light_3.css
+++ b/extras/css/themes/light/3/oasis_sol_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #70605e;
 	--oasis-fg-strong: #6e382f;
 	--oasis-git-add: #1c520d;
-	--oasis-git-change: #4f4808;
+	--oasis-git-change: #4f480a;
 	--oasis-git-delete: #940000;
 	--oasis-syntax-bracket: #5e636f;
 	--oasis-syntax-builtinConst: #4e535e;
@@ -34,7 +34,7 @@
 	--oasis-syntax-comment: #765e5c;
 	--oasis-syntax-conditional: #9c1116;
 	--oasis-syntax-constant: #383837;
-	--oasis-syntax-delimiter: #923135;
+	--oasis-syntax-delimiter: #a02126;
 	--oasis-syntax-exception: #5d5317;
 	--oasis-syntax-func: #783f0d;
 	--oasis-syntax-identifier: #2f5a54;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #683d0a;
 	--oasis-terminal-bright-yellow: #7b4612;
 	--oasis-terminal-color0: #474747;
-	--oasis-terminal-color1: #9e2424;
+	--oasis-terminal-color1: #a71111;
 	--oasis-terminal-color10: #2f5e22;
 	--oasis-terminal-color11: #7b4612;
 	--oasis-terminal-color12: #205970;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2e5b54;
 	--oasis-terminal-color15: #683d0a;
 	--oasis-terminal-color2: #295d41;
-	--oasis-terminal-color3: #5a541c;
+	--oasis-terminal-color3: #5b541e;
 	--oasis-terminal-color4: #125496;
 	--oasis-terminal-color5: #6e21c9;
 	--oasis-terminal-color6: #2f5a55;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2f5a55;
 	--oasis-terminal-green: #295d41;
 	--oasis-terminal-magenta: #6e21c9;
-	--oasis-terminal-red: #9e2424;
+	--oasis-terminal-red: #a71111;
 	--oasis-terminal-white: #4a4740;
-	--oasis-terminal-yellow: #5a541c;
+	--oasis-terminal-yellow: #5b541e;
 	--oasis-theme-accent: #055b99;
-	--oasis-theme-light-primary: #6a1010;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #801414;
+	--oasis-theme-light-primary: #780202;
+	--oasis-theme-primary: #910303;
 	--oasis-theme-secondary: #944f0a;
 	--oasis-theme-strong-primary: #8e1f1f;
-	--oasis-ui-border: #7c2c2c;
+	--oasis-ui-border: #872121;
 	--oasis-ui-cursorLine: #f5cec7;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #264c5b;
 	--oasis-ui-float-bg: #f5cec7;
 	--oasis-ui-float-border-bg: #f5cec7;
-	--oasis-ui-float-border-fg: #7c2c2c;
-	--oasis-ui-float-fg: #7c2c2c;
-	--oasis-ui-float-title: #7c2c2c;
+	--oasis-ui-float-border-fg: #872121;
+	--oasis-ui-float-fg: #872121;
+	--oasis-ui-float-title: #872121;
 	--oasis-ui-lineNumber: #5c431a;
 	--oasis-ui-match-bg: #7ad1a7;
 	--oasis-ui-match-fg: #0d311f;
 	--oasis-ui-nontext: #808080;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #7c2c2c;
+	--oasis-ui-title: #872121;
 	--oasis-ui-visual-bg: #f0b7ad;
 	--oasis-ui-visual-fg: none;
 }
