--- a/extras/css/themes/light/3/oasis_starlight_light_3.css
+++ b/extras/css/themes/light/3/oasis_starlight_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #656d76;
 	--oasis-fg-strong: #524f49;
 	--oasis-git-add: #1f5b0f;
-	--oasis-git-change: #585009;
+	--oasis-git-change: #58500b;
 	--oasis-git-delete: #a40000;
 	--oasis-syntax-bracket: #6c6a81;
 	--oasis-syntax-builtinConst: #565b67;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #125895;
 	--oasis-syntax-constant: #41413f;
 	--oasis-syntax-delimiter: #205e93;
-	--oasis-syntax-exception: #ab2a2e;
+	--oasis-syntax-exception: #b61419;
 	--oasis-syntax-func: #84460e;
 	--oasis-syntax-identifier: #32645c;
 	--oasis-syntax-operator: #b61419;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #74440b;
 	--oasis-terminal-bright-yellow: #874d14;
 	--oasis-terminal-color0: #4f4f4f;
-	--oasis-terminal-color1: #ad2727;
+	--oasis-terminal-color1: #b71212;
 	--oasis-terminal-color10: #336725;
 	--oasis-terminal-color11: #874d14;
 	--oasis-terminal-color12: #23627b;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33645d;
 	--oasis-terminal-color15: #74440b;
 	--oasis-terminal-color2: #2e6648;
-	--oasis-terminal-color3: #635c1e;
+	--oasis-terminal-color3: #645d21;
 	--oasis-terminal-color4: #145ca4;
 	--oasis-terminal-color5: #7925db;
 	--oasis-terminal-color6: #34635d;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #34635d;
 	--oasis-terminal-green: #2e6648;
 	--oasis-terminal-magenta: #7925db;
-	--oasis-terminal-red: #ad2727;
+	--oasis-terminal-red: #b71212;
 	--oasis-terminal-white: #524f47;
-	--oasis-terminal-yellow: #635c1e;
+	--oasis-terminal-yellow: #645d21;
 	--oasis-theme-accent: #944f0a;
 	--oasis-theme-light-primary: #134f67;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #05558f;
 	--oasis-theme-secondary: #897e15;
 	--oasis-theme-strong-primary: #0565a8;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2a5466;
 	--oasis-ui-float-bg: #f0e7d1;
 	--oasis-ui-float-border-bg: #f0e7d1;
