--- a/extras/css/themes/light/3/oasis_twilight_light_3.css
+++ b/extras/css/themes/light/3/oasis_twilight_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #666174;
 	--oasis-fg-strong: #503b7d;
 	--oasis-git-add: #1c520d;
-	--oasis-git-change: #4f4808;
+	--oasis-git-change: #4f480a;
 	--oasis-git-delete: #940000;
 	--oasis-syntax-bracket: #636177;
 	--oasis-syntax-builtinConst: #4f535e;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #6d15c1;
 	--oasis-syntax-constant: #393938;
 	--oasis-syntax-delimiter: #6d35a9;
-	--oasis-syntax-exception: #9f2328;
+	--oasis-syntax-exception: #a11f24;
 	--oasis-syntax-func: #783f0d;
 	--oasis-syntax-identifier: #2e5b54;
 	--oasis-syntax-operator: #a71217;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #693d0a;
 	--oasis-terminal-bright-yellow: #7b4612;
 	--oasis-terminal-color0: #474747;
-	--oasis-terminal-color1: #9e2424;
+	--oasis-terminal-color1: #a71111;
 	--oasis-terminal-color10: #2f5e22;
 	--oasis-terminal-color11: #7b4612;
 	--oasis-terminal-color12: #205970;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2e5b54;
 	--oasis-terminal-color15: #693d0a;
 	--oasis-terminal-color2: #2a5d42;
-	--oasis-terminal-color3: #5b551c;
+	--oasis-terminal-color3: #5b541e;
 	--oasis-terminal-color4: #125496;
 	--oasis-terminal-color5: #6f21ca;
 	--oasis-terminal-color6: #2f5b55;
@@ -76,23 +76,13 @@
 	--oasis-terminal-cyan: #2f5b55;
 	--oasis-terminal-green: #2a5d42;
 	--oasis-terminal-magenta: #6f21ca;
-	--oasis-terminal-red: #9e2424;
+	--oasis-terminal-red: #a71111;
 	--oasis-terminal-white: #4a4740;
-	--oasis-terminal-yellow: #5b551c;
+	--oasis-terminal-yellow: #5b541e;
 	--oasis-theme-accent: #227c4e;
 	--oasis-theme-light-primary: #370278;
-	--oasis-theme-palette-primary-50: #F4EEFF;
-	--oasis-theme-palette-primary-100: #EEDDFF;
-	--oasis-theme-palette-primary-200: #DEC2FF;
-	--oasis-theme-palette-primary-300: #D2ADFF;
-	--oasis-theme-palette-primary-400: #C695FF;
-	--oasis-theme-palette-primary-500: #C28EFF;
-	--oasis-theme-palette-primary-600: #A870F0;
-	--oasis-theme-palette-primary-700: #9C5FEB;
-	--oasis-theme-palette-primary-800: #8F4FE6;
-	--oasis-theme-palette-primary-900: #7033CC;
 	--oasis-theme-primary: #440391;
-	--oasis-theme-secondary: #8d8111;
+	--oasis-theme-secondary: #8a7d14;
 	--oasis-theme-strong-primary: #4e139a;
 	--oasis-ui-border: #5d2c96;
 	--oasis-ui-cursorLine: #d8d1f0;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #264c5c;
 	--oasis-ui-float-bg: #d8d1f0;
 	--oasis-ui-float-border-bg: #d8d1f0;
