--- a/extras/css/themes/light/4/oasis_abyss_light_4.css
+++ b/extras/css/themes/light/4/oasis_abyss_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #5b666b;
 	--oasis-fg-strong: #693c2c;
 	--oasis-git-add: #1d530e;
-	--oasis-git-change: #504908;
+	--oasis-git-change: #50490a;
 	--oasis-git-delete: #960000;
 	--oasis-syntax-bracket: #5e6570;
 	--oasis-syntax-builtinConst: #4f5460;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #972f32;
 	--oasis-syntax-regex: #2b5f1d;
 	--oasis-syntax-special: #81440e;
-	--oasis-syntax-statement: #a22024;
+	--oasis-syntax-statement: #a41c20;
 	--oasis-syntax-string: #22583c;
 	--oasis-syntax-type: #2d5550;
 	--oasis-terminal-black: #484848;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #693e0b;
 	--oasis-terminal-bright-yellow: #7c4712;
 	--oasis-terminal-color0: #484848;
-	--oasis-terminal-color1: #a02424;
+	--oasis-terminal-color1: #a91111;
 	--oasis-terminal-color10: #305e23;
 	--oasis-terminal-color11: #7c4712;
 	--oasis-terminal-color12: #205a71;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2f5c55;
 	--oasis-terminal-color15: #693e0b;
 	--oasis-terminal-color2: #2a5e42;
-	--oasis-terminal-color3: #5b551c;
+	--oasis-terminal-color3: #5b551f;
 	--oasis-terminal-color4: #125597;
 	--oasis-terminal-color5: #7021cc;
 	--oasis-terminal-color6: #2f5b55;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2f5b55;
 	--oasis-terminal-green: #2a5e42;
 	--oasis-terminal-magenta: #7021cc;
-	--oasis-terminal-red: #a02424;
+	--oasis-terminal-red: #a91111;
 	--oasis-terminal-white: #4a4841;
-	--oasis-terminal-yellow: #5b551c;
+	--oasis-terminal-yellow: #5b551f;
 	--oasis-theme-accent: #32625a;
 	--oasis-theme-light-primary: #620e0e;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #791111;
+	--oasis-theme-primary: #880101;
 	--oasis-theme-secondary: #8c4908;
 	--oasis-theme-strong-primary: #871c1c;
-	--oasis-ui-border: #7e2d2d;
+	--oasis-ui-border: #882121;
 	--oasis-ui-cursorLine: #f3d5ba;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #264d5d;
 	--oasis-ui-float-bg: #f3d5ba;
 	--oasis-ui-float-border-bg: #f3d5ba;
-	--oasis-ui-float-border-fg: #7e2d2d;
-	--oasis-ui-float-fg: #7e2d2d;
-	--oasis-ui-float-title: #7e2d2d;
+	--oasis-ui-float-border-fg: #882121;
+	--oasis-ui-float-fg: #882121;
+	--oasis-ui-float-title: #882121;
 	--oasis-ui-lineNumber: #673e19;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #8c7e74;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #7e2d2d;
+	--oasis-ui-title: #882121;
 	--oasis-ui-visual-bg: #eec5a0;
 	--oasis-ui-visual-fg: none;
 }
