--- a/extras/css/themes/light/4/oasis_cactus_light_4.css
+++ b/extras/css/themes/light/4/oasis_cactus_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #626d64;
 	--oasis-fg-strong: #3b5340;
 	--oasis-git-add: #1e590f;
-	--oasis-git-change: #554e09;
+	--oasis-git-change: #554e0b;
 	--oasis-git-delete: #9f0000;
 	--oasis-syntax-bracket: #646a79;
 	--oasis-syntax-builtinConst: #535968;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #71420b;
 	--oasis-terminal-bright-yellow: #844b14;
 	--oasis-terminal-color0: #4d4d4d;
-	--oasis-terminal-color1: #a92626;
+	--oasis-terminal-color1: #b31212;
 	--oasis-terminal-color10: #326425;
 	--oasis-terminal-color11: #844b14;
 	--oasis-terminal-color12: #226078;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #32615a;
 	--oasis-terminal-color15: #71420b;
 	--oasis-terminal-color2: #2c6446;
-	--oasis-terminal-color3: #615a1e;
+	--oasis-terminal-color3: #615a20;
 	--oasis-terminal-color4: #145aa0;
 	--oasis-terminal-color5: #7623d8;
 	--oasis-terminal-color6: #32615b;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #32615b;
 	--oasis-terminal-green: #2c6446;
 	--oasis-terminal-magenta: #7623d8;
-	--oasis-terminal-red: #a92626;
+	--oasis-terminal-red: #b31212;
 	--oasis-terminal-white: #504d45;
-	--oasis-terminal-yellow: #615a1e;
+	--oasis-terminal-yellow: #615a20;
 	--oasis-theme-accent: #920101;
 	--oasis-theme-light-primary: #264a27;
-	--oasis-theme-palette-primary-50: #DEF6E0;
-	--oasis-theme-palette-primary-100: #D2EED4;
-	--oasis-theme-palette-primary-200: #C6E6C8;
-	--oasis-theme-palette-primary-300: #BADEBC;
-	--oasis-theme-palette-primary-400: #AED6B0;
-	--oasis-theme-palette-primary-500: #A7D3A9;
-	--oasis-theme-palette-primary-600: #93C795;
-	--oasis-theme-palette-primary-700: #7FBB82;
-	--oasis-theme-palette-primary-800: #5A9C5D;
-	--oasis-theme-palette-primary-900: #355E37;
 	--oasis-theme-primary: #305a32;
 	--oasis-theme-secondary: #920101;
 	--oasis-theme-strong-primary: #396a3c;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #295263;
 	--oasis-ui-float-bg: #cbecd9;
 	--oasis-ui-float-border-bg: #cbecd9;
