--- a/extras/css/themes/light/4/oasis_canyon_light_4.css
+++ b/extras/css/themes/light/4/oasis_canyon_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #736256;
 	--oasis-fg-strong: #63412a;
 	--oasis-git-add: #1d540e;
-	--oasis-git-change: #504a08;
+	--oasis-git-change: #514a0b;
 	--oasis-git-delete: #970000;
 	--oasis-syntax-bracket: #5e6671;
 	--oasis-syntax-builtinConst: #505561;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #7b400d;
 	--oasis-syntax-constant: #3a3a39;
 	--oasis-syntax-delimiter: #7d471b;
-	--oasis-syntax-exception: #a12529;
+	--oasis-syntax-exception: #a32124;
 	--oasis-syntax-func: #70470c;
 	--oasis-syntax-identifier: #305c56;
 	--oasis-syntax-operator: #aa1218;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6b3e0b;
 	--oasis-terminal-bright-yellow: #7d4813;
 	--oasis-terminal-color0: #494949;
-	--oasis-terminal-color1: #a12424;
+	--oasis-terminal-color1: #aa1111;
 	--oasis-terminal-color10: #306023;
 	--oasis-terminal-color11: #7d4813;
 	--oasis-terminal-color12: #205b73;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2f5d56;
 	--oasis-terminal-color15: #6b3e0b;
 	--oasis-terminal-color2: #2a5f43;
-	--oasis-terminal-color3: #5c561c;
+	--oasis-terminal-color3: #5c561f;
 	--oasis-terminal-color4: #135699;
 	--oasis-terminal-color5: #7121cd;
 	--oasis-terminal-color6: #305c56;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #305c56;
 	--oasis-terminal-green: #2a5f43;
 	--oasis-terminal-magenta: #7121cd;
-	--oasis-terminal-red: #a12424;
+	--oasis-terminal-red: #aa1111;
 	--oasis-terminal-white: #4b4941;
-	--oasis-terminal-yellow: #5c561c;
+	--oasis-terminal-yellow: #5c561f;
 	--oasis-theme-accent: #1f7549;
 	--oasis-theme-light-primary: #6a4406;
-	--oasis-theme-palette-primary-50: #FFE7CC;
-	--oasis-theme-palette-primary-100: #FFD7AD;
-	--oasis-theme-palette-primary-200: #FFC78F;
-	--oasis-theme-palette-primary-300: #FFB870;
-	--oasis-theme-palette-primary-400: #FFA852;
-	--oasis-theme-palette-primary-500: #FFA247;
-	--oasis-theme-palette-primary-600: #FF8A1F;
-	--oasis-theme-palette-primary-700: #E67200;
-	--oasis-theme-palette-primary-800: #B35A00;
-	--oasis-theme-palette-primary-900: #804000;
 	--oasis-theme-primary: #884401;
 	--oasis-theme-secondary: #16607e;
 	--oasis-theme-strong-primary: #a25102;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #274e5e;
 	--oasis-ui-float-bg: #f3d8ba;
 	--oasis-ui-float-border-bg: #f3d8ba;
