--- a/extras/css/themes/light/4/oasis_dune_light_4.css
+++ b/extras/css/themes/light/4/oasis_dune_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #72685e;
 	--oasis-fg-strong: #504d34;
 	--oasis-git-add: #1e580e;
-	--oasis-git-change: #554d09;
+	--oasis-git-change: #554e0b;
 	--oasis-git-delete: #9f0000;
 	--oasis-syntax-bracket: #636979;
 	--oasis-syntax-builtinConst: #535868;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #70420b;
 	--oasis-terminal-bright-yellow: #834b13;
 	--oasis-terminal-color0: #4c4c4c;
-	--oasis-terminal-color1: #a92626;
+	--oasis-terminal-color1: #b21212;
 	--oasis-terminal-color10: #326425;
 	--oasis-terminal-color11: #834b13;
 	--oasis-terminal-color12: #225f78;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #316159;
 	--oasis-terminal-color15: #70420b;
 	--oasis-terminal-color2: #2c6346;
-	--oasis-terminal-color3: #605a1e;
+	--oasis-terminal-color3: #605a20;
 	--oasis-terminal-color4: #13599f;
 	--oasis-terminal-color5: #7623d7;
 	--oasis-terminal-color6: #32615a;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #32615a;
 	--oasis-terminal-green: #2c6346;
 	--oasis-terminal-magenta: #7623d7;
-	--oasis-terminal-red: #a92626;
+	--oasis-terminal-red: #b21212;
 	--oasis-terminal-white: #4f4d45;
-	--oasis-terminal-yellow: #605a1e;
+	--oasis-terminal-yellow: #605a20;
 	--oasis-theme-accent: #1f7548;
 	--oasis-theme-light-primary: #635a0d;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
 	--oasis-theme-primary: #656025;
 	--oasis-theme-secondary: #326234;
 	--oasis-theme-strong-primary: #706c33;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #295263;
 	--oasis-ui-float-bg: #ece3c5;
 	--oasis-ui-float-border-bg: #ece3c5;
