--- a/extras/css/themes/light/4/oasis_lagoon_light_4.css
+++ b/extras/css/themes/light/4/oasis_lagoon_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #51636e;
 	--oasis-fg-strong: #374652;
 	--oasis-git-add: #1b4e0d;
-	--oasis-git-change: #4b4508;
+	--oasis-git-change: #4b450a;
 	--oasis-git-delete: #8e0000;
 	--oasis-syntax-bracket: #5a616b;
 	--oasis-syntax-builtinConst: #4b505b;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #104d81;
 	--oasis-syntax-constant: #363535;
 	--oasis-syntax-delimiter: #1c5381;
-	--oasis-syntax-exception: #9a1f23;
+	--oasis-syntax-exception: #9c1b1f;
 	--oasis-syntax-func: #733c0d;
 	--oasis-syntax-identifier: #2c5751;
 	--oasis-syntax-operator: #a01117;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #643a0a;
 	--oasis-terminal-bright-yellow: #764312;
 	--oasis-terminal-color0: #444444;
-	--oasis-terminal-color1: #982222;
+	--oasis-terminal-color1: #a11010;
 	--oasis-terminal-color10: #2d5a21;
 	--oasis-terminal-color11: #764312;
 	--oasis-terminal-color12: #1f566c;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2c5751;
 	--oasis-terminal-color15: #643a0a;
 	--oasis-terminal-color2: #28593f;
-	--oasis-terminal-color3: #57511b;
+	--oasis-terminal-color3: #57511d;
 	--oasis-terminal-color4: #125190;
 	--oasis-terminal-color5: #6a20c2;
 	--oasis-terminal-color6: #2d5751;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #2d5751;
 	--oasis-terminal-green: #28593f;
 	--oasis-terminal-magenta: #6a20c2;
-	--oasis-terminal-red: #982222;
+	--oasis-terminal-red: #a11010;
 	--oasis-terminal-white: #46443d;
-	--oasis-terminal-yellow: #57511b;
+	--oasis-terminal-yellow: #57511d;
 	--oasis-theme-accent: #920101;
 	--oasis-theme-light-primary: #023f6e;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #035087;
 	--oasis-theme-secondary: #8c4908;
 	--oasis-theme-strong-primary: #035fa0;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #244857;
 	--oasis-ui-float-bg: #bcd3f5;
 	--oasis-ui-float-border-bg: #bcd3f5;
