--- a/extras/css/themes/light/4/oasis_midnight_light_4.css
+++ b/extras/css/themes/light/4/oasis_midnight_light_4.css
@@ -25,14 +25,14 @@
 	--oasis-fg-muted: #5b636b;
 	--oasis-fg-strong: #603e29;
 	--oasis-git-add: #1c500d;
-	--oasis-git-change: #4d4708;
+	--oasis-git-change: #4e470a;
 	--oasis-git-delete: #920000;
 	--oasis-syntax-bracket: #5c636e;
 	--oasis-syntax-builtinConst: #4d525d;
 	--oasis-syntax-builtinFunc: #82400e;
 	--oasis-syntax-builtinVar: #515252;
 	--oasis-syntax-comment: #586375;
-	--oasis-syntax-conditional: #912327;
+	--oasis-syntax-conditional: #9a1116;
 	--oasis-syntax-constant: #383737;
 	--oasis-syntax-delimiter: #7f3f40;
 	--oasis-syntax-exception: #5b5216;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #9a2629;
 	--oasis-syntax-regex: #2a5d1c;
 	--oasis-syntax-special: #7e420e;
-	--oasis-syntax-statement: #9b2427;
+	--oasis-syntax-statement: #9e2023;
 	--oasis-syntax-string: #21563a;
 	--oasis-syntax-type: #2c534e;
 	--oasis-terminal-black: #464646;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #663c0a;
 	--oasis-terminal-bright-yellow: #794512;
 	--oasis-terminal-color0: #464646;
-	--oasis-terminal-color1: #9c2323;
+	--oasis-terminal-color1: #a51111;
 	--oasis-terminal-color10: #2e5c22;
 	--oasis-terminal-color11: #794512;
 	--oasis-terminal-color12: #1f586f;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2e5953;
 	--oasis-terminal-color15: #663c0a;
 	--oasis-terminal-color2: #295b40;
-	--oasis-terminal-color3: #59531b;
+	--oasis-terminal-color3: #59531e;
 	--oasis-terminal-color4: #125393;
 	--oasis-terminal-color5: #6d20c6;
 	--oasis-terminal-color6: #2e5953;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2e5953;
 	--oasis-terminal-green: #295b40;
 	--oasis-terminal-magenta: #6d20c6;
-	--oasis-terminal-red: #9c2323;
+	--oasis-terminal-red: #a51111;
 	--oasis-terminal-white: #48463f;
-	--oasis-terminal-yellow: #59531b;
+	--oasis-terminal-yellow: #59531e;
 	--oasis-theme-accent: #32625a;
 	--oasis-theme-light-primary: #620e0e;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #791111;
+	--oasis-theme-primary: #880101;
 	--oasis-theme-secondary: #8c4908;
 	--oasis-theme-strong-primary: #7c2727;
-	--oasis-ui-border: #7a2c2c;
+	--oasis-ui-border: #852020;
 	--oasis-ui-cursorLine: #f3cfba;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #254a5a;
 	--oasis-ui-float-bg: #f3cfba;
 	--oasis-ui-float-border-bg: #f3cfba;
-	--oasis-ui-float-border-fg: #7a2c2c;
-	--oasis-ui-float-fg: #7a2c2c;
-	--oasis-ui-float-title: #7a2c2c;
+	--oasis-ui-float-border-fg: #852020;
+	--oasis-ui-float-fg: #852020;
+	--oasis-ui-float-title: #852020;
 	--oasis-ui-lineNumber: #633d18;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #877c74;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #7a2c2c;
+	--oasis-ui-title: #852020;
 	--oasis-ui-visual-bg: #eebda0;
 	--oasis-ui-visual-fg: none;
 }
