--- a/extras/css/themes/light/4/oasis_mirage_light_4.css
+++ b/extras/css/themes/light/4/oasis_mirage_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #616e6d;
 	--oasis-fg-strong: #3c534e;
 	--oasis-git-add: #1f5b0f;
-	--oasis-git-change: #574f09;
+	--oasis-git-change: #57500b;
 	--oasis-git-delete: #a20000;
 	--oasis-syntax-bracket: #656b7b;
 	--oasis-syntax-builtinConst: #555b6a;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #73430c;
 	--oasis-terminal-bright-yellow: #864d14;
 	--oasis-terminal-color0: #4f4f4f;
-	--oasis-terminal-color1: #ac2727;
+	--oasis-terminal-color1: #b51212;
 	--oasis-terminal-color10: #336625;
 	--oasis-terminal-color11: #864d14;
 	--oasis-terminal-color12: #23617a;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33635c;
 	--oasis-terminal-color15: #73430c;
 	--oasis-terminal-color2: #2d6548;
-	--oasis-terminal-color3: #635c1e;
+	--oasis-terminal-color3: #625c21;
 	--oasis-terminal-color4: #145ca3;
 	--oasis-terminal-color5: #7824db;
 	--oasis-terminal-color6: #33635c;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #33635c;
 	--oasis-terminal-green: #2d6548;
 	--oasis-terminal-magenta: #7824db;
-	--oasis-terminal-red: #ac2727;
+	--oasis-terminal-red: #b51212;
 	--oasis-terminal-white: #514f47;
-	--oasis-terminal-yellow: #635c1e;
+	--oasis-terminal-yellow: #625c21;
 	--oasis-theme-accent: #440192;
 	--oasis-theme-light-primary: #214f48;
-	--oasis-theme-palette-primary-50: #DEF8F4;
-	--oasis-theme-palette-primary-100: #CCEFE9;
-	--oasis-theme-palette-primary-200: #BAE6DF;
-	--oasis-theme-palette-primary-300: #A8DDD5;
-	--oasis-theme-palette-primary-400: #96D4CB;
-	--oasis-theme-palette-primary-500: #8FD1C7;
-	--oasis-theme-palette-primary-600: #81C0B6;
-	--oasis-theme-palette-primary-700: #5ABAAE;
-	--oasis-theme-palette-primary-800: #47A99B;
-	--oasis-theme-palette-primary-900: #2A5E56;
 	--oasis-theme-primary: #2e5b54;
 	--oasis-theme-secondary: #8c4908;
 	--oasis-theme-strong-primary: #31726a;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2a5465;
 	--oasis-ui-float-bg: #c0f1f1;
 	--oasis-ui-float-border-bg: #c0f1f1;
