--- a/extras/css/themes/light/4/oasis_night_light_4.css
+++ b/extras/css/themes/light/4/oasis_night_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6b5b50;
 	--oasis-fg-strong: #593b26;
 	--oasis-git-add: #1a4c0c;
-	--oasis-git-change: #494307;
+	--oasis-git-change: #494209;
 	--oasis-git-delete: #8a0000;
 	--oasis-syntax-bracket: #585f69;
 	--oasis-syntax-builtinConst: #494e59;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #703b0c;
 	--oasis-syntax-constant: #333332;
 	--oasis-syntax-delimiter: #734119;
-	--oasis-syntax-exception: #942225;
+	--oasis-syntax-exception: #961e22;
 	--oasis-syntax-func: #66400b;
 	--oasis-syntax-identifier: #2c554f;
 	--oasis-syntax-operator: #9c1116;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #60380a;
 	--oasis-terminal-bright-yellow: #734211;
 	--oasis-terminal-color0: #424242;
-	--oasis-terminal-color1: #942222;
+	--oasis-terminal-color1: #9d1010;
 	--oasis-terminal-color10: #2c5820;
 	--oasis-terminal-color11: #734211;
 	--oasis-terminal-color12: #1e5369;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2b554e;
 	--oasis-terminal-color15: #60380a;
 	--oasis-terminal-color2: #27573d;
-	--oasis-terminal-color3: #544f1a;
+	--oasis-terminal-color3: #544f1c;
 	--oasis-terminal-color4: #114f8c;
 	--oasis-terminal-color5: #681fbd;
 	--oasis-terminal-color6: #2c554f;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2c554f;
 	--oasis-terminal-green: #27573d;
 	--oasis-terminal-magenta: #681fbd;
-	--oasis-terminal-red: #942222;
+	--oasis-terminal-red: #9d1010;
 	--oasis-terminal-white: #44423b;
-	--oasis-terminal-yellow: #544f1a;
+	--oasis-terminal-yellow: #544f1c;
 	--oasis-theme-accent: #035691;
 	--oasis-theme-light-primary: #620e0e;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #791111;
+	--oasis-theme-primary: #880101;
 	--oasis-theme-secondary: #8c4908;
 	--oasis-theme-strong-primary: #7c2727;
-	--oasis-ui-border: #732929;
+	--oasis-ui-border: #7d1e1e;
 	--oasis-ui-cursorLine: #e0d19f;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #234655;
 	--oasis-ui-float-bg: #e0d19f;
 	--oasis-ui-float-border-bg: #e0d19f;
-	--oasis-ui-float-border-fg: #732929;
-	--oasis-ui-float-fg: #732929;
-	--oasis-ui-float-title: #732929;
+	--oasis-ui-float-border-fg: #7d1e1e;
+	--oasis-ui-float-fg: #7d1e1e;
+	--oasis-ui-float-title: #7d1e1e;
 	--oasis-ui-lineNumber: #5d3a17;
 	--oasis-ui-match-bg: #dd6f6f;
 	--oasis-ui-match-fg: #350808;
 	--oasis-ui-nontext: #80786d;
 	--oasis-ui-search-bg: #e1b69d;
 	--oasis-ui-search-fg: #4e260e;
-	--oasis-ui-title: #732929;
+	--oasis-ui-title: #7d1e1e;
 	--oasis-ui-visual-bg: #d8c688;
 	--oasis-ui-visual-fg: none;
 }
