--- a/extras/css/themes/light/4/oasis_rose_light_4.css
+++ b/extras/css/themes/light/4/oasis_rose_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6a5b64;
 	--oasis-fg-strong: #563a4f;
 	--oasis-git-add: #1a4d0d;
-	--oasis-git-change: #4a4408;
+	--oasis-git-change: #4a440a;
 	--oasis-git-delete: #8c0000;
 	--oasis-syntax-bracket: #59606a;
 	--oasis-syntax-builtinConst: #4a4f5a;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #62390a;
 	--oasis-terminal-bright-yellow: #754311;
 	--oasis-terminal-color0: #434343;
-	--oasis-terminal-color1: #962222;
+	--oasis-terminal-color1: #9f1010;
 	--oasis-terminal-color10: #2d5921;
 	--oasis-terminal-color11: #754311;
 	--oasis-terminal-color12: #1e556a;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2c5650;
 	--oasis-terminal-color15: #62390a;
 	--oasis-terminal-color2: #27583e;
-	--oasis-terminal-color3: #56501a;
+	--oasis-terminal-color3: #56501d;
 	--oasis-terminal-color4: #11508e;
 	--oasis-terminal-color5: #691fc0;
 	--oasis-terminal-color6: #2c5650;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #2c5650;
 	--oasis-terminal-green: #27583e;
 	--oasis-terminal-magenta: #691fc0;
-	--oasis-terminal-red: #962222;
+	--oasis-terminal-red: #9f1010;
 	--oasis-terminal-white: #45433c;
-	--oasis-terminal-yellow: #56501a;
+	--oasis-terminal-yellow: #56501d;
 	--oasis-theme-accent: #16607e;
 	--oasis-theme-light-primary: #6f0101;
-	--oasis-theme-palette-primary-50: #FFEBEB;
-	--oasis-theme-palette-primary-100: #FFDCDC;
-	--oasis-theme-palette-primary-200: #FFCECE;
-	--oasis-theme-palette-primary-300: #FFC0C0;
-	--oasis-theme-palette-primary-400: #FFB0B0;
-	--oasis-theme-palette-primary-500: #FFA0A0;
-	--oasis-theme-palette-primary-600: #FF9090;
-	--oasis-theme-palette-primary-700: #FF8080;
-	--oasis-theme-palette-primary-800: #CC5959;
-	--oasis-theme-palette-primary-900: #803333;
 	--oasis-theme-primary: #880101;
 	--oasis-theme-secondary: #88790c;
 	--oasis-theme-strong-primary: #a20202;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #244756;
 	--oasis-ui-float-bg: #f0c2e5;
 	--oasis-ui-float-border-bg: #f0c2e5;
