--- a/extras/css/themes/light/4/oasis_sol_light_4.css
+++ b/extras/css/themes/light/4/oasis_sol_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #695a57;
 	--oasis-fg-strong: #65332b;
 	--oasis-git-add: #1a4b0c;
-	--oasis-git-change: #484207;
+	--oasis-git-change: #484209;
 	--oasis-git-delete: #890000;
 	--oasis-syntax-bracket: #575e68;
 	--oasis-syntax-builtinConst: #484d58;
@@ -34,7 +34,7 @@
 	--oasis-syntax-comment: #6e5955;
 	--oasis-syntax-conditional: #911015;
 	--oasis-syntax-constant: #333232;
-	--oasis-syntax-delimiter: #892e31;
+	--oasis-syntax-delimiter: #942023;
 	--oasis-syntax-exception: #564e15;
 	--oasis-syntax-func: #6e3b0c;
 	--oasis-syntax-identifier: #2c544e;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #5f380a;
 	--oasis-terminal-bright-yellow: #724111;
 	--oasis-terminal-color0: #414141;
-	--oasis-terminal-color1: #932121;
+	--oasis-terminal-color1: #9c1010;
 	--oasis-terminal-color10: #2c5720;
 	--oasis-terminal-color11: #724111;
 	--oasis-terminal-color12: #1e5368;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2b544e;
 	--oasis-terminal-color15: #5f380a;
 	--oasis-terminal-color2: #26563d;
-	--oasis-terminal-color3: #544e1a;
+	--oasis-terminal-color3: #544e1c;
 	--oasis-terminal-color4: #114e8b;
 	--oasis-terminal-color5: #671ebc;
 	--oasis-terminal-color6: #2b544f;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2b544f;
 	--oasis-terminal-green: #26563d;
 	--oasis-terminal-magenta: #671ebc;
-	--oasis-terminal-red: #932121;
+	--oasis-terminal-red: #9c1010;
 	--oasis-terminal-white: #43413a;
-	--oasis-terminal-yellow: #544e1a;
+	--oasis-terminal-yellow: #544e1c;
 	--oasis-theme-accent: #035691;
-	--oasis-theme-light-primary: #620e0e;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #791111;
+	--oasis-theme-light-primary: #6f0101;
+	--oasis-theme-primary: #880101;
 	--oasis-theme-secondary: #8c4908;
 	--oasis-theme-strong-primary: #871c1c;
-	--oasis-ui-border: #722929;
+	--oasis-ui-border: #7c1e1e;
 	--oasis-ui-cursorLine: #f3c1ba;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #234554;
 	--oasis-ui-float-bg: #f3c1ba;
 	--oasis-ui-float-border-bg: #f3c1ba;
-	--oasis-ui-float-border-fg: #722929;
-	--oasis-ui-float-fg: #722929;
-	--oasis-ui-float-title: #722929;
+	--oasis-ui-float-border-fg: #7c1e1e;
+	--oasis-ui-float-fg: #7c1e1e;
+	--oasis-ui-float-title: #7c1e1e;
 	--oasis-ui-lineNumber: #543d18;
 	--oasis-ui-match-bg: #7ad1a7;
 	--oasis-ui-match-fg: #0d311f;
 	--oasis-ui-nontext: #797979;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #722929;
+	--oasis-ui-title: #7c1e1e;
 	--oasis-ui-visual-bg: #eeaaa0;
 	--oasis-ui-visual-fg: none;
 }
