--- a/extras/css/themes/light/4/oasis_starlight_light_4.css
+++ b/extras/css/themes/light/4/oasis_starlight_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #626972;
 	--oasis-fg-strong: #4e4b44;
 	--oasis-git-add: #1e570e;
-	--oasis-git-change: #534c08;
+	--oasis-git-change: #534c0b;
 	--oasis-git-delete: #9c0000;
 	--oasis-syntax-bracket: #66667c;
 	--oasis-syntax-builtinConst: #525764;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #11548e;
 	--oasis-syntax-constant: #3e3c3c;
 	--oasis-syntax-delimiter: #1f5b8d;
-	--oasis-syntax-exception: #a4282c;
+	--oasis-syntax-exception: #af1319;
 	--oasis-syntax-func: #7e430e;
 	--oasis-syntax-identifier: #315f59;
 	--oasis-syntax-operator: #af1319;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6e400b;
 	--oasis-terminal-bright-yellow: #814a13;
 	--oasis-terminal-color0: #4b4b4b;
-	--oasis-terminal-color1: #a62626;
+	--oasis-terminal-color1: #af1212;
 	--oasis-terminal-color10: #326224;
 	--oasis-terminal-color11: #814a13;
 	--oasis-terminal-color12: #215e76;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #315f58;
 	--oasis-terminal-color15: #6e400b;
 	--oasis-terminal-color2: #2b6245;
-	--oasis-terminal-color3: #5f591d;
+	--oasis-terminal-color3: #5f5820;
 	--oasis-terminal-color4: #13589d;
 	--oasis-terminal-color5: #7422d4;
 	--oasis-terminal-color6: #315f59;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #315f59;
 	--oasis-terminal-green: #2b6245;
 	--oasis-terminal-magenta: #7422d4;
-	--oasis-terminal-red: #a62626;
+	--oasis-terminal-red: #af1212;
 	--oasis-terminal-white: #4e4b44;
-	--oasis-terminal-yellow: #5f591d;
+	--oasis-terminal-yellow: #5f5820;
 	--oasis-theme-accent: #8c4908;
 	--oasis-theme-light-primary: #11495f;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #035087;
 	--oasis-theme-secondary: #827712;
 	--oasis-theme-strong-primary: #035fa0;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #285061;
 	--oasis-ui-float-bg: #ece0c5;
 	--oasis-ui-float-border-bg: #ece0c5;
