--- a/extras/css/themes/light/5/oasis_abyss_light_5.css
+++ b/extras/css/themes/light/5/oasis_abyss_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #566065;
 	--oasis-fg-strong: #623828;
 	--oasis-git-add: #1a4d0d;
-	--oasis-git-change: #4a4307;
+	--oasis-git-change: #4a430a;
 	--oasis-git-delete: #8b0000;
 	--oasis-syntax-bracket: #5a5f69;
 	--oasis-syntax-builtinConst: #494f59;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #8d2c30;
 	--oasis-syntax-regex: #28591b;
 	--oasis-syntax-special: #7a3f0d;
-	--oasis-syntax-statement: #981e22;
+	--oasis-syntax-statement: #991c1f;
 	--oasis-syntax-string: #205238;
 	--oasis-syntax-type: #2a504b;
 	--oasis-terminal-black: #424242;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #62390a;
 	--oasis-terminal-bright-yellow: #744211;
 	--oasis-terminal-color0: #424242;
-	--oasis-terminal-color1: #962222;
+	--oasis-terminal-color1: #9f0f0f;
 	--oasis-terminal-color10: #2c5920;
 	--oasis-terminal-color11: #744211;
 	--oasis-terminal-color12: #1e546a;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2b564f;
 	--oasis-terminal-color15: #62390a;
 	--oasis-terminal-color2: #27583e;
-	--oasis-terminal-color3: #55501a;
+	--oasis-terminal-color3: #554f1c;
 	--oasis-terminal-color4: #124f8e;
 	--oasis-terminal-color5: #691fbe;
 	--oasis-terminal-color6: #2c5550;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2c5550;
 	--oasis-terminal-green: #27583e;
 	--oasis-terminal-magenta: #691fbe;
-	--oasis-terminal-red: #962222;
+	--oasis-terminal-red: #9f0f0f;
 	--oasis-terminal-white: #45433c;
-	--oasis-terminal-yellow: #55501a;
+	--oasis-terminal-yellow: #554f1c;
 	--oasis-theme-accent: #2e5c55;
 	--oasis-theme-light-primary: #5a0c0c;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #710f0f;
+	--oasis-theme-primary: #800000;
 	--oasis-theme-secondary: #834406;
 	--oasis-theme-strong-primary: #7f1a1a;
-	--oasis-ui-border: #742a2a;
+	--oasis-ui-border: #7e1f1f;
 	--oasis-ui-cursorLine: #f1c9ad;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #234756;
 	--oasis-ui-float-bg: #f1c9ad;
 	--oasis-ui-float-border-bg: #f1c9ad;
-	--oasis-ui-float-border-fg: #742a2a;
-	--oasis-ui-float-fg: #742a2a;
-	--oasis-ui-float-title: #742a2a;
+	--oasis-ui-float-border-fg: #7e1f1f;
+	--oasis-ui-float-fg: #7e1f1f;
+	--oasis-ui-float-title: #7e1f1f;
 	--oasis-ui-lineNumber: #5f3a17;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #86776f;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #742a2a;
+	--oasis-ui-title: #7e1f1f;
 	--oasis-ui-visual-bg: #ecb893;
 	--oasis-ui-visual-fg: none;
 }
