--- a/extras/css/themes/light/5/oasis_cactus_light_5.css
+++ b/extras/css/themes/light/5/oasis_cactus_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #5d6960;
 	--oasis-fg-strong: #384f3d;
 	--oasis-git-add: #1d540e;
-	--oasis-git-change: #514a08;
+	--oasis-git-change: #514a0b;
 	--oasis-git-delete: #980000;
 	--oasis-syntax-bracket: #606674;
 	--oasis-syntax-builtinConst: #4f5564;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6b3f0b;
 	--oasis-terminal-bright-yellow: #7e4813;
 	--oasis-terminal-color0: #494949;
-	--oasis-terminal-color1: #a22525;
+	--oasis-terminal-color1: #ac1111;
 	--oasis-terminal-color10: #306023;
 	--oasis-terminal-color11: #7e4813;
 	--oasis-terminal-color12: #215b73;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2f5d56;
 	--oasis-terminal-color15: #6b3f0b;
 	--oasis-terminal-color2: #2a5f43;
-	--oasis-terminal-color3: #5c571d;
+	--oasis-terminal-color3: #5c561f;
 	--oasis-terminal-color4: #135699;
 	--oasis-terminal-color5: #7221ce;
 	--oasis-terminal-color6: #305d57;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #305d57;
 	--oasis-terminal-green: #2a5f43;
 	--oasis-terminal-magenta: #7221ce;
-	--oasis-terminal-red: #a22525;
+	--oasis-terminal-red: #ac1111;
 	--oasis-terminal-white: #4c4942;
-	--oasis-terminal-yellow: #5c571d;
+	--oasis-terminal-yellow: #5c561f;
 	--oasis-theme-accent: #8a0000;
 	--oasis-theme-light-primary: #224424;
-	--oasis-theme-palette-primary-50: #DEF6E0;
-	--oasis-theme-palette-primary-100: #D2EED4;
-	--oasis-theme-palette-primary-200: #C6E6C8;
-	--oasis-theme-palette-primary-300: #BADEBC;
-	--oasis-theme-palette-primary-400: #AED6B0;
-	--oasis-theme-palette-primary-500: #A7D3A9;
-	--oasis-theme-palette-primary-600: #93C795;
-	--oasis-theme-palette-primary-700: #7FBB82;
-	--oasis-theme-palette-primary-800: #5A9C5D;
-	--oasis-theme-palette-primary-900: #355E37;
 	--oasis-theme-primary: #2c532e;
 	--oasis-theme-secondary: #8a0000;
 	--oasis-theme-strong-primary: #356437;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #274e5e;
 	--oasis-ui-float-bg: #c0e7cf;
 	--oasis-ui-float-border-bg: #c0e7cf;
