--- a/extras/css/themes/light/5/oasis_canyon_light_5.css
+++ b/extras/css/themes/light/5/oasis_canyon_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6d5d53;
 	--oasis-fg-strong: #5c3c26;
 	--oasis-git-add: #1b4e0d;
-	--oasis-git-change: #4b4508;
+	--oasis-git-change: #4b440a;
 	--oasis-git-delete: #8e0000;
 	--oasis-syntax-bracket: #5b606a;
 	--oasis-syntax-builtinConst: #4b505b;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #733c0d;
 	--oasis-syntax-constant: #353534;
 	--oasis-syntax-delimiter: #764319;
-	--oasis-syntax-exception: #982226;
+	--oasis-syntax-exception: #9b1e22;
 	--oasis-syntax-func: #69420b;
 	--oasis-syntax-identifier: #2e5751;
 	--oasis-syntax-operator: #a01117;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #643a0a;
 	--oasis-terminal-bright-yellow: #764311;
 	--oasis-terminal-color0: #444444;
-	--oasis-terminal-color1: #982222;
+	--oasis-terminal-color1: #a11010;
 	--oasis-terminal-color10: #2d5a20;
 	--oasis-terminal-color11: #764311;
 	--oasis-terminal-color12: #1f566c;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2c5750;
 	--oasis-terminal-color15: #643a0a;
 	--oasis-terminal-color2: #28593f;
-	--oasis-terminal-color3: #56511b;
+	--oasis-terminal-color3: #56511d;
 	--oasis-terminal-color4: #125190;
 	--oasis-terminal-color5: #6b1fc1;
 	--oasis-terminal-color6: #2d5752;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #2d5752;
 	--oasis-terminal-green: #28593f;
 	--oasis-terminal-magenta: #6b1fc1;
-	--oasis-terminal-red: #982222;
+	--oasis-terminal-red: #a11010;
 	--oasis-terminal-white: #46443d;
-	--oasis-terminal-yellow: #56511b;
+	--oasis-terminal-yellow: #56511d;
 	--oasis-theme-accent: #1c6e44;
 	--oasis-theme-light-primary: #623e04;
-	--oasis-theme-palette-primary-50: #FFE7CC;
-	--oasis-theme-palette-primary-100: #FFD7AD;
-	--oasis-theme-palette-primary-200: #FFC78F;
-	--oasis-theme-palette-primary-300: #FFB870;
-	--oasis-theme-palette-primary-400: #FFA852;
-	--oasis-theme-palette-primary-500: #FFA247;
-	--oasis-theme-palette-primary-600: #FF8A1F;
-	--oasis-theme-palette-primary-700: #E67200;
-	--oasis-theme-palette-primary-800: #B35A00;
-	--oasis-theme-palette-primary-900: #804000;
 	--oasis-theme-primary: #803f00;
 	--oasis-theme-secondary: #145a76;
 	--oasis-theme-strong-primary: #994c00;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #244857;
 	--oasis-ui-float-bg: #f1cdad;
 	--oasis-ui-float-border-bg: #f1cdad;
