--- a/extras/css/themes/light/5/oasis_desert_light_5.css
+++ b/extras/css/themes/light/5/oasis_desert_light_5.css
@@ -19,22 +19,22 @@
 	--oasis-diff-change: #444444;
 	--oasis-diff-delete: #643737;
 	--oasis-diff-text: #5f3b26;
-	--oasis-fg-comment: #5e6a72;
+	--oasis-fg-comment: #596a74;
 	--oasis-fg-core: #504132;
 	--oasis-fg-dim: #847a71;
 	--oasis-fg-muted: #586267;
 	--oasis-fg-strong: #4b423a;
 	--oasis-git-add: #1b4e0d;
-	--oasis-git-change: #4b4508;
+	--oasis-git-change: #4b440a;
 	--oasis-git-delete: #8e0000;
 	--oasis-syntax-bracket: #5a606e;
 	--oasis-syntax-builtinConst: #49505c;
 	--oasis-syntax-builtinFunc: #803d0e;
 	--oasis-syntax-builtinVar: #4f5050;
-	--oasis-syntax-comment: #506372;
+	--oasis-syntax-comment: #4b6374;
 	--oasis-syntax-conditional: #504b25;
 	--oasis-syntax-constant: #363535;
-	--oasis-syntax-delimiter: #7d3c40;
+	--oasis-syntax-delimiter: #992124;
 	--oasis-syntax-exception: #9f1711;
 	--oasis-syntax-func: #68430b;
 	--oasis-syntax-identifier: #2c5751;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #643a0a;
 	--oasis-terminal-bright-yellow: #764311;
 	--oasis-terminal-color0: #444444;
-	--oasis-terminal-color1: #982222;
+	--oasis-terminal-color1: #a11010;
 	--oasis-terminal-color10: #2d5a20;
 	--oasis-terminal-color11: #764311;
 	--oasis-terminal-color12: #1f566c;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2c5750;
 	--oasis-terminal-color15: #643a0a;
 	--oasis-terminal-color2: #28593f;
-	--oasis-terminal-color3: #56511b;
+	--oasis-terminal-color3: #56511d;
 	--oasis-terminal-color4: #125190;
 	--oasis-terminal-color5: #6b1fc1;
 	--oasis-terminal-color6: #2d5752;
@@ -76,25 +76,17 @@
 	--oasis-terminal-cyan: #2d5752;
 	--oasis-terminal-green: #28593f;
 	--oasis-terminal-magenta: #6b1fc1;
-	--oasis-terminal-red: #982222;
+	--oasis-terminal-red: #a11010;
 	--oasis-terminal-white: #46443d;
-	--oasis-terminal-yellow: #56511b;
+	--oasis-terminal-yellow: #56511d;
 	--oasis-theme-accent: #145a76;
-	--oasis-theme-light-primary: #660000;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
-	--oasis-theme-primary: #710f0f;
-	--oasis-theme-secondary: #7a6f10;
-	--oasis-theme-strong-primary: #752424;
-	--oasis-ui-border: #762b2b;
+	--oasis-theme-light-primary: #5b520b;
+	--oasis-theme-primary: #71670f;
+	--oasis-theme-secondary: #8a0000;
+	--oasis-theme-secondary-light: #660800;
+	--oasis-theme-secondary-strong: #752424;
+	--oasis-theme-strong-primary: #716b28;
+	--oasis-ui-border: #811f1f;
 	--oasis-ui-cursorLine: #f1cdad;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +96,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #244857;
 	--oasis-ui-float-bg: #f1cdad;
 	--oasis-ui-float-border-bg: #f1cdad;
-	--oasis-ui-float-border-fg: #762b2b;
-	--oasis-ui-float-fg: #762b2b;
-	--oasis-ui-float-title: #762b2b;
+	--oasis-ui-float-border-fg: #811f1f;
+	--oasis-ui-float-fg: #811f1f;
+	--oasis-ui-float-title: #811f1f;
 	--oasis-ui-lineNumber: #603b17;
 	--oasis-ui-match-bg: #dd986f;
 	--oasis-ui-match-fg: #351908;
 	--oasis-ui-nontext: #877970;
 	--oasis-ui-search-bg: #dacfa4;
 	--oasis-ui-search-fg: #473c15;
-	--oasis-ui-title: #762b2b;
+	--oasis-ui-title: #811f1f;
 	--oasis-ui-visual-bg: #ecbd93;
 	--oasis-ui-visual-fg: none;
 }
