--- a/extras/css/themes/light/5/oasis_lagoon_light_5.css
+++ b/extras/css/themes/light/5/oasis_lagoon_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #4d5e68;
 	--oasis-fg-strong: #33414c;
 	--oasis-git-add: #19490c;
-	--oasis-git-change: #474107;
+	--oasis-git-change: #464009;
 	--oasis-git-delete: #860000;
 	--oasis-syntax-bracket: #575c66;
 	--oasis-syntax-builtinConst: #474c56;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #0f487b;
 	--oasis-syntax-constant: #313030;
 	--oasis-syntax-delimiter: #1b4e7c;
-	--oasis-syntax-exception: #931d20;
+	--oasis-syntax-exception: #941b1e;
 	--oasis-syntax-func: #6d390c;
 	--oasis-syntax-identifier: #2a534d;
 	--oasis-syntax-operator: #981116;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #5d3609;
 	--oasis-terminal-bright-yellow: #704010;
 	--oasis-terminal-color0: #404040;
-	--oasis-terminal-color1: #902121;
+	--oasis-terminal-color1: #990f0f;
 	--oasis-terminal-color10: #2a551f;
 	--oasis-terminal-color11: #704010;
 	--oasis-terminal-color12: #1d5166;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2a534c;
 	--oasis-terminal-color15: #5d3609;
 	--oasis-terminal-color2: #26543c;
-	--oasis-terminal-color3: #524d19;
+	--oasis-terminal-color3: #524d1b;
 	--oasis-terminal-color4: #114c88;
 	--oasis-terminal-color5: #651eb8;
 	--oasis-terminal-color6: #2b524d;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #2b524d;
 	--oasis-terminal-green: #26543c;
 	--oasis-terminal-magenta: #651eb8;
-	--oasis-terminal-red: #902121;
+	--oasis-terminal-red: #990f0f;
 	--oasis-terminal-white: #413f39;
-	--oasis-terminal-yellow: #524d19;
+	--oasis-terminal-yellow: #524d1b;
 	--oasis-theme-accent: #8a0000;
 	--oasis-theme-light-primary: #013a65;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #024a7e;
 	--oasis-theme-secondary: #834406;
 	--oasis-theme-strong-primary: #015a98;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #224452;
 	--oasis-ui-float-bg: #afcef3;
 	--oasis-ui-float-border-bg: #afcef3;
