--- a/extras/css/themes/light/5/oasis_midnight_light_5.css
+++ b/extras/css/themes/light/5/oasis_midnight_light_5.css
@@ -25,14 +25,14 @@
 	--oasis-fg-muted: #565e64;
 	--oasis-fg-strong: #593925;
 	--oasis-git-add: #194a0c;
-	--oasis-git-change: #474107;
+	--oasis-git-change: #474109;
 	--oasis-git-delete: #870000;
 	--oasis-syntax-bracket: #575d66;
 	--oasis-syntax-builtinConst: #474d57;
 	--oasis-syntax-builtinFunc: #7a3b0d;
 	--oasis-syntax-builtinVar: #4b4d4d;
 	--oasis-syntax-comment: #525e6c;
-	--oasis-syntax-conditional: #872124;
+	--oasis-syntax-conditional: #901015;
 	--oasis-syntax-constant: #323131;
 	--oasis-syntax-delimiter: #78393d;
 	--oasis-syntax-exception: #554d15;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #902327;
 	--oasis-syntax-regex: #27571a;
 	--oasis-syntax-special: #763d0d;
-	--oasis-syntax-statement: #912125;
+	--oasis-syntax-statement: #941d21;
 	--oasis-syntax-string: #1f5037;
 	--oasis-syntax-type: #294d49;
 	--oasis-terminal-black: #404040;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #5f370a;
 	--oasis-terminal-bright-yellow: #714011;
 	--oasis-terminal-color0: #404040;
-	--oasis-terminal-color1: #922121;
+	--oasis-terminal-color1: #9a0f0f;
 	--oasis-terminal-color10: #2b561f;
 	--oasis-terminal-color11: #714011;
 	--oasis-terminal-color12: #1e5267;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2a534d;
 	--oasis-terminal-color15: #5f370a;
 	--oasis-terminal-color2: #26553c;
-	--oasis-terminal-color3: #534d19;
+	--oasis-terminal-color3: #534d1b;
 	--oasis-terminal-color4: #114d8a;
 	--oasis-terminal-color5: #661eb9;
 	--oasis-terminal-color6: #2b534e;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2b534e;
 	--oasis-terminal-green: #26553c;
 	--oasis-terminal-magenta: #661eb9;
-	--oasis-terminal-red: #922121;
+	--oasis-terminal-red: #9a0f0f;
 	--oasis-terminal-white: #42403a;
-	--oasis-terminal-yellow: #534d19;
+	--oasis-terminal-yellow: #534d1b;
 	--oasis-theme-accent: #2e5c55;
 	--oasis-theme-light-primary: #5a0c0c;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #710f0f;
+	--oasis-theme-primary: #800000;
 	--oasis-theme-secondary: #834406;
 	--oasis-theme-strong-primary: #752424;
-	--oasis-ui-border: #702929;
+	--oasis-ui-border: #7a1e1e;
 	--oasis-ui-cursorLine: #f1c4ad;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #224553;
 	--oasis-ui-float-bg: #f1c4ad;
 	--oasis-ui-float-border-bg: #f1c4ad;
-	--oasis-ui-float-border-fg: #702929;
-	--oasis-ui-float-fg: #702929;
-	--oasis-ui-float-title: #702929;
+	--oasis-ui-float-border-fg: #7a1e1e;
+	--oasis-ui-float-fg: #7a1e1e;
+	--oasis-ui-float-title: #7a1e1e;
 	--oasis-ui-lineNumber: #5b3816;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #7f776e;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #702929;
+	--oasis-ui-title: #7a1e1e;
 	--oasis-ui-visual-bg: #ecb193;
 	--oasis-ui-visual-fg: none;
 }
