--- a/extras/css/themes/light/5/oasis_mirage_light_5.css
+++ b/extras/css/themes/light/5/oasis_mirage_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #5f6c6b;
 	--oasis-fg-strong: #39514c;
 	--oasis-git-add: #1e580e;
-	--oasis-git-change: #544d09;
+	--oasis-git-change: #554d0b;
 	--oasis-git-delete: #9e0000;
 	--oasis-syntax-bracket: #636978;
 	--oasis-syntax-builtinConst: #525868;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #70410b;
 	--oasis-terminal-bright-yellow: #834b13;
 	--oasis-terminal-color0: #4c4c4c;
-	--oasis-terminal-color1: #a82626;
+	--oasis-terminal-color1: #b11111;
 	--oasis-terminal-color10: #316424;
 	--oasis-terminal-color11: #834b13;
 	--oasis-terminal-color12: #225f77;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #316159;
 	--oasis-terminal-color15: #70410b;
 	--oasis-terminal-color2: #2c6346;
-	--oasis-terminal-color3: #605a1d;
+	--oasis-terminal-color3: #605a20;
 	--oasis-terminal-color4: #14599f;
 	--oasis-terminal-color5: #7622d5;
 	--oasis-terminal-color6: #32605a;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #32605a;
 	--oasis-terminal-green: #2c6346;
 	--oasis-terminal-magenta: #7622d5;
-	--oasis-terminal-red: #a82626;
+	--oasis-terminal-red: #b11111;
 	--oasis-terminal-white: #4e4c44;
-	--oasis-terminal-yellow: #605a1d;
+	--oasis-terminal-yellow: #605a20;
 	--oasis-theme-accent: #3f008a;
 	--oasis-theme-light-primary: #1e4842;
-	--oasis-theme-palette-primary-50: #DEF8F4;
-	--oasis-theme-palette-primary-100: #CCEFE9;
-	--oasis-theme-palette-primary-200: #BAE6DF;
-	--oasis-theme-palette-primary-300: #A8DDD5;
-	--oasis-theme-palette-primary-400: #96D4CB;
-	--oasis-theme-palette-primary-500: #8FD1C7;
-	--oasis-theme-palette-primary-600: #81C0B6;
-	--oasis-theme-palette-primary-700: #5ABAAE;
-	--oasis-theme-palette-primary-800: #47A99B;
-	--oasis-theme-palette-primary-900: #2A5E56;
 	--oasis-theme-primary: #2b554e;
 	--oasis-theme-secondary: #834406;
 	--oasis-theme-strong-primary: #2d6c64;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #295162;
 	--oasis-ui-float-bg: #b3efeb;
 	--oasis-ui-float-border-bg: #b3efeb;
