--- a/extras/css/themes/light/5/oasis_night_light_5.css
+++ b/extras/css/themes/light/5/oasis_night_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #66574d;
 	--oasis-fg-strong: #543723;
 	--oasis-git-add: #18470c;
-	--oasis-git-change: #443e07;
+	--oasis-git-change: #443e09;
 	--oasis-git-delete: #810000;
 	--oasis-syntax-bracket: #555a63;
 	--oasis-syntax-builtinConst: #454a54;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #6a370b;
 	--oasis-syntax-constant: #2e2e2d;
 	--oasis-syntax-delimiter: #6d3e17;
-	--oasis-syntax-exception: #8c2023;
+	--oasis-syntax-exception: #8f1c20;
 	--oasis-syntax-func: #603c0a;
 	--oasis-syntax-identifier: #2a504b;
 	--oasis-syntax-operator: #941015;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #5a3509;
 	--oasis-terminal-bright-yellow: #6d3e10;
 	--oasis-terminal-color0: #3e3e3e;
-	--oasis-terminal-color1: #8c2020;
+	--oasis-terminal-color1: #950e0e;
 	--oasis-terminal-color10: #29531e;
 	--oasis-terminal-color11: #6d3e10;
 	--oasis-terminal-color12: #1d4f63;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #29504a;
 	--oasis-terminal-color15: #5a3509;
 	--oasis-terminal-color2: #24523a;
-	--oasis-terminal-color3: #504b19;
+	--oasis-terminal-color3: #504b1a;
 	--oasis-terminal-color4: #114a85;
 	--oasis-terminal-color5: #631db3;
 	--oasis-terminal-color6: #29504b;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #29504b;
 	--oasis-terminal-green: #24523a;
 	--oasis-terminal-magenta: #631db3;
-	--oasis-terminal-red: #8c2020;
+	--oasis-terminal-red: #950e0e;
 	--oasis-terminal-white: #3f3d37;
-	--oasis-terminal-yellow: #504b19;
+	--oasis-terminal-yellow: #504b1a;
 	--oasis-theme-accent: #025088;
 	--oasis-theme-light-primary: #5a0c0c;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #710f0f;
+	--oasis-theme-primary: #800000;
 	--oasis-theme-secondary: #834406;
 	--oasis-theme-strong-primary: #752424;
-	--oasis-ui-border: #6b2727;
+	--oasis-ui-border: #751c1c;
 	--oasis-ui-cursorLine: #ddc998;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #21414f;
 	--oasis-ui-float-bg: #ddc998;
 	--oasis-ui-float-border-bg: #ddc998;
-	--oasis-ui-float-border-fg: #6b2727;
-	--oasis-ui-float-fg: #6b2727;
-	--oasis-ui-float-title: #6b2727;
+	--oasis-ui-float-border-fg: #751c1c;
+	--oasis-ui-float-fg: #751c1c;
+	--oasis-ui-float-title: #751c1c;
 	--oasis-ui-lineNumber: #573615;
 	--oasis-ui-match-bg: #dd6f6f;
 	--oasis-ui-match-fg: #350808;
 	--oasis-ui-nontext: #7d736b;
 	--oasis-ui-search-bg: #e1b69d;
 	--oasis-ui-search-fg: #4e260e;
-	--oasis-ui-title: #6b2727;
+	--oasis-ui-title: #751c1c;
 	--oasis-ui-visual-bg: #d5bd81;
 	--oasis-ui-visual-fg: none;
 }
