--- a/extras/css/themes/light/5/oasis_rose_light_5.css
+++ b/extras/css/themes/light/5/oasis_rose_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #63565e;
 	--oasis-fg-strong: #4f3547;
 	--oasis-git-add: #18470c;
-	--oasis-git-change: #443e07;
+	--oasis-git-change: #443e09;
 	--oasis-git-delete: #810000;
 	--oasis-syntax-bracket: #545a63;
 	--oasis-syntax-builtinConst: #444953;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #5a3509;
 	--oasis-terminal-bright-yellow: #6d3e10;
 	--oasis-terminal-color0: #3d3d3d;
-	--oasis-terminal-color1: #8c2020;
+	--oasis-terminal-color1: #950e0e;
 	--oasis-terminal-color10: #29531e;
 	--oasis-terminal-color11: #6d3e10;
 	--oasis-terminal-color12: #1c4f63;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #29504a;
 	--oasis-terminal-color15: #5a3509;
 	--oasis-terminal-color2: #24523a;
-	--oasis-terminal-color3: #4f4a18;
+	--oasis-terminal-color3: #4f4a1a;
 	--oasis-terminal-color4: #114a84;
 	--oasis-terminal-color5: #621db2;
 	--oasis-terminal-color6: #29504b;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #29504b;
 	--oasis-terminal-green: #24523a;
 	--oasis-terminal-magenta: #621db2;
-	--oasis-terminal-red: #8c2020;
+	--oasis-terminal-red: #950e0e;
 	--oasis-terminal-white: #3f3d37;
-	--oasis-terminal-yellow: #4f4a18;
+	--oasis-terminal-yellow: #4f4a1a;
 	--oasis-theme-accent: #145a76;
 	--oasis-theme-light-primary: #660000;
-	--oasis-theme-palette-primary-50: #FFEBEB;
-	--oasis-theme-palette-primary-100: #FFDCDC;
-	--oasis-theme-palette-primary-200: #FFCECE;
-	--oasis-theme-palette-primary-300: #FFC0C0;
-	--oasis-theme-palette-primary-400: #FFB0B0;
-	--oasis-theme-palette-primary-500: #FFA0A0;
-	--oasis-theme-palette-primary-600: #FF9090;
-	--oasis-theme-palette-primary-700: #FF8080;
-	--oasis-theme-palette-primary-800: #CC5959;
-	--oasis-theme-palette-primary-900: #803333;
 	--oasis-theme-primary: #800000;
 	--oasis-theme-secondary: #80710a;
 	--oasis-theme-strong-primary: #990000;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #21414f;
 	--oasis-ui-float-bg: #edb6e2;
 	--oasis-ui-float-border-bg: #edb6e2;
