--- a/extras/css/themes/light/5/oasis_sol_light_5.css
+++ b/extras/css/themes/light/5/oasis_sol_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #615451;
 	--oasis-fg-strong: #5b2d26;
 	--oasis-git-add: #17430b;
-	--oasis-git-change: #413b07;
+	--oasis-git-change: #413b08;
 	--oasis-git-delete: #7c0000;
 	--oasis-syntax-bracket: #525760;
 	--oasis-syntax-builtinConst: #424750;
@@ -34,7 +34,7 @@
 	--oasis-syntax-comment: #665250;
 	--oasis-syntax-conditional: #840e13;
 	--oasis-syntax-constant: #2b2a2a;
-	--oasis-syntax-delimiter: #7c2b2c;
+	--oasis-syntax-delimiter: #871d20;
 	--oasis-syntax-exception: #4e4713;
 	--oasis-syntax-func: #64350b;
 	--oasis-syntax-identifier: #284d48;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #563209;
 	--oasis-terminal-bright-yellow: #683b0f;
 	--oasis-terminal-color0: #3a3a3a;
-	--oasis-terminal-color1: #871f1f;
+	--oasis-terminal-color1: #8f0e0e;
 	--oasis-terminal-color10: #274f1d;
 	--oasis-terminal-color11: #683b0f;
 	--oasis-terminal-color12: #1b4b5f;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #274d47;
 	--oasis-terminal-color15: #563209;
 	--oasis-terminal-color2: #234f38;
-	--oasis-terminal-color3: #4c4717;
+	--oasis-terminal-color3: #4c4719;
 	--oasis-terminal-color4: #10477f;
 	--oasis-terminal-color5: #5f1cac;
 	--oasis-terminal-color6: #284d48;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #284d48;
 	--oasis-terminal-green: #234f38;
 	--oasis-terminal-magenta: #5f1cac;
-	--oasis-terminal-red: #871f1f;
+	--oasis-terminal-red: #8f0e0e;
 	--oasis-terminal-white: #3c3a34;
-	--oasis-terminal-yellow: #4c4717;
+	--oasis-terminal-yellow: #4c4719;
 	--oasis-theme-accent: #025088;
-	--oasis-theme-light-primary: #5a0c0c;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #710f0f;
+	--oasis-theme-light-primary: #660000;
+	--oasis-theme-primary: #800000;
 	--oasis-theme-secondary: #834406;
 	--oasis-theme-strong-primary: #7f1a1a;
-	--oasis-ui-border: #662525;
+	--oasis-ui-border: #701b1b;
 	--oasis-ui-cursorLine: #f1b3ad;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #1f3e4b;
 	--oasis-ui-float-bg: #f1b3ad;
 	--oasis-ui-float-border-bg: #f1b3ad;
-	--oasis-ui-float-border-fg: #662525;
-	--oasis-ui-float-fg: #662525;
-	--oasis-ui-float-title: #662525;
+	--oasis-ui-float-border-fg: #701b1b;
+	--oasis-ui-float-fg: #701b1b;
+	--oasis-ui-float-title: #701b1b;
 	--oasis-ui-lineNumber: #4b3715;
 	--oasis-ui-match-bg: #7ad1a7;
 	--oasis-ui-match-fg: #0d311f;
 	--oasis-ui-nontext: #727272;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #662525;
+	--oasis-ui-title: #701b1b;
 	--oasis-ui-visual-bg: #ec9b93;
 	--oasis-ui-visual-fg: none;
 }
