--- a/extras/css/themes/light/5/oasis_starlight_light_5.css
+++ b/extras/css/themes/light/5/oasis_starlight_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #5e656e;
 	--oasis-fg-strong: #494841;
 	--oasis-git-add: #1c530e;
-	--oasis-git-change: #4f4808;
+	--oasis-git-change: #4f480a;
 	--oasis-git-delete: #950000;
 	--oasis-syntax-bracket: #646277;
 	--oasis-syntax-builtinConst: #4e545f;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #115089;
 	--oasis-syntax-constant: #3a3939;
 	--oasis-syntax-delimiter: #1f5687;
-	--oasis-syntax-exception: #9d262b;
+	--oasis-syntax-exception: #a81218;
 	--oasis-syntax-func: #78400d;
 	--oasis-syntax-identifier: #2e5b55;
 	--oasis-syntax-operator: #a81218;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #693d0b;
 	--oasis-terminal-bright-yellow: #7c4712;
 	--oasis-terminal-color0: #474747;
-	--oasis-terminal-color1: #9f2424;
+	--oasis-terminal-color1: #a81010;
 	--oasis-terminal-color10: #2f5e22;
 	--oasis-terminal-color11: #7c4712;
 	--oasis-terminal-color12: #205a71;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2e5b54;
 	--oasis-terminal-color15: #693d0b;
 	--oasis-terminal-color2: #2a5d42;
-	--oasis-terminal-color3: #5b551c;
+	--oasis-terminal-color3: #5b551e;
 	--oasis-terminal-color4: #135496;
 	--oasis-terminal-color5: #7021ca;
 	--oasis-terminal-color6: #2f5b55;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #2f5b55;
 	--oasis-terminal-green: #2a5d42;
 	--oasis-terminal-magenta: #7021ca;
-	--oasis-terminal-red: #9f2424;
+	--oasis-terminal-red: #a81010;
 	--oasis-terminal-white: #4a4740;
-	--oasis-terminal-yellow: #5b551c;
+	--oasis-terminal-yellow: #5b551e;
 	--oasis-theme-accent: #834406;
 	--oasis-theme-light-primary: #0f4257;
-	--oasis-theme-palette-primary-50: #EEF4FF;
-	--oasis-theme-palette-primary-100: #D0E8FE;
-	--oasis-theme-palette-primary-200: #B2DCFE;
-	--oasis-theme-palette-primary-300: #94D0FE;
-	--oasis-theme-palette-primary-400: #76C4FD;
-	--oasis-theme-palette-primary-500: #58B8FD;
-	--oasis-theme-palette-primary-600: #3AACFD;
-	--oasis-theme-palette-primary-700: #1CA0FD;
-	--oasis-theme-palette-primary-800: #1670AD;
-	--oasis-theme-palette-primary-900: #0D4266;
 	--oasis-theme-primary: #024a7e;
 	--oasis-theme-secondary: #7a6f10;
 	--oasis-theme-strong-primary: #025997;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #264c5c;
 	--oasis-ui-float-bg: #f1d8ad;
 	--oasis-ui-float-border-bg: #f1d8ad;
