--- a/extras/css/themes/light/5/oasis_twilight_light_5.css
+++ b/extras/css/themes/light/5/oasis_twilight_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #565260;
 	--oasis-fg-strong: #402e61;
 	--oasis-git-add: #16400b;
-	--oasis-git-change: #3e3906;
+	--oasis-git-change: #3e3808;
 	--oasis-git-delete: #770000;
 	--oasis-syntax-bracket: #535365;
 	--oasis-syntax-builtinConst: #40444d;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #59119c;
 	--oasis-syntax-constant: #282727;
 	--oasis-syntax-delimiter: #5a2b8c;
-	--oasis-syntax-exception: #821d21;
+	--oasis-syntax-exception: #851a1d;
 	--oasis-syntax-func: #62330b;
 	--oasis-syntax-identifier: #254a45;
 	--oasis-syntax-operator: #890f14;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #523008;
 	--oasis-terminal-bright-yellow: #653a0f;
 	--oasis-terminal-color0: #383838;
-	--oasis-terminal-color1: #821e1e;
+	--oasis-terminal-color1: #8b0d0d;
 	--oasis-terminal-color10: #264d1c;
 	--oasis-terminal-color11: #653a0f;
 	--oasis-terminal-color12: #1a495c;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #264a45;
 	--oasis-terminal-color15: #523008;
 	--oasis-terminal-color2: #224c36;
-	--oasis-terminal-color3: #494517;
+	--oasis-terminal-color3: #4a4518;
 	--oasis-terminal-color4: #10457b;
 	--oasis-terminal-color5: #5c1ba6;
 	--oasis-terminal-color6: #264a46;
@@ -76,23 +76,13 @@
 	--oasis-terminal-cyan: #264a46;
 	--oasis-terminal-green: #224c36;
 	--oasis-terminal-magenta: #5c1ba6;
-	--oasis-terminal-red: #821e1e;
+	--oasis-terminal-red: #8b0d0d;
 	--oasis-terminal-white: #393832;
-	--oasis-terminal-yellow: #494517;
+	--oasis-terminal-yellow: #4a4518;
 	--oasis-theme-accent: #1c6e44;
 	--oasis-theme-light-primary: #2e0066;
-	--oasis-theme-palette-primary-50: #F4EEFF;
-	--oasis-theme-palette-primary-100: #EEDDFF;
-	--oasis-theme-palette-primary-200: #DEC2FF;
-	--oasis-theme-palette-primary-300: #D2ADFF;
-	--oasis-theme-palette-primary-400: #C695FF;
-	--oasis-theme-palette-primary-500: #C28EFF;
-	--oasis-theme-palette-primary-600: #A870F0;
-	--oasis-theme-palette-primary-700: #9C5FEB;
-	--oasis-theme-palette-primary-800: #8F4FE6;
-	--oasis-theme-palette-primary-900: #7033CC;
 	--oasis-theme-primary: #3b0080;
-	--oasis-theme-secondary: #7d720d;
+	--oasis-theme-secondary: #7a6e0f;
 	--oasis-theme-strong-primary: #450f8a;
 	--oasis-ui-border: #492375;
 	--oasis-ui-cursorLine: #bfb6ed;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #1e3b48;
 	--oasis-ui-float-bg: #bfb6ed;
 	--oasis-ui-float-border-bg: #bfb6ed;
