--- a/extras/css/themes/dark/oasis_cactus_dark.css
+++ b/extras/css/themes/dark/oasis_cactus_dark.css
@@ -23,8 +23,28 @@
 	--oasis-fg-muted: #5B7360;
 	--oasis-fg-strong: #C7EDCF;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-primary-50: #DEF6E0;
+	--oasis-palette-primary-100: #D2EED4;
+	--oasis-palette-primary-200: #C6E6C8;
+	--oasis-palette-primary-300: #BADEBC;
+	--oasis-palette-primary-400: #AED6B0;
+	--oasis-palette-primary-500: #A7D3A9;
+	--oasis-palette-primary-600: #93C795;
+	--oasis-palette-primary-700: #7FBB82;
+	--oasis-palette-primary-800: #5A9C5D;
+	--oasis-palette-primary-900: #355E37;
+	--oasis-palette-secondary-50: #FFEBEB;
+	--oasis-palette-secondary-100: #FFDCDC;
+	--oasis-palette-secondary-200: #FFCECE;
+	--oasis-palette-secondary-300: #FFC0C0;
+	--oasis-palette-secondary-400: #FFB0B0;
+	--oasis-palette-secondary-500: #FFA0A0;
+	--oasis-palette-secondary-600: #FF9090;
+	--oasis-palette-secondary-700: #FF8080;
+	--oasis-palette-secondary-800: #CC5959;
+	--oasis-palette-secondary-900: #803333;
 	--oasis-syntax-bracket: #B3BAC7;
 	--oasis-syntax-builtinConst: #B3BAC7;
 	--oasis-syntax-builtinFunc: #FFBA80;
@@ -56,7 +76,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +84,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,22 +94,12 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #FFC0C0;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #A7D3A9;
-	--oasis-theme-palette-primary-50: #DEF6E0;
-	--oasis-theme-palette-primary-100: #D2EED4;
-	--oasis-theme-palette-primary-200: #C6E6C8;
-	--oasis-theme-palette-primary-300: #BADEBC;
-	--oasis-theme-palette-primary-400: #AED6B0;
-	--oasis-theme-palette-primary-500: #A7D3A9;
-	--oasis-theme-palette-primary-600: #93C795;
-	--oasis-theme-palette-primary-700: #7FBB82;
-	--oasis-theme-palette-primary-800: #5A9C5D;
-	--oasis-theme-palette-primary-900: #355E37;
 	--oasis-theme-primary: #7FBB82;
 	--oasis-theme-secondary: #FFA0A0;
 	--oasis-theme-strong-primary: #7FBB82;
@@ -104,7 +114,7 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #87CEEB;
 	--oasis-ui-float-bg: #2C3A30;
 	--oasis-ui-float-border-bg: #2C3A30;
