--- a/extras/css/themes/dark/oasis_canyon_dark.css
+++ b/extras/css/themes/dark/oasis_canyon_dark.css
@@ -23,8 +23,38 @@
 	--oasis-fg-muted: #8B6043;
 	--oasis-fg-strong: #FFD8BC;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-accent-50: #D5F7E0;
+	--oasis-palette-accent-100: #BBF1D0;
+	--oasis-palette-accent-200: #A1EBC0;
+	--oasis-palette-accent-300: #87E5B0;
+	--oasis-palette-accent-400: #6DDFA0;
+	--oasis-palette-accent-500: #53D390;
+	--oasis-palette-accent-600: #43CF8C;
+	--oasis-palette-accent-700: #34CB7D;
+	--oasis-palette-accent-800: #2B8A5E;
+	--oasis-palette-accent-900: #1A5338;
+	--oasis-palette-primary-50: #FFE7CC;
+	--oasis-palette-primary-100: #FFD7AD;
+	--oasis-palette-primary-200: #FFC78F;
+	--oasis-palette-primary-300: #FFB870;
+	--oasis-palette-primary-400: #FFA852;
+	--oasis-palette-primary-500: #FFA247;
+	--oasis-palette-primary-600: #FF8A1F;
+	--oasis-palette-primary-700: #E67200;
+	--oasis-palette-primary-800: #B35A00;
+	--oasis-palette-primary-900: #804000;
+	--oasis-palette-secondary-50: #DEF6FC;
+	--oasis-palette-secondary-100: #CBEEF9;
+	--oasis-palette-secondary-200: #B8E5F5;
+	--oasis-palette-secondary-300: #A5DCF1;
+	--oasis-palette-secondary-400: #92D3ED;
+	--oasis-palette-secondary-500: #87CEEB;
+	--oasis-palette-secondary-600: #6BBAE0;
+	--oasis-palette-secondary-700: #4D9ACF;
+	--oasis-palette-secondary-800: #2E6894;
+	--oasis-palette-secondary-900: #1A3D5C;
 	--oasis-syntax-bracket: #A3ABB8;
 	--oasis-syntax-builtinConst: #A3ABB8;
 	--oasis-syntax-builtinFunc: #FFD082;
@@ -33,7 +63,7 @@
 	--oasis-syntax-conditional: #FFA852;
 	--oasis-syntax-constant: #F4E36B;
 	--oasis-syntax-delimiter: #FFA247;
-	--oasis-syntax-exception: #F28D8D;
+	--oasis-syntax-exception: #F58B8B;
 	--oasis-syntax-func: #FFDCA4;
 	--oasis-syntax-identifier: #96D4CB;
 	--oasis-syntax-operator: #FFA0A0;
@@ -56,7 +86,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +94,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,22 +104,12 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #34CB7D;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #F9C97B;
-	--oasis-theme-palette-primary-50: #FFE7CC;
-	--oasis-theme-palette-primary-100: #FFD7AD;
-	--oasis-theme-palette-primary-200: #FFC78F;
-	--oasis-theme-palette-primary-300: #FFB870;
-	--oasis-theme-palette-primary-400: #FFA852;
-	--oasis-theme-palette-primary-500: #FFA247;
-	--oasis-theme-palette-primary-600: #FF8A1F;
-	--oasis-theme-palette-primary-700: #E67200;
-	--oasis-theme-palette-primary-800: #B35A00;
-	--oasis-theme-palette-primary-900: #804000;
 	--oasis-theme-primary: #FFA852;
 	--oasis-theme-secondary: #87CEEB;
 	--oasis-theme-strong-primary: #FFA247;
@@ -104,7 +124,7 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #92D3ED;
 	--oasis-ui-float-bg: #402412;
 	--oasis-ui-float-border-bg: #402412;
