--- a/extras/css/themes/dark/oasis_midnight_dark.css
+++ b/extras/css/themes/dark/oasis_midnight_dark.css
@@ -23,14 +23,44 @@
 	--oasis-fg-muted: #4E6578;
 	--oasis-fg-strong: #FFE0CC;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-accent-50: #DEF8F4;
+	--oasis-palette-accent-100: #CCEFE9;
+	--oasis-palette-accent-200: #BAE6DF;
+	--oasis-palette-accent-300: #A8DDD5;
+	--oasis-palette-accent-400: #96D4CB;
+	--oasis-palette-accent-500: #8FD1C7;
+	--oasis-palette-accent-600: #81C0B6;
+	--oasis-palette-accent-700: #5ABAAE;
+	--oasis-palette-accent-800: #47A99B;
+	--oasis-palette-accent-900: #2A5E56;
+	--oasis-palette-primary-50: #FFACA5;
+	--oasis-palette-primary-100: #F29B9B;
+	--oasis-palette-primary-200: #F39493;
+	--oasis-palette-primary-300: #F58B8B;
+	--oasis-palette-primary-400: #F78181;
+	--oasis-palette-primary-500: #FF7979;
+	--oasis-palette-primary-600: #E87272;
+	--oasis-palette-primary-700: #E26E6E;
+	--oasis-palette-primary-800: #D06666;
+	--oasis-palette-primary-900: #A23B3B;
+	--oasis-palette-secondary-50: #FDF0D0;
+	--oasis-palette-secondary-100: #FCE4BD;
+	--oasis-palette-secondary-200: #FBD8AA;
+	--oasis-palette-secondary-300: #FACC97;
+	--oasis-palette-secondary-400: #F9C084;
+	--oasis-palette-secondary-500: #F8B471;
+	--oasis-palette-secondary-600: #F9A05E;
+	--oasis-palette-secondary-700: #F8944D;
+	--oasis-palette-secondary-800: #B3671F;
+	--oasis-palette-secondary-900: #663A14;
 	--oasis-syntax-bracket: #A3ABB8;
 	--oasis-syntax-builtinConst: #A3ABB8;
 	--oasis-syntax-builtinFunc: #FFBA80;
 	--oasis-syntax-builtinVar: #58B8FD;
 	--oasis-syntax-comment: #69809D;
-	--oasis-syntax-conditional: #ED7777;
+	--oasis-syntax-conditional: #FF7979;
 	--oasis-syntax-constant: #FFA247;
 	--oasis-syntax-delimiter: #D06666;
 	--oasis-syntax-exception: #F0E68C;
@@ -42,7 +72,7 @@
 	--oasis-syntax-punctuation: #F09595;
 	--oasis-syntax-regex: #96EA7F;
 	--oasis-syntax-special: #FFA247;
-	--oasis-syntax-statement: #F28D8D;
+	--oasis-syntax-statement: #F58B8B;
 	--oasis-syntax-string: #53D390;
 	--oasis-syntax-type: #5ABAAE;
 	--oasis-terminal-black: #101010;
@@ -56,7 +86,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +94,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,26 +104,16 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #81C0B6;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #F29B9B;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #ED7777;
+	--oasis-theme-primary: #FF7979;
 	--oasis-theme-secondary: #F8B471;
 	--oasis-theme-strong-primary: #D06666;
-	--oasis-ui-border: #ED7777;
+	--oasis-ui-border: #FF7979;
 	--oasis-ui-cursorLine: #1C242C;
 	--oasis-ui-diag-error-bg: #532E2E;
 	--oasis-ui-diag-error-fg: #FFA0A0;
@@ -104,20 +124,20 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #87CEEB;
 	--oasis-ui-float-bg: #14181C;
 	--oasis-ui-float-border-bg: #14181C;
-	--oasis-ui-float-border-fg: #ED7777;
+	--oasis-ui-float-border-fg: #FF7979;
 	--oasis-ui-float-fg: #FFE0CC;
-	--oasis-ui-float-title: #ED7777;
+	--oasis-ui-float-title: #FF7979;
 	--oasis-ui-lineNumber: #FFA247;
 	--oasis-ui-match-bg: #F9A05E;
 	--oasis-ui-match-fg: #101418;
 	--oasis-ui-nontext: #7D7267;
 	--oasis-ui-search-bg: #5A3824;
 	--oasis-ui-search-fg: #F7F4F2;
-	--oasis-ui-title: #ED7777;
+	--oasis-ui-title: #FF7979;
 	--oasis-ui-visual-bg: #1C242C;
 	--oasis-ui-visual-fg: none;
 }
