--- a/extras/css/themes/dark/oasis_mirage_dark.css
+++ b/extras/css/themes/dark/oasis_mirage_dark.css
@@ -23,8 +23,38 @@
 	--oasis-fg-muted: #587270;
 	--oasis-fg-strong: #C9EEE6;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-accent-50: #F4EEFF;
+	--oasis-palette-accent-100: #EEDDFF;
+	--oasis-palette-accent-200: #DEC2FF;
+	--oasis-palette-accent-300: #D2ADFF;
+	--oasis-palette-accent-400: #C695FF;
+	--oasis-palette-accent-500: #C28EFF;
+	--oasis-palette-accent-600: #A870F0;
+	--oasis-palette-accent-700: #9C5FEB;
+	--oasis-palette-accent-800: #8F4FE6;
+	--oasis-palette-accent-900: #7033CC;
+	--oasis-palette-primary-50: #DEF8F4;
+	--oasis-palette-primary-100: #CCEFE9;
+	--oasis-palette-primary-200: #BAE6DF;
+	--oasis-palette-primary-300: #A8DDD5;
+	--oasis-palette-primary-400: #96D4CB;
+	--oasis-palette-primary-500: #8FD1C7;
+	--oasis-palette-primary-600: #81C0B6;
+	--oasis-palette-primary-700: #5ABAAE;
+	--oasis-palette-primary-800: #47A99B;
+	--oasis-palette-primary-900: #2A5E56;
+	--oasis-palette-secondary-50: #FDF0D0;
+	--oasis-palette-secondary-100: #FCE4BD;
+	--oasis-palette-secondary-200: #FBD8AA;
+	--oasis-palette-secondary-300: #FACC97;
+	--oasis-palette-secondary-400: #F9C084;
+	--oasis-palette-secondary-500: #F8B471;
+	--oasis-palette-secondary-600: #F9A05E;
+	--oasis-palette-secondary-700: #F8944D;
+	--oasis-palette-secondary-800: #B3671F;
+	--oasis-palette-secondary-900: #663A14;
 	--oasis-syntax-bracket: #B3BAC7;
 	--oasis-syntax-builtinConst: #B3BAC7;
 	--oasis-syntax-builtinFunc: #FFBA80;
@@ -56,7 +86,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +94,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,22 +104,12 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #C28EFF;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #96D4CB;
-	--oasis-theme-palette-primary-50: #DEF8F4;
-	--oasis-theme-palette-primary-100: #CCEFE9;
-	--oasis-theme-palette-primary-200: #BAE6DF;
-	--oasis-theme-palette-primary-300: #A8DDD5;
-	--oasis-theme-palette-primary-400: #96D4CB;
-	--oasis-theme-palette-primary-500: #8FD1C7;
-	--oasis-theme-palette-primary-600: #81C0B6;
-	--oasis-theme-palette-primary-700: #5ABAAE;
-	--oasis-theme-palette-primary-800: #47A99B;
-	--oasis-theme-palette-primary-900: #2A5E56;
 	--oasis-theme-primary: #81C0B6;
 	--oasis-theme-secondary: #F8B471;
 	--oasis-theme-strong-primary: #5ABAAE;
@@ -104,7 +124,7 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #87CEEB;
 	--oasis-ui-float-bg: #1A2D33;
 	--oasis-ui-float-border-bg: #1A2D33;
