--- a/extras/css/themes/dark/oasis_twilight_dark.css
+++ b/extras/css/themes/dark/oasis_twilight_dark.css
@@ -23,8 +23,38 @@
 	--oasis-fg-muted: #71609A;
 	--oasis-fg-strong: #E1D2FF;
 	--oasis-git-add: #96EA7F;
-	--oasis-git-change: #F3E989;
+	--oasis-git-change: #F0E68C;
 	--oasis-git-delete: #FFA0A0;
+	--oasis-palette-accent-50: #D5F7E0;
+	--oasis-palette-accent-100: #BBF1D0;
+	--oasis-palette-accent-200: #A1EBC0;
+	--oasis-palette-accent-300: #87E5B0;
+	--oasis-palette-accent-400: #6DDFA0;
+	--oasis-palette-accent-500: #53D390;
+	--oasis-palette-accent-600: #43CF8C;
+	--oasis-palette-accent-700: #34CB7D;
+	--oasis-palette-accent-800: #2B8A5E;
+	--oasis-palette-accent-900: #1A5338;
+	--oasis-palette-primary-50: #F4EEFF;
+	--oasis-palette-primary-100: #EEDDFF;
+	--oasis-palette-primary-200: #DEC2FF;
+	--oasis-palette-primary-300: #D2ADFF;
+	--oasis-palette-primary-400: #C695FF;
+	--oasis-palette-primary-500: #C28EFF;
+	--oasis-palette-primary-600: #A870F0;
+	--oasis-palette-primary-700: #9C5FEB;
+	--oasis-palette-primary-800: #8F4FE6;
+	--oasis-palette-primary-900: #7033CC;
+	--oasis-palette-secondary-50: #FBF6D8;
+	--oasis-palette-secondary-100: #F9F2C5;
+	--oasis-palette-secondary-200: #F6EEB2;
+	--oasis-palette-secondary-300: #F3EA9F;
+	--oasis-palette-secondary-400: #F2E898;
+	--oasis-palette-secondary-500: #F0E68C;
+	--oasis-palette-secondary-600: #CDC673;
+	--oasis-palette-secondary-700: #BDB76B;
+	--oasis-palette-secondary-800: #807C37;
+	--oasis-palette-secondary-900: #4D4A1B;
 	--oasis-syntax-bracket: #B3B3C7;
 	--oasis-syntax-builtinConst: #A3ABB8;
 	--oasis-syntax-builtinFunc: #FFBA80;
@@ -33,11 +63,11 @@
 	--oasis-syntax-conditional: #C695FF;
 	--oasis-syntax-constant: #FFA852;
 	--oasis-syntax-delimiter: #A870F0;
-	--oasis-syntax-exception: #F28D8D;
+	--oasis-syntax-exception: #F58B8B;
 	--oasis-syntax-func: #FFC78F;
 	--oasis-syntax-identifier: #A8DDD5;
 	--oasis-syntax-operator: #FFB0B0;
-	--oasis-syntax-parameter: #F3E989;
+	--oasis-syntax-parameter: #F2E898;
 	--oasis-syntax-preproc: #87CEEB;
 	--oasis-syntax-punctuation: #F09595;
 	--oasis-syntax-regex: #96EA7F;
@@ -56,7 +86,7 @@
 	--oasis-terminal-bright-white: #FFF9F2;
 	--oasis-terminal-bright-yellow: #F8B471;
 	--oasis-terminal-color0: #101010;
-	--oasis-terminal-color1: #ED7777;
+	--oasis-terminal-color1: #FF7979;
 	--oasis-terminal-color10: #96EA7F;
 	--oasis-terminal-color11: #F8B471;
 	--oasis-terminal-color12: #87CEEB;
@@ -64,7 +94,7 @@
 	--oasis-terminal-color14: #8FD1C7;
 	--oasis-terminal-color15: #FFF9F2;
 	--oasis-terminal-color2: #53D390;
-	--oasis-terminal-color3: #F3E989;
+	--oasis-terminal-color3: #F0E68C;
 	--oasis-terminal-color4: #71B8FF;
 	--oasis-terminal-color5: #C28EFF;
 	--oasis-terminal-color6: #5ABAAE;
@@ -74,24 +104,14 @@
 	--oasis-terminal-cyan: #5ABAAE;
 	--oasis-terminal-green: #53D390;
 	--oasis-terminal-magenta: #C28EFF;
-	--oasis-terminal-red: #ED7777;
+	--oasis-terminal-red: #FF7979;
 	--oasis-terminal-white: #DDDBD5;
-	--oasis-terminal-yellow: #F3E989;
+	--oasis-terminal-yellow: #F0E68C;
 	--oasis-theme-accent: #34CB7D;
 	--oasis-theme-cursor: #F0E68C;
 	--oasis-theme-light-primary: #D2ADFF;
-	--oasis-theme-palette-primary-50: #F4EEFF;
-	--oasis-theme-palette-primary-100: #EEDDFF;
-	--oasis-theme-palette-primary-200: #DEC2FF;
-	--oasis-theme-palette-primary-300: #D2ADFF;
-	--oasis-theme-palette-primary-400: #C695FF;
-	--oasis-theme-palette-primary-500: #C28EFF;
-	--oasis-theme-palette-primary-600: #A870F0;
-	--oasis-theme-palette-primary-700: #9C5FEB;
-	--oasis-theme-palette-primary-800: #8F4FE6;
-	--oasis-theme-palette-primary-900: #7033CC;
 	--oasis-theme-primary: #C28EFF;
-	--oasis-theme-secondary: #F3E989;
+	--oasis-theme-secondary: #F2E898;
 	--oasis-theme-strong-primary: #A870F0;
 	--oasis-ui-border: #C28EFF;
 	--oasis-ui-cursorLine: #2B243B;
@@ -104,7 +124,7 @@
 	--oasis-ui-diag-ok-bg: none;
 	--oasis-ui-diag-ok-fg: #96EA7F;
 	--oasis-ui-diag-warn-bg: #4D4528;
-	--oasis-ui-diag-warn-fg: #F3E989;
+	--oasis-ui-diag-warn-fg: #F0E68C;
 	--oasis-ui-dir: #87CEEB;
 	--oasis-ui-float-bg: #2B243B;
 	--oasis-ui-float-border-bg: #2B243B;
@@ -112,7 +132,7 @@
 	--oasis-ui-float-fg: #E1D2FF;
 	--oasis-ui-float-title: #C28EFF;
 	--oasis-ui-lineNumber: #FFA247;
-	--oasis-ui-match-bg: #F3E989;
+	--oasis-ui-match-bg: #F2E898;
 	--oasis-ui-match-fg: #221B2F;
 	--oasis-ui-nontext: #76665A;
 	--oasis-ui-search-bg: #4D4528;
