--- a/extras/css/themes/light/1/oasis_cactus_light_1.css
+++ b/extras/css/themes/light/1/oasis_cactus_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6b776d;
 	--oasis-fg-strong: #415d47;
 	--oasis-git-add: #226410;
-	--oasis-git-change: #60580a;
+	--oasis-git-change: #60580d;
 	--oasis-git-delete: #b20000;
 	--oasis-syntax-bracket: #6c7484;
 	--oasis-syntax-builtinConst: #5b6373;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7f4a0d;
 	--oasis-terminal-bright-yellow: #925416;
 	--oasis-terminal-color0: #575757;
-	--oasis-terminal-color1: #bb2b2b;
+	--oasis-terminal-color1: #c51414;
 	--oasis-terminal-color10: #376f28;
 	--oasis-terminal-color11: #925416;
 	--oasis-terminal-color12: #266a86;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #366c63;
 	--oasis-terminal-color15: #7f4a0d;
 	--oasis-terminal-color2: #306e4e;
-	--oasis-terminal-color3: #6b6421;
+	--oasis-terminal-color3: #6b6424;
 	--oasis-terminal-color4: #1664b1;
 	--oasis-terminal-color5: #8234de;
 	--oasis-terminal-color6: #386c64;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #386c64;
 	--oasis-terminal-green: #306e4e;
 	--oasis-terminal-magenta: #8234de;
-	--oasis-terminal-red: #bb2b2b;
+	--oasis-terminal-red: #c51414;
 	--oasis-terminal-white: #59564e;
-	--oasis-terminal-yellow: #6b6421;
+	--oasis-terminal-yellow: #6b6424;
 	--oasis-theme-accent: #ab0707;
 	--oasis-theme-light-primary: #325d33;
-	--oasis-theme-palette-primary-50: #DEF6E0;
-	--oasis-theme-palette-primary-100: #D2EED4;
-	--oasis-theme-palette-primary-200: #C6E6C8;
-	--oasis-theme-palette-primary-300: #BADEBC;
-	--oasis-theme-palette-primary-400: #AED6B0;
-	--oasis-theme-palette-primary-500: #A7D3A9;
-	--oasis-theme-palette-primary-600: #93C795;
-	--oasis-theme-palette-primary-700: #7FBB82;
-	--oasis-theme-palette-primary-800: #5A9C5D;
-	--oasis-theme-palette-primary-900: #355E37;
 	--oasis-theme-primary: #3c6c3f;
 	--oasis-theme-secondary: #ab0707;
 	--oasis-theme-strong-primary: #467c48;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2e5c6f;
 	--oasis-ui-float-bg: #f0f5f2;
 	--oasis-ui-float-border-bg: #f0f5f2;
