--- a/extras/css/themes/light/1/oasis_desert_light_1.css
+++ b/extras/css/themes/light/1/oasis_desert_light_1.css
@@ -19,22 +19,22 @@
 	--oasis-diff-change: #555555;
 	--oasis-diff-delete: #7d4545;
 	--oasis-diff-text: #774a30;
-	--oasis-fg-comment: #6d7d87;
+	--oasis-fg-comment: #687d89;
 	--oasis-fg-core: #63523d;
 	--oasis-fg-dim: #978e87;
 	--oasis-fg-muted: #687479;
 	--oasis-fg-strong: #5e5348;
 	--oasis-git-add: #226210;
-	--oasis-git-change: #5e560a;
+	--oasis-git-change: #5e560c;
 	--oasis-git-delete: #ae0000;
 	--oasis-syntax-bracket: #6a7283;
 	--oasis-syntax-builtinConst: #5a6171;
 	--oasis-syntax-builtinFunc: #9a4b11;
 	--oasis-syntax-builtinVar: #606162;
-	--oasis-syntax-comment: #5f7585;
+	--oasis-syntax-comment: #58768b;
 	--oasis-syntax-conditional: #625d2c;
 	--oasis-syntax-constant: #464645;
-	--oasis-syntax-delimiter: #974a4b;
+	--oasis-syntax-delimiter: #b9272c;
 	--oasis-syntax-exception: #be1d15;
 	--oasis-syntax-func: #80520e;
 	--oasis-syntax-identifier: #366a62;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7d490c;
 	--oasis-terminal-bright-yellow: #8f5215;
 	--oasis-terminal-color0: #555555;
-	--oasis-terminal-color1: #b72a2a;
+	--oasis-terminal-color1: #c21313;
 	--oasis-terminal-color10: #366d27;
 	--oasis-terminal-color11: #8f5215;
 	--oasis-terminal-color12: #266884;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356a62;
 	--oasis-terminal-color15: #7d490c;
 	--oasis-terminal-color2: #306c4c;
-	--oasis-terminal-color3: #696220;
+	--oasis-terminal-color3: #696223;
 	--oasis-terminal-color4: #1662ae;
 	--oasis-terminal-color5: #7f30dd;
 	--oasis-terminal-color6: #376a62;
@@ -76,25 +76,17 @@
 	--oasis-terminal-cyan: #376a62;
 	--oasis-terminal-green: #306c4c;
 	--oasis-terminal-magenta: #7f30dd;
-	--oasis-terminal-red: #b72a2a;
+	--oasis-terminal-red: #c21313;
 	--oasis-terminal-white: #58554c;
-	--oasis-terminal-yellow: #696220;
+	--oasis-terminal-yellow: #696223;
 	--oasis-theme-accent: #1f7294;
-	--oasis-theme-light-primary: #890606;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
-	--oasis-theme-primary: #8f1919;
-	--oasis-theme-secondary: #988c1a;
-	--oasis-theme-strong-primary: #903232;
-	--oasis-ui-border: #943434;
+	--oasis-theme-light-primary: #7a7014;
+	--oasis-theme-primary: #908419;
+	--oasis-theme-secondary: #ab0707;
+	--oasis-theme-secondary-light: #891006;
+	--oasis-theme-secondary-strong: #903232;
+	--oasis-theme-strong-primary: #8b8537;
+	--oasis-ui-border: #a12626;
 	--oasis-ui-cursorLine: #f3efeb;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +96,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d5a6c;
 	--oasis-ui-float-bg: #f3efeb;
 	--oasis-ui-float-border-bg: #f3efeb;
-	--oasis-ui-float-border-fg: #943434;
-	--oasis-ui-float-fg: #943434;
-	--oasis-ui-float-title: #943434;
+	--oasis-ui-float-border-fg: #a12626;
+	--oasis-ui-float-fg: #a12626;
+	--oasis-ui-float-title: #a12626;
 	--oasis-ui-lineNumber: #794a1c;
 	--oasis-ui-match-bg: #dd986f;
 	--oasis-ui-match-fg: #351908;
 	--oasis-ui-nontext: #998e83;
 	--oasis-ui-search-bg: #dacfa4;
 	--oasis-ui-search-fg: #473c15;
-	--oasis-ui-title: #943434;
+	--oasis-ui-title: #a12626;
 	--oasis-ui-visual-bg: #e8e0d8;
 	--oasis-ui-visual-fg: none;
 }
