--- a/extras/css/themes/light/1/oasis_midnight_light_1.css
+++ b/extras/css/themes/light/1/oasis_midnight_light_1.css
@@ -25,14 +25,14 @@
 	--oasis-fg-muted: #68737c;
 	--oasis-fg-strong: #744b30;
 	--oasis-git-add: #216110;
-	--oasis-git-change: #5d5509;
+	--oasis-git-change: #5d550c;
 	--oasis-git-delete: #ad0000;
 	--oasis-syntax-bracket: #6b727f;
 	--oasis-syntax-builtinConst: #5b616d;
 	--oasis-syntax-builtinFunc: #994b11;
 	--oasis-syntax-builtinVar: #5f6162;
 	--oasis-syntax-comment: #677286;
-	--oasis-syntax-conditional: #ab2a2d;
+	--oasis-syntax-conditional: #b6141a;
 	--oasis-syntax-constant: #464645;
 	--oasis-syntax-delimiter: #96494b;
 	--oasis-syntax-exception: #6c6119;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #b52c31;
 	--oasis-syntax-regex: #326d21;
 	--oasis-syntax-special: #954e10;
-	--oasis-syntax-statement: #b7292e;
+	--oasis-syntax-statement: #b9252a;
 	--oasis-syntax-string: #276645;
 	--oasis-syntax-type: #34635d;
 	--oasis-terminal-black: #545454;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7c480c;
 	--oasis-terminal-bright-yellow: #8e5215;
 	--oasis-terminal-color0: #545454;
-	--oasis-terminal-color1: #b72a2a;
+	--oasis-terminal-color1: #c11313;
 	--oasis-terminal-color10: #366d27;
 	--oasis-terminal-color11: #8e5215;
 	--oasis-terminal-color12: #266783;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356a61;
 	--oasis-terminal-color15: #7c480c;
 	--oasis-terminal-color2: #2f6c4c;
-	--oasis-terminal-color3: #696220;
+	--oasis-terminal-color3: #696223;
 	--oasis-terminal-color4: #1561ad;
 	--oasis-terminal-color5: #7f30dd;
 	--oasis-terminal-color6: #376962;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #376962;
 	--oasis-terminal-green: #2f6c4c;
 	--oasis-terminal-magenta: #7f30dd;
-	--oasis-terminal-red: #b72a2a;
+	--oasis-terminal-red: #c11313;
 	--oasis-terminal-white: #57544c;
-	--oasis-terminal-yellow: #696220;
+	--oasis-terminal-yellow: #696223;
 	--oasis-theme-accent: #3e756c;
 	--oasis-theme-light-primary: #7a1515;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #8f1919;
+	--oasis-theme-primary: #a20707;
 	--oasis-theme-secondary: #a4590f;
 	--oasis-theme-strong-primary: #903232;
-	--oasis-ui-border: #933434;
+	--oasis-ui-border: #a02525;
 	--oasis-ui-cursorLine: #f3edeb;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d5a6c;
 	--oasis-ui-float-bg: #f3edeb;
 	--oasis-ui-float-border-bg: #f3edeb;
-	--oasis-ui-float-border-fg: #933434;
-	--oasis-ui-float-fg: #933434;
-	--oasis-ui-float-title: #933434;
+	--oasis-ui-float-border-fg: #a02525;
+	--oasis-ui-float-fg: #a02525;
+	--oasis-ui-float-title: #a02525;
 	--oasis-ui-lineNumber: #784a1c;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #968e85;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #933434;
+	--oasis-ui-title: #a02525;
 	--oasis-ui-visual-bg: #e8dcd8;
 	--oasis-ui-visual-fg: none;
 }
