--- a/extras/css/themes/light/1/oasis_rose_light_1.css
+++ b/extras/css/themes/light/1/oasis_rose_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #806f79;
 	--oasis-fg-strong: #6f4b65;
 	--oasis-git-add: #226310;
-	--oasis-git-change: #5f570a;
+	--oasis-git-change: #5f570c;
 	--oasis-git-delete: #b10000;
 	--oasis-syntax-bracket: #6d7481;
 	--oasis-syntax-builtinConst: #5c626f;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7e4a0d;
 	--oasis-terminal-bright-yellow: #915315;
 	--oasis-terminal-color0: #565656;
-	--oasis-terminal-color1: #ba2b2b;
+	--oasis-terminal-color1: #c41414;
 	--oasis-terminal-color10: #376f28;
 	--oasis-terminal-color11: #915315;
 	--oasis-terminal-color12: #266985;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #366b63;
 	--oasis-terminal-color15: #7e4a0d;
 	--oasis-terminal-color2: #306e4d;
-	--oasis-terminal-color3: #6a6421;
+	--oasis-terminal-color3: #6a6423;
 	--oasis-terminal-color4: #1663b0;
 	--oasis-terminal-color5: #8133dd;
 	--oasis-terminal-color6: #376b64;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #376b64;
 	--oasis-terminal-green: #306e4d;
 	--oasis-terminal-magenta: #8133dd;
-	--oasis-terminal-red: #ba2b2b;
+	--oasis-terminal-red: #c41414;
 	--oasis-terminal-white: #59564d;
-	--oasis-terminal-yellow: #6a6421;
+	--oasis-terminal-yellow: #6a6423;
 	--oasis-theme-accent: #1f7294;
 	--oasis-theme-light-primary: #890606;
-	--oasis-theme-palette-primary-50: #FFEBEB;
-	--oasis-theme-palette-primary-100: #FFDCDC;
-	--oasis-theme-palette-primary-200: #FFCECE;
-	--oasis-theme-palette-primary-300: #FFC0C0;
-	--oasis-theme-palette-primary-400: #FFB0B0;
-	--oasis-theme-palette-primary-500: #FFA0A0;
-	--oasis-theme-palette-primary-600: #FF9090;
-	--oasis-theme-palette-primary-700: #FF8080;
-	--oasis-theme-palette-primary-800: #CC5959;
-	--oasis-theme-palette-primary-900: #803333;
 	--oasis-theme-primary: #a20707;
 	--oasis-theme-secondary: #a08e13;
 	--oasis-theme-strong-primary: #ba0808;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2e5c6e;
 	--oasis-ui-float-bg: #f5f0f5;
 	--oasis-ui-float-border-bg: #f5f0f5;
