--- a/extras/css/themes/light/1/oasis_sol_light_1.css
+++ b/extras/css/themes/light/1/oasis_sol_light_1.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #806d6a;
 	--oasis-fg-strong: #814236;
 	--oasis-git-add: #216110;
-	--oasis-git-change: #5d5509;
+	--oasis-git-change: #5d550c;
 	--oasis-git-delete: #ad0000;
 	--oasis-syntax-bracket: #6b727f;
 	--oasis-syntax-builtinConst: #5a606d;
@@ -34,7 +34,7 @@
 	--oasis-syntax-comment: #866b69;
 	--oasis-syntax-conditional: #b5141a;
 	--oasis-syntax-constant: #464644;
-	--oasis-syntax-delimiter: #a9393c;
+	--oasis-syntax-delimiter: #b7272b;
 	--oasis-syntax-exception: #6c6119;
 	--oasis-syntax-func: #8b4a0f;
 	--oasis-syntax-identifier: #376961;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #7b480c;
 	--oasis-terminal-bright-yellow: #8e5115;
 	--oasis-terminal-color0: #545454;
-	--oasis-terminal-color1: #b62a2a;
+	--oasis-terminal-color1: #c01313;
 	--oasis-terminal-color10: #366c27;
 	--oasis-terminal-color11: #8e5115;
 	--oasis-terminal-color12: #256782;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #356961;
 	--oasis-terminal-color15: #7b480c;
 	--oasis-terminal-color2: #2f6b4c;
-	--oasis-terminal-color3: #686220;
+	--oasis-terminal-color3: #686223;
 	--oasis-terminal-color4: #1561ad;
 	--oasis-terminal-color5: #7f2fdd;
 	--oasis-terminal-color6: #366961;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #366961;
 	--oasis-terminal-green: #2f6b4c;
 	--oasis-terminal-magenta: #7f2fdd;
-	--oasis-terminal-red: #b62a2a;
+	--oasis-terminal-red: #c01313;
 	--oasis-terminal-white: #57544c;
-	--oasis-terminal-yellow: #686220;
+	--oasis-terminal-yellow: #686223;
 	--oasis-theme-accent: #0966a9;
-	--oasis-theme-light-primary: #7a1515;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #8f1919;
+	--oasis-theme-light-primary: #890606;
+	--oasis-theme-primary: #a20707;
 	--oasis-theme-secondary: #a4590f;
 	--oasis-theme-strong-primary: #9c2525;
-	--oasis-ui-border: #933434;
+	--oasis-ui-border: #9f2525;
 	--oasis-ui-cursorLine: #f3ebeb;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2d5a6c;
 	--oasis-ui-float-bg: #f3ebeb;
 	--oasis-ui-float-border-bg: #f3ebeb;
-	--oasis-ui-float-border-fg: #933434;
-	--oasis-ui-float-fg: #933434;
-	--oasis-ui-float-title: #933434;
+	--oasis-ui-float-border-fg: #9f2525;
+	--oasis-ui-float-fg: #9f2525;
+	--oasis-ui-float-title: #9f2525;
 	--oasis-ui-lineNumber: #6c4f1f;
 	--oasis-ui-match-bg: #7ad1a7;
 	--oasis-ui-match-fg: #0d311f;
 	--oasis-ui-nontext: #8f8f8f;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #933434;
+	--oasis-ui-title: #9f2525;
 	--oasis-ui-visual-bg: #e8d8d8;
 	--oasis-ui-visual-fg: none;
 }
