--- a/extras/css/themes/light/2/oasis_desert_light_2.css
+++ b/extras/css/themes/light/2/oasis_desert_light_2.css
@@ -19,22 +19,22 @@
 	--oasis-diff-change: #515151;
 	--oasis-diff-delete: #784242;
 	--oasis-diff-text: #72472e;
-	--oasis-fg-comment: #6a7882;
+	--oasis-fg-comment: #657a85;
 	--oasis-fg-core: #5f4e3b;
 	--oasis-fg-dim: #948a82;
 	--oasis-fg-muted: #657076;
 	--oasis-fg-strong: #5a5046;
 	--oasis-git-add: #205e0f;
-	--oasis-git-change: #5a5209;
+	--oasis-git-change: #5a520c;
 	--oasis-git-delete: #a80000;
 	--oasis-syntax-bracket: #686e7e;
 	--oasis-syntax-builtinConst: #575d6d;
 	--oasis-syntax-builtinFunc: #944910;
 	--oasis-syntax-builtinVar: #5c5e5f;
-	--oasis-syntax-comment: #5d7182;
+	--oasis-syntax-comment: #547286;
 	--oasis-syntax-conditional: #5f592b;
 	--oasis-syntax-constant: #434342;
-	--oasis-syntax-delimiter: #92474a;
+	--oasis-syntax-delimiter: #b2262b;
 	--oasis-syntax-exception: #b81c14;
 	--oasis-syntax-func: #7b4e0d;
 	--oasis-syntax-identifier: #33665e;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #77450c;
 	--oasis-terminal-bright-yellow: #8a4f14;
 	--oasis-terminal-color0: #515151;
-	--oasis-terminal-color1: #b12828;
+	--oasis-terminal-color1: #bb1313;
 	--oasis-terminal-color10: #356926;
 	--oasis-terminal-color11: #8a4f14;
 	--oasis-terminal-color12: #24647e;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #34665f;
 	--oasis-terminal-color15: #77450c;
 	--oasis-terminal-color2: #2f6849;
-	--oasis-terminal-color3: #665f1f;
+	--oasis-terminal-color3: #655f22;
 	--oasis-terminal-color4: #155ea8;
 	--oasis-terminal-color5: #7c29dc;
 	--oasis-terminal-color6: #356660;
@@ -76,25 +76,17 @@
 	--oasis-terminal-cyan: #356660;
 	--oasis-terminal-green: #2f6849;
 	--oasis-terminal-magenta: #7c29dc;
-	--oasis-terminal-red: #b12828;
+	--oasis-terminal-red: #bb1313;
 	--oasis-terminal-white: #545149;
-	--oasis-terminal-yellow: #665f1f;
+	--oasis-terminal-yellow: #655f22;
 	--oasis-theme-accent: #1c6c8d;
-	--oasis-theme-light-primary: #810404;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
-	--oasis-theme-primary: #881616;
-	--oasis-theme-secondary: #918517;
-	--oasis-theme-strong-primary: #8a2e2e;
-	--oasis-ui-border: #8d3333;
+	--oasis-theme-light-primary: #736812;
+	--oasis-theme-primary: #887d16;
+	--oasis-theme-secondary: #a30505;
+	--oasis-theme-secondary-light: #810e04;
+	--oasis-theme-secondary-strong: #8a2e2e;
+	--oasis-theme-strong-primary: #857e33;
+	--oasis-ui-border: #9a2424;
 	--oasis-ui-cursorLine: #f5e9db;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +96,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2b5768;
 	--oasis-ui-float-bg: #f5e9db;
 	--oasis-ui-float-border-bg: #f5e9db;
-	--oasis-ui-float-border-fg: #8d3333;
-	--oasis-ui-float-fg: #8d3333;
-	--oasis-ui-float-title: #8d3333;
+	--oasis-ui-float-border-fg: #9a2424;
+	--oasis-ui-float-fg: #9a2424;
+	--oasis-ui-float-title: #9a2424;
 	--oasis-ui-lineNumber: #73471b;
 	--oasis-ui-match-bg: #dd986f;
 	--oasis-ui-match-fg: #351908;
 	--oasis-ui-nontext: #958a80;
 	--oasis-ui-search-bg: #dacfa4;
 	--oasis-ui-search-fg: #473c15;
-	--oasis-ui-title: #8d3333;
+	--oasis-ui-title: #9a2424;
 	--oasis-ui-visual-bg: #eedac3;
 	--oasis-ui-visual-fg: none;
 }
