--- a/extras/css/themes/light/2/oasis_sol_light_2.css
+++ b/extras/css/themes/light/2/oasis_sol_light_2.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #796865;
 	--oasis-fg-strong: #7a3e32;
 	--oasis-git-add: #1f5b0f;
-	--oasis-git-change: #575009;
+	--oasis-git-change: #57500b;
 	--oasis-git-delete: #a30000;
 	--oasis-syntax-bracket: #676c79;
 	--oasis-syntax-builtinConst: #555b68;
@@ -34,7 +34,7 @@
 	--oasis-syntax-comment: #7e6663;
 	--oasis-syntax-conditional: #ab1319;
 	--oasis-syntax-constant: #40403f;
-	--oasis-syntax-delimiter: #a13639;
+	--oasis-syntax-delimiter: #ae2529;
 	--oasis-syntax-exception: #665c19;
 	--oasis-syntax-func: #84450e;
 	--oasis-syntax-identifier: #34635c;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #74430b;
 	--oasis-terminal-bright-yellow: #864d14;
 	--oasis-terminal-color0: #4f4f4f;
-	--oasis-terminal-color1: #ad2727;
+	--oasis-terminal-color1: #b61212;
 	--oasis-terminal-color10: #336625;
 	--oasis-terminal-color11: #864d14;
 	--oasis-terminal-color12: #23627b;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #33635c;
 	--oasis-terminal-color15: #74430b;
 	--oasis-terminal-color2: #2d6548;
-	--oasis-terminal-color3: #635c1f;
+	--oasis-terminal-color3: #635c21;
 	--oasis-terminal-color4: #145ca4;
 	--oasis-terminal-color5: #7824dc;
 	--oasis-terminal-color6: #33635e;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #33635e;
 	--oasis-terminal-green: #2d6548;
 	--oasis-terminal-magenta: #7824dc;
-	--oasis-terminal-red: #ad2727;
+	--oasis-terminal-red: #b61212;
 	--oasis-terminal-white: #524f47;
-	--oasis-terminal-yellow: #635c1f;
+	--oasis-terminal-yellow: #635c21;
 	--oasis-theme-accent: #0761a1;
-	--oasis-theme-light-primary: #721212;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #881616;
+	--oasis-theme-light-primary: #810404;
+	--oasis-theme-primary: #990505;
 	--oasis-theme-secondary: #9c540c;
 	--oasis-theme-strong-primary: #952222;
-	--oasis-ui-border: #893232;
+	--oasis-ui-border: #962323;
 	--oasis-ui-cursorLine: #f5e0db;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2a5465;
 	--oasis-ui-float-bg: #f5e0db;
 	--oasis-ui-float-border-bg: #f5e0db;
-	--oasis-ui-float-border-fg: #893232;
-	--oasis-ui-float-fg: #893232;
-	--oasis-ui-float-title: #893232;
+	--oasis-ui-float-border-fg: #962323;
+	--oasis-ui-float-fg: #962323;
+	--oasis-ui-float-title: #962323;
 	--oasis-ui-lineNumber: #664a1c;
 	--oasis-ui-match-bg: #7ad1a7;
 	--oasis-ui-match-fg: #0d311f;
 	--oasis-ui-nontext: #888888;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #893232;
+	--oasis-ui-title: #962323;
 	--oasis-ui-visual-bg: #eecbc3;
 	--oasis-ui-visual-fg: none;
 }
