--- a/extras/css/themes/light/3/oasis_cactus_light_3.css
+++ b/extras/css/themes/light/3/oasis_cactus_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #626e65;
 	--oasis-fg-strong: #3c5441;
 	--oasis-git-add: #1f5a0f;
-	--oasis-git-change: #574f09;
+	--oasis-git-change: #574f0b;
 	--oasis-git-delete: #a20000;
 	--oasis-syntax-bracket: #646b7a;
 	--oasis-syntax-builtinConst: #545a6a;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #73430b;
 	--oasis-terminal-bright-yellow: #864d14;
 	--oasis-terminal-color0: #4e4e4e;
-	--oasis-terminal-color1: #ac2727;
+	--oasis-terminal-color1: #b51212;
 	--oasis-terminal-color10: #336625;
 	--oasis-terminal-color11: #864d14;
 	--oasis-terminal-color12: #23617a;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #32635c;
 	--oasis-terminal-color15: #73430b;
 	--oasis-terminal-color2: #2d6547;
-	--oasis-terminal-color3: #625c1e;
+	--oasis-terminal-color3: #625c21;
 	--oasis-terminal-color4: #145ba3;
 	--oasis-terminal-color5: #7824da;
 	--oasis-terminal-color6: #33635d;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #33635d;
 	--oasis-terminal-green: #2d6547;
 	--oasis-terminal-magenta: #7824da;
-	--oasis-terminal-red: #ac2727;
+	--oasis-terminal-red: #b51212;
 	--oasis-terminal-white: #514e47;
-	--oasis-terminal-yellow: #625c1e;
+	--oasis-terminal-yellow: #625c21;
 	--oasis-theme-accent: #9b0303;
 	--oasis-theme-light-primary: #2a512b;
-	--oasis-theme-palette-primary-50: #DEF6E0;
-	--oasis-theme-palette-primary-100: #D2EED4;
-	--oasis-theme-palette-primary-200: #C6E6C8;
-	--oasis-theme-palette-primary-300: #BADEBC;
-	--oasis-theme-palette-primary-400: #AED6B0;
-	--oasis-theme-palette-primary-500: #A7D3A9;
-	--oasis-theme-palette-primary-600: #93C795;
-	--oasis-theme-palette-primary-700: #7FBB82;
-	--oasis-theme-palette-primary-800: #5A9C5D;
-	--oasis-theme-palette-primary-900: #355E37;
 	--oasis-theme-primary: #346036;
 	--oasis-theme-secondary: #9b0303;
 	--oasis-theme-strong-primary: #3d7040;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #2a5465;
 	--oasis-ui-float-bg: #d6ebdf;
 	--oasis-ui-float-border-bg: #d6ebdf;
