--- a/extras/css/themes/light/3/oasis_midnight_light_3.css
+++ b/extras/css/themes/light/3/oasis_midnight_light_3.css
@@ -25,14 +25,14 @@
 	--oasis-fg-muted: #5f6971;
 	--oasis-fg-strong: #66432b;
 	--oasis-git-add: #1e560e;
-	--oasis-git-change: #534c08;
+	--oasis-git-change: #534c0b;
 	--oasis-git-delete: #9b0000;
 	--oasis-syntax-bracket: #626874;
 	--oasis-syntax-builtinConst: #525762;
 	--oasis-syntax-builtinFunc: #8a430f;
 	--oasis-syntax-builtinVar: #565758;
 	--oasis-syntax-comment: #5d687b;
-	--oasis-syntax-conditional: #992529;
+	--oasis-syntax-conditional: #a31217;
 	--oasis-syntax-constant: #3c3c3b;
 	--oasis-syntax-delimiter: #874245;
 	--oasis-syntax-exception: #625718;
@@ -44,7 +44,7 @@
 	--oasis-syntax-punctuation: #a3282d;
 	--oasis-syntax-regex: #2c621e;
 	--oasis-syntax-special: #85460f;
-	--oasis-syntax-statement: #a52429;
+	--oasis-syntax-statement: #a82025;
 	--oasis-syntax-string: #245b3e;
 	--oasis-syntax-type: #2f5954;
 	--oasis-terminal-black: #4b4b4b;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6e400b;
 	--oasis-terminal-bright-yellow: #804913;
 	--oasis-terminal-color0: #4b4b4b;
-	--oasis-terminal-color1: #a52525;
+	--oasis-terminal-color1: #ae1212;
 	--oasis-terminal-color10: #316223;
 	--oasis-terminal-color11: #804913;
 	--oasis-terminal-color12: #215d75;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #305f58;
 	--oasis-terminal-color15: #6e400b;
 	--oasis-terminal-color2: #2b6144;
-	--oasis-terminal-color3: #5f581d;
+	--oasis-terminal-color3: #5e581f;
 	--oasis-terminal-color4: #13589c;
 	--oasis-terminal-color5: #7323d2;
 	--oasis-terminal-color6: #315e59;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #315e59;
 	--oasis-terminal-green: #2b6144;
 	--oasis-terminal-magenta: #7323d2;
-	--oasis-terminal-red: #a52525;
+	--oasis-terminal-red: #ae1212;
 	--oasis-terminal-white: #4e4b43;
-	--oasis-terminal-yellow: #5f581d;
+	--oasis-terminal-yellow: #5e581f;
 	--oasis-theme-accent: #366860;
 	--oasis-theme-light-primary: #6a1010;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #801414;
+	--oasis-theme-primary: #910303;
 	--oasis-theme-secondary: #944f0a;
 	--oasis-theme-strong-primary: #832b2b;
-	--oasis-ui-border: #832f2f;
+	--oasis-ui-border: #8d2222;
 	--oasis-ui-cursorLine: #f5d9c7;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #285060;
 	--oasis-ui-float-bg: #f5d9c7;
 	--oasis-ui-float-border-bg: #f5d9c7;
-	--oasis-ui-float-border-fg: #832f2f;
-	--oasis-ui-float-fg: #832f2f;
-	--oasis-ui-float-title: #832f2f;
+	--oasis-ui-float-border-fg: #8d2222;
+	--oasis-ui-float-fg: #8d2222;
+	--oasis-ui-float-title: #8d2222;
 	--oasis-ui-lineNumber: #6a411a;
 	--oasis-ui-match-bg: #7ad1a1;
 	--oasis-ui-match-fg: #0d311d;
 	--oasis-ui-nontext: #8b827b;
 	--oasis-ui-search-bg: #e19d9d;
 	--oasis-ui-search-fg: #4e0e0e;
-	--oasis-ui-title: #832f2f;
+	--oasis-ui-title: #8d2222;
 	--oasis-ui-visual-bg: #f0c8ad;
 	--oasis-ui-visual-fg: none;
 }
