--- a/extras/css/themes/light/3/oasis_night_light_3.css
+++ b/extras/css/themes/light/3/oasis_night_light_3.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6e5d52;
 	--oasis-fg-strong: #5d3d28;
 	--oasis-git-add: #1b4f0d;
-	--oasis-git-change: #4b4508;
+	--oasis-git-change: #4c450a;
 	--oasis-git-delete: #8e0000;
 	--oasis-syntax-bracket: #5c616c;
 	--oasis-syntax-builtinConst: #4c505b;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #733d0d;
 	--oasis-syntax-constant: #353534;
 	--oasis-syntax-delimiter: #764419;
-	--oasis-syntax-exception: #992126;
+	--oasis-syntax-exception: #9b1e23;
 	--oasis-syntax-func: #6a420c;
 	--oasis-syntax-identifier: #2e5751;
 	--oasis-syntax-operator: #a11216;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #643a0a;
 	--oasis-terminal-bright-yellow: #774412;
 	--oasis-terminal-color0: #444444;
-	--oasis-terminal-color1: #992323;
+	--oasis-terminal-color1: #a11010;
 	--oasis-terminal-color10: #2d5a21;
 	--oasis-terminal-color11: #774412;
 	--oasis-terminal-color12: #1f566c;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2c5851;
 	--oasis-terminal-color15: #643a0a;
 	--oasis-terminal-color2: #285a3f;
-	--oasis-terminal-color3: #57511b;
+	--oasis-terminal-color3: #57511d;
 	--oasis-terminal-color4: #125191;
 	--oasis-terminal-color5: #6b20c3;
 	--oasis-terminal-color6: #2d5752;
@@ -76,25 +76,15 @@
 	--oasis-terminal-cyan: #2d5752;
 	--oasis-terminal-green: #285a3f;
 	--oasis-terminal-magenta: #6b20c3;
-	--oasis-terminal-red: #992323;
+	--oasis-terminal-red: #a11010;
 	--oasis-terminal-white: #47443d;
-	--oasis-terminal-yellow: #57511b;
+	--oasis-terminal-yellow: #57511d;
 	--oasis-theme-accent: #055b99;
 	--oasis-theme-light-primary: #6a1010;
-	--oasis-theme-palette-primary-50: #FFACA5;
-	--oasis-theme-palette-primary-100: #F29B9B;
-	--oasis-theme-palette-primary-200: #F39493;
-	--oasis-theme-palette-primary-300: #F28D8D;
-	--oasis-theme-palette-primary-400: #F58888;
-	--oasis-theme-palette-primary-500: #ED7777;
-	--oasis-theme-palette-primary-600: #E87272;
-	--oasis-theme-palette-primary-700: #E26E6E;
-	--oasis-theme-palette-primary-800: #D06666;
-	--oasis-theme-palette-primary-900: #A23B3B;
-	--oasis-theme-primary: #801414;
+	--oasis-theme-primary: #910303;
 	--oasis-theme-secondary: #944f0a;
 	--oasis-theme-strong-primary: #832b2b;
-	--oasis-ui-border: #772b2b;
+	--oasis-ui-border: #811f1f;
 	--oasis-ui-cursorLine: #e2d5a6;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +94,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #244958;
 	--oasis-ui-float-bg: #e2d5a6;
 	--oasis-ui-float-border-bg: #e2d5a6;
-	--oasis-ui-float-border-fg: #772b2b;
-	--oasis-ui-float-fg: #772b2b;
-	--oasis-ui-float-title: #772b2b;
+	--oasis-ui-float-border-fg: #811f1f;
+	--oasis-ui-float-fg: #811f1f;
+	--oasis-ui-float-title: #811f1f;
 	--oasis-ui-lineNumber: #613c18;
 	--oasis-ui-match-bg: #dd6f6f;
 	--oasis-ui-match-fg: #350808;
 	--oasis-ui-nontext: #847b70;
 	--oasis-ui-search-bg: #e1b69d;
 	--oasis-ui-search-fg: #4e260e;
-	--oasis-ui-title: #772b2b;
+	--oasis-ui-title: #811f1f;
 	--oasis-ui-visual-bg: #dbca8f;
 	--oasis-ui-visual-fg: none;
 }
