--- a/extras/css/themes/light/4/oasis_desert_light_4.css
+++ b/extras/css/themes/light/4/oasis_desert_light_4.css
@@ -19,22 +19,22 @@
 	--oasis-diff-change: #494949;
 	--oasis-diff-delete: #6b3b3b;
 	--oasis-diff-text: #664029;
-	--oasis-fg-comment: #616f77;
+	--oasis-fg-comment: #5d707b;
 	--oasis-fg-core: #564634;
 	--oasis-fg-dim: #8a8078;
 	--oasis-fg-muted: #5d676c;
 	--oasis-fg-strong: #50473f;
 	--oasis-git-add: #1d540e;
-	--oasis-git-change: #504a08;
+	--oasis-git-change: #514a0b;
 	--oasis-git-delete: #970000;
 	--oasis-syntax-bracket: #5e6675;
 	--oasis-syntax-builtinConst: #4e5562;
 	--oasis-syntax-builtinFunc: #86420f;
 	--oasis-syntax-builtinVar: #545555;
-	--oasis-syntax-comment: #556776;
+	--oasis-syntax-comment: #4d687c;
 	--oasis-syntax-conditional: #555127;
 	--oasis-syntax-constant: #3b3a3a;
-	--oasis-syntax-delimiter: #834143;
+	--oasis-syntax-delimiter: #a22326;
 	--oasis-syntax-exception: #a81912;
 	--oasis-syntax-func: #70470c;
 	--oasis-syntax-identifier: #2f5c56;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6b3e0b;
 	--oasis-terminal-bright-yellow: #7d4813;
 	--oasis-terminal-color0: #494949;
-	--oasis-terminal-color1: #a12424;
+	--oasis-terminal-color1: #aa1111;
 	--oasis-terminal-color10: #306023;
 	--oasis-terminal-color11: #7d4813;
 	--oasis-terminal-color12: #205b73;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2f5d56;
 	--oasis-terminal-color15: #6b3e0b;
 	--oasis-terminal-color2: #2a5f43;
-	--oasis-terminal-color3: #5c561c;
+	--oasis-terminal-color3: #5c561f;
 	--oasis-terminal-color4: #135699;
 	--oasis-terminal-color5: #7121cd;
 	--oasis-terminal-color6: #305c56;
@@ -76,25 +76,17 @@
 	--oasis-terminal-cyan: #305c56;
 	--oasis-terminal-green: #2a5f43;
 	--oasis-terminal-magenta: #7121cd;
-	--oasis-terminal-red: #a12424;
+	--oasis-terminal-red: #aa1111;
 	--oasis-terminal-white: #4b4941;
-	--oasis-terminal-yellow: #5c561c;
+	--oasis-terminal-yellow: #5c561f;
 	--oasis-theme-accent: #16607e;
-	--oasis-theme-light-primary: #6f0101;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
-	--oasis-theme-primary: #791111;
-	--oasis-theme-secondary: #827712;
-	--oasis-theme-strong-primary: #7c2727;
-	--oasis-ui-border: #7f2d2d;
+	--oasis-theme-light-primary: #635a0d;
+	--oasis-theme-primary: #796e11;
+	--oasis-theme-secondary: #920101;
+	--oasis-theme-secondary-light: #6f0a01;
+	--oasis-theme-secondary-strong: #7c2727;
+	--oasis-theme-strong-primary: #77722c;
+	--oasis-ui-border: #8a2121;
 	--oasis-ui-cursorLine: #f3d8ba;
 	--oasis-ui-diag-error-bg: #d59090;
 	--oasis-ui-diag-error-fg: #750e0e;
@@ -104,21 +96,21 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #274e5e;
 	--oasis-ui-float-bg: #f3d8ba;
 	--oasis-ui-float-border-bg: #f3d8ba;
-	--oasis-ui-float-border-fg: #7f2d2d;
-	--oasis-ui-float-fg: #7f2d2d;
-	--oasis-ui-float-title: #7f2d2d;
+	--oasis-ui-float-border-fg: #8a2121;
+	--oasis-ui-float-fg: #8a2121;
+	--oasis-ui-float-title: #8a2121;
 	--oasis-ui-lineNumber: #674019;
 	--oasis-ui-match-bg: #dd986f;
 	--oasis-ui-match-fg: #351908;
 	--oasis-ui-nontext: #8c7f75;
 	--oasis-ui-search-bg: #dacfa4;
 	--oasis-ui-search-fg: #473c15;
-	--oasis-ui-title: #7f2d2d;
+	--oasis-ui-title: #8a2121;
 	--oasis-ui-visual-bg: #eec9a0;
 	--oasis-ui-visual-fg: none;
 }
