--- a/extras/css/themes/light/4/oasis_twilight_light_4.css
+++ b/extras/css/themes/light/4/oasis_twilight_light_4.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #5e5969;
 	--oasis-fg-strong: #48356f;
 	--oasis-git-add: #19490c;
-	--oasis-git-change: #464007;
+	--oasis-git-change: #464009;
 	--oasis-git-delete: #850000;
 	--oasis-syntax-bracket: #5a5a6d;
 	--oasis-syntax-builtinConst: #474b56;
@@ -35,7 +35,7 @@
 	--oasis-syntax-conditional: #6213ae;
 	--oasis-syntax-constant: #313030;
 	--oasis-syntax-delimiter: #62309a;
-	--oasis-syntax-exception: #8f2124;
+	--oasis-syntax-exception: #921d21;
 	--oasis-syntax-func: #6c380c;
 	--oasis-syntax-identifier: #2a524c;
 	--oasis-syntax-operator: #971015;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #5d3609;
 	--oasis-terminal-bright-yellow: #6f4011;
 	--oasis-terminal-color0: #3f3f3f;
-	--oasis-terminal-color1: #902121;
+	--oasis-terminal-color1: #980f0f;
 	--oasis-terminal-color10: #2b551f;
 	--oasis-terminal-color11: #6f4011;
 	--oasis-terminal-color12: #1d5166;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2a524c;
 	--oasis-terminal-color15: #5d3609;
 	--oasis-terminal-color2: #25543b;
-	--oasis-terminal-color3: #524c19;
+	--oasis-terminal-color3: #524c1b;
 	--oasis-terminal-color4: #114c88;
 	--oasis-terminal-color5: #651eb7;
 	--oasis-terminal-color6: #2a524d;
@@ -76,23 +76,13 @@
 	--oasis-terminal-cyan: #2a524d;
 	--oasis-terminal-green: #25543b;
 	--oasis-terminal-magenta: #651eb7;
-	--oasis-terminal-red: #902121;
+	--oasis-terminal-red: #980f0f;
 	--oasis-terminal-white: #413f39;
-	--oasis-terminal-yellow: #524c19;
+	--oasis-terminal-yellow: #524c1b;
 	--oasis-theme-accent: #1f7549;
 	--oasis-theme-light-primary: #33016f;
-	--oasis-theme-palette-primary-50: #F4EEFF;
-	--oasis-theme-palette-primary-100: #EEDDFF;
-	--oasis-theme-palette-primary-200: #DEC2FF;
-	--oasis-theme-palette-primary-300: #D2ADFF;
-	--oasis-theme-palette-primary-400: #C695FF;
-	--oasis-theme-palette-primary-500: #C28EFF;
-	--oasis-theme-palette-primary-600: #A870F0;
-	--oasis-theme-palette-primary-700: #9C5FEB;
-	--oasis-theme-palette-primary-800: #8F4FE6;
-	--oasis-theme-palette-primary-900: #7033CC;
 	--oasis-theme-primary: #3f0188;
-	--oasis-theme-secondary: #857a0f;
+	--oasis-theme-secondary: #827612;
 	--oasis-theme-strong-primary: #4a1192;
 	--oasis-ui-border: #532784;
 	--oasis-ui-cursorLine: #cdc2f0;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #224351;
 	--oasis-ui-float-bg: #cdc2f0;
 	--oasis-ui-float-border-bg: #cdc2f0;
