--- a/extras/css/themes/light/5/oasis_dune_light_5.css
+++ b/extras/css/themes/light/5/oasis_dune_light_5.css
@@ -25,7 +25,7 @@
 	--oasis-fg-muted: #6c635b;
 	--oasis-fg-strong: #4b4931;
 	--oasis-git-add: #1d530e;
-	--oasis-git-change: #504908;
+	--oasis-git-change: #50490a;
 	--oasis-git-delete: #960000;
 	--oasis-syntax-bracket: #5f6573;
 	--oasis-syntax-builtinConst: #4e5463;
@@ -58,7 +58,7 @@
 	--oasis-terminal-bright-white: #6a3e0b;
 	--oasis-terminal-bright-yellow: #7d4712;
 	--oasis-terminal-color0: #484848;
-	--oasis-terminal-color1: #a02424;
+	--oasis-terminal-color1: #a91010;
 	--oasis-terminal-color10: #2f5f22;
 	--oasis-terminal-color11: #7d4712;
 	--oasis-terminal-color12: #215b72;
@@ -66,7 +66,7 @@
 	--oasis-terminal-color14: #2f5c55;
 	--oasis-terminal-color15: #6a3e0b;
 	--oasis-terminal-color2: #2a5e42;
-	--oasis-terminal-color3: #5b561c;
+	--oasis-terminal-color3: #5b551e;
 	--oasis-terminal-color4: #135598;
 	--oasis-terminal-color5: #7121cc;
 	--oasis-terminal-color6: #305c56;
@@ -76,21 +76,11 @@
 	--oasis-terminal-cyan: #305c56;
 	--oasis-terminal-green: #2a5e42;
 	--oasis-terminal-magenta: #7121cc;
-	--oasis-terminal-red: #a02424;
+	--oasis-terminal-red: #a91010;
 	--oasis-terminal-white: #4a4841;
-	--oasis-terminal-yellow: #5b561c;
+	--oasis-terminal-yellow: #5b551e;
 	--oasis-theme-accent: #1c6e43;
 	--oasis-theme-light-primary: #5b520b;
-	--oasis-theme-palette-primary-50: #FBF6D8;
-	--oasis-theme-palette-primary-100: #F9F2C5;
-	--oasis-theme-palette-primary-200: #F6EEB2;
-	--oasis-theme-palette-primary-300: #F3EA9F;
-	--oasis-theme-palette-primary-400: #F3E989;
-	--oasis-theme-palette-primary-500: #F0E68C;
-	--oasis-theme-palette-primary-600: #CDC673;
-	--oasis-theme-palette-primary-700: #BDB76B;
-	--oasis-theme-palette-primary-800: #807C37;
-	--oasis-theme-palette-primary-900: #4D4A1B;
 	--oasis-theme-primary: #5e5922;
 	--oasis-theme-secondary: #2e5c30;
 	--oasis-theme-strong-primary: #6a662f;
@@ -104,8 +94,8 @@
 	--oasis-ui-diag-info-fg: #0d506c;
 	--oasis-ui-diag-ok-bg: #a3ce97;
 	--oasis-ui-diag-ok-fg: #1c5d0b;
-	--oasis-ui-diag-warn-bg: #cec997;
-	--oasis-ui-diag-warn-fg: #5d550b;
+	--oasis-ui-diag-warn-bg: #cec897;
+	--oasis-ui-diag-warn-fg: #5c540b;
 	--oasis-ui-dir: #274d5d;
 	--oasis-ui-float-bg: #e8dbbb;
 	--oasis-ui-float-border-bg: #e8dbbb;
